Updating BC3 data

--- a/bc3-data/100363314.md
+++ b/bc3-data/100363314.md
@@ -1,150 +1,74 @@
-#  RH
-
-Hyacinthe Lacenne posted this Apr 06, 2016 at 7:50 AM
+# RH  - 2016-04-06
 
 ceci est un fil de discussion sur la RH
 
-### **Hyacinthe Lacenne** - Apr 06, 2016 at 7:55 AM
+### **Hyacinthe** - 2016-04-06 at 7:55 AM
 
-Nicolas Le Roux, que g connu au cab de lemaire, est chez Simplon et me propose
-des profils dev pour le club jade. Du  coup, je dérive la propale pour echOpen
-et je vias voir si on peut inclure des étudiants dans le cadre de leurs
-projets pédagogiques  
-  
-Pour mémoire, Simplon est une sorte de 42 en plus court - qqs mois de
-formation - et ils ont été désignés pour coordonner le projet gde école
-numérique, ce qui est une bonne opportunité de structurer qqch avec eux  
-  
-  
-voici des profils  
-  
-[https://docs.google.com/presentation/d/1VCid8Jvh_mbWimkszOkhK42IcLPpOIJgyKMMnywu2Cc/pub?start=false&amp;loop=false&amp;delayms=60000&amp;slide=id.g1226c24550_0_142](https://docs.google.com/presentation/d/1VCid8Jvh_mbWimkszOkhK42IcLPpOIJgyKMMnywu2Cc/pub?start=false&loop=false&delayms=60000&slide=id.g1226c24550_0_142)  
-  
-je vous tiens au courant  
-  
-oilà
+Nicolas Le Roux, que g connu au cab de lemaire, est chez Simplon et me propose des profils dev pour le club jade. Du  coup, je dérive la propale pour echOpen et je vias voir si on peut inclure des étudiants dans le cadre de leurs projets pédagogiques   Pour mémoire, Simplon est une sorte de 42 en plus court - qqs mois de formation - et ils ont été désignés pour coordonner le projet gde école numérique, ce qui est une bonne opportunité de structurer qqch avec eux     voici des profils   [https://docs.google.com/presentation/d/1VCid8Jvh_mbWimkszOkhK42IcLPpOIJgyKMMnywu2Cc/pub?start=false&amp;loop=false&amp;delayms=60000&amp;slide=id.g1226c24550_0_142](https://docs.google.com/presentation/d/1VCid8Jvh_mbWimkszOkhK42IcLPpOIJgyKMMnywu2Cc/pub?start=false&loop=false&delayms=60000&slide=id.g1226c24550_0_142)   je vous tiens au courant   oilà
 
-### **Hyacinthe Lacenne** - Apr 06, 2016 at 6:07 PM
+### **Hyacinthe** - 2016-04-06 at 6:07 PM
 
-un étudiant de l'ISEP, 3èmeA #FPGA cherche un stage à compter de juillet  
-  
-rdv lundi 17H30  
+un étudiant de l'ISEP, 3èmeA #FPGA cherche un stage à compter de juillet   rdv lundi 17H30 
 
 [
 
 ![](./../../zz_assets/images/previews/3383116-cv-stage.png)
 
-](bc3-raw/files/3383116
--cv-stage.pdf)
+](bc3-raw/files/3383116 -cv-stage.pdf)
 
-[ CV stage.pdf  413 KB • Download
-](bc3-raw/files/3383116
--cv-stage.pdf)
+[CV stage.pdf 413 KB • Download](bc3-raw/files/3383116 -cv-stage.pdf)
 
-### **Hyacinthe,** - Apr 07, 2016 at 9:36 AM
+### **Hyacinthe** - 2016-04-07 at 9:36 AM
 
-Je note quand même qu'il a mis comme compétence internet...  
-  
-Vu ton intitulé Hyacinthe, il suis une spécialité FPGA àl'ISEP? Quelle durée de
-stage?
+Je note quand même qu'il a mis comme compétence internet...   Vu ton intitulé Hyacinthe, il suis une spécialité FPGA àl'ISEP? Quelle durée de stage?
 
-### **Hyacinthe KHOYRATEE,** - Apr 07, 2016 at 9:57 AM
+### **Hyacinthe** - 2016-04-07 at 9:57 AM
 
 C'est quoi le sujet du stage en question?
 
-### **Hyacinthe** - Apr 07, 2016 at 10:06 AM
+### **Hyacinthe** - 2016-04-07 at 10:06 AM
 
-L'idée est de trouver des ressources circulantes qui viendraient compléter
-l'équipe et avancer au côté de la communauté ;)
+L'idée est de trouver des ressources circulantes qui viendraient compléter l'équipe et avancer au côté de la communauté ;)
 
-### **Hyacinthe Lacenne** - Apr 07, 2016 at 10:11 AM
+### **Hyacinthe** - 2016-04-07 at 10:11 AM
 
-![Hyacinthe KHOYRATEE, Electronique at
-echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe   tu as un moment
-pour un call pour qu'on te debriefe sur les choix du captech  ?
+![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe   tu as un moment pour un call pour qu'on te debriefe sur les choix du captech  ?
 
-### **Hyacinthe KHOYRATEE,** - Apr 07, 2016 at 10:14 AM
+### **Hyacinthe** - 2016-04-07 at 10:14 AM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  Je
-comprends bien l'idée (et ce serait effectivement génial), mais j'imagine
-(peut être que je me trompes) que s'il faut prendre un stagiaire, ce dernier
-doit valider auprès de son administration un sujet précis et en accord avec sa
-spécialité (je parles en connaissance de cause, notre administration est bien
-chiante :p). Et même pour le stagiaire en question savoir vers ou il part
-serait une bonne chose. Après je suppose que ça a été décidé lors du Captech!  
-  
-![Hyacinthe Lacenne, echopen](./../../zz_assets/images/avatars/782178.png)
-lacenne  Bien sur, je bosses toutes la journée mais rien ne m'empêche de
-m'absenter quelques temps! :)
+![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  Je comprends bien l'idée (et ce serait effectivement génial), mais j'imagine (peut être que je me trompes) que s'il faut prendre un stagiaire, ce dernier doit valider auprès de son administration un sujet précis et en accord avec sa spécialité (je parles en connaissance de cause, notre administration est bien chiante :p). Et même pour le stagiaire en question savoir vers ou il part serait une bonne chose. Après je suppose que ça a été décidé lors du Captech!   ![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne  Bien sur, je bosses toutes la journée mais rien ne m'empêche de m'absenter quelques temps! :)
 
-### **Hyacinthe** - Apr 07, 2016 at 10:29 AM
+### **Hyacinthe** - 2016-04-07 at 10:29 AM
 
-Merci  ![Hyacinthe KHOYRATEE, Electronique at
-echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe  pour ton retour.
-Le responsable de l'Isep était au CAPTech et c'est lui qui a circonscrit la
-thématique et proposé la dynamique ;)
+Merci  ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe  pour ton retour. Le responsable de l'Isep était au CAPTech et c'est lui qui a circonscrit la thématique et proposé la dynamique ;)
 
-### **Hyacinthe KHOYRATEE,** - Apr 07, 2016 at 10:39 AM
+### **Hyacinthe** - 2016-04-07 at 10:39 AM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe
-Super! :D je vois que tout est prévu ;)
+![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe Super! :D je vois que tout est prévu ;)
 
-### **Hyacinthe Lacenne** - Apr 07, 2016 at 3:49 PM
+### **Hyacinthe** - 2016-04-07 at 3:49 PM
 
-![Hyacinthe KHOYRATEE, Electronique at
-echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe  un peu
-d'exercice de dérouillage mathématique en vue de cet été  
-  
-pour tout entier n, on note In, le nombre d'entier p tel que  
-  
-50^{n} &lt; 7^{p} &lt; 50^{n+1} // sorry, je n'ai pas latex, mais il s'agit de
-symboles de puissance  
-  
-1) prouver que pour tout n entier, In = 2 ou 3  
-  
-2) prouver qu'il existe une infinité d'entiers n tels que In=3  
-  
-oilà
+![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe  un peu d'exercice de dérouillage mathématique en vue de cet été   pour tout entier n, on note In, le nombre d'entier p tel que   50^{n} &lt; 7^{p} &lt; 50^{n+1} // sorry, je n'ai pas latex, mais il s'agit de symboles de puissance   1) prouver que pour tout n entier, In = 2 ou 3   2) prouver qu'il existe une infinité d'entiers n tels que In=3   oilà
 
-### **Hyacinthe Lacenne** - Apr 11, 2016 at 1:01 PM
+### **Hyacinthe** - 2016-04-11 at 1:01 PM
 
-![Emilie Mayer, Community & knowledge  at
-echopen](./../../zz_assets/images/avatars/1269172.png) Emilie  attention, si
-tu likes, c que tu en redemandes !!!  
-  
-donc voilà :  
-  
-trouver les triplets d'entiers (a,b,c) tels que ab-c,bc-a,ca-b sont chacun une
-puissance de 2 !
+![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  attention, si tu likes, c que tu en redemandes !!!   donc voilà :   trouver les triplets d'entiers (a,b,c) tels que ab-c,bc-a,ca-b sont chacun une puissance de 2 !
 
-### **Hyacinthe Lacenne** - Apr 25, 2016 at 7:10 AM
+### **Hyacinthe** - 2016-04-25 at 7:10 AM
 
-Hyacinthe Grandhomme (enseignant à l'épitech) passe le 4 mai. Au menu,
-préparation du recrutement d'étudiant de l'épitech pour leur stage d'été.  
-  
-au passage, Hyacinthe a envie de développer nos algo sur GPU, à partir d'une
-librairie cross-platform qu'il connaît bien
+Hyacinthe Grandhomme (enseignant à l'épitech) passe le 4 mai. Au menu, préparation du recrutement d'étudiant de l'épitech pour leur stage d'été.   au passage, Hyacinthe a envie de développer nos algo sur GPU, à partir d'une librairie cross-platform qu'il connaît bien
 
-### **Hyacinthe Lacenne** - May 11, 2016 at 7:51 AM
+### **Hyacinthe** - 2016-05-11 at 7:51 AM
 
-frédérci amiel, prof à l'ISEP qui était avec nous au dernier captech, me fait
-savoir qu'il s'est mis à la recherche d'étudiants  orientés FPGA
+frédérci amiel, prof à l'ISEP qui était avec nous au dernier captech, me fait savoir qu'il s'est mis à la recherche d'étudiants  orientés FPGA
 
-### **Hyacinthe Lacenne** - May 11, 2016 at 9:15 AM
+### **Hyacinthe** - 2016-05-11 at 9:15 AM
 
-rencontre avec Soobash, astrophysicien, spécialisé dans le traitement d'image,
-notamment les images très bruitées. Il attend des images de notre part et est
-chaud pour y travailler asap ;)
+rencontre avec Soobash, astrophysicien, spécialisé dans le traitement d'image, notamment les images très bruitées. Il attend des images de notre part et est chaud pour y travailler asap ;)
 
-### **Hyacinthe Lacenne** - May 17, 2016 at 9:43 AM
+### **Hyacinthe** - 2016-05-17 at 9:43 AM
 
-orga réu mercredi 25.05 avec Soobash et Zahra (étudiante ISEP) pour
-coordination du pipe traitement d'images  
-  
-  
-odj proposé par Soobash :  
-  
-1/ Algorithms a utiliser.
+orga réu mercredi 25.05 avec Soobash et Zahra (étudiante ISEP) pour coordination du pipe traitement d'images     odj proposé par Soobash :   1/ Algorithms a utiliser.
 
 2/ Environment de development.
 
@@ -152,99 +76,37 @@ odj proposé par Soobash :
 
 4/ Les deadlines en temps du project a respecter.
 
-### **Emilie Mayer,** - May 18, 2016 at 8:48 PM
+### **Hyacinthe** - 2016-05-18 at 8:48 PM
 
-Bonsoir  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png)
-Hyacinthe  ,  ![Hyacinthe Lacenne,
-echopen](./../../zz_assets/images/avatars/782178.png) lacenne  ![hyacinthe,
-hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) hyacinthe
-, et tout le monde ;)  
-  
-Voici le CV d'une de mes amies : Zhor, qui est entre son M1 et M2 du master
-MONABIPHOT de l'ENS Cachan.  
-Elle cherche un stage cet été idéalement à partir du 4 juillet et jusqu'à fin
-août et même 1er septembre, ça fait longtemps que je lui ai parlé d'Echopen et
-ça lui plairait bien de rejoindre le projet dans le cadre de son stage.  
-Elle a notamment eu des cours sur les matériaux et le traitement du signal qui
-pourraient être utiles ....  
-Voilà son mail : [zhor.khadir@gmail.com](mailto:zhor.khadir@gmail.com)  
-Elle est en Erasmus à Madrid en ce moment mais peut vous skyper, envoyer une
-lettre de recommandation, et/ou de motivation ...  
-  
+Bonsoir ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe , ![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe , et tout le monde ;)   Voici le CV d'une de mes amies : Zhor, qui est entre son M1 et M2 du master MONABIPHOT de l'ENS Cachan.  Elle cherche un stage cet été idéalement à partir du 4 juillet et jusqu'à fin août et même 1er septembre, ça fait longtemps que je lui ai parlé d'Echopen et ça lui plairait bien de rejoindre le projet dans le cadre de son stage.  Elle a notamment eu des cours sur les matériaux et le traitement du signal qui pourraient être utiles ....  Voilà son mail : [zhor.khadir@gmail.com](mailto:zhor.khadir@gmail.com)  Elle est en Erasmus à Madrid en ce moment mais peut vous skyper, envoyer une lettre de recommandation, et/ou de motivation ...   
 
 [
 
 ![](./../../zz_assets/images/previews/5175574-cv-zhor-khadir-2016.png)
 
-](bc3-raw/files/5175574
--cv-zhor-khadir-2016.pdf)
+](bc3-raw/files/5175574 -cv-zhor-khadir-2016.pdf)
 
-[ cv-zhor-khadir-2016.pdf  139 KB • Download
-](bc3-raw/files/5175574
--cv-zhor-khadir-2016.pdf)
+[cv-zhor-khadir-2016.pdf 139 KB • Download](bc3-raw/files/5175574 -cv-zhor-khadir-2016.pdf)
 
-### **Hyacinthe Lacenne** - May 18, 2016 at 9:23 PM
+### **Hyacinthe** - 2016-05-18 at 9:23 PM
 
-hello, bien sûr on peut prévoir un skype ;) btw, il s'agit d'un stage payé ?  
-  
-@++
+hello, bien sûr on peut prévoir un skype ;) btw, il s'agit d'un stage payé ?   @++
 
-### **Emilie Mayer,** - May 18, 2016 at 9:36 PM
+### **Hyacinthe** - 2016-05-18 at 9:36 PM
 
 Yes
 
-### **Hyacinthe Lacenne** - Oct 11, 2016 at 3:53 PM
+### **Hyacinthe** - 2016-10-11 at 3:53 PM
 
-hello des news sur la RH !!  
-  
-3 ingénieurs de M1 de l'Université Libre de Bruxelles vont consacrer leur
-projet de master à echOpen, sous la direction d'Hyacinthe Debeir.  
-Kick-Off : visite du lab le 27.10.16 &amp; start ;) orientation dev +
-électronique  
-  
-deux étudiants de P6, Adrien Rohfritsh et Anais Drihem, vont développer
-echOpen/kit dans le cadre de leur master  
-  
-on reçoit à compter de cette semaine pour 3 semaines Thomas Robillard, un dev
-de l'épitech : orientation UI + design, avec une solide expérience.  
-  
-on reçoit un aggrégatif de l'ENS, Romain Agaisse, une fois par semaine qui
-développe un kit version pédagogique dans le cadre de son oral d'agreg. Btw,
-selon Thomas Rodet, c un des meilleurs de sa promo. ;)  
-  
-Btw, on shoote les modules echOpen au MIT d'ici la fin du mois
+hello des news sur la RH !!   3 ingénieurs de M1 de l'Université Libre de Bruxelles vont consacrer leur projet de master à echOpen, sous la direction d'Hyacinthe Debeir.  Kick-Off : visite du lab le 27.10.16 &amp; start ;) orientation dev + électronique   deux étudiants de P6, Adrien Rohfritsh et Anais Drihem, vont développer echOpen/kit dans le cadre de leur master   on reçoit à compter de cette semaine pour 3 semaines Thomas Robillard, un dev de l'épitech : orientation UI + design, avec une solide expérience.   on reçoit un aggrégatif de l'ENS, Romain Agaisse, une fois par semaine qui développe un kit version pédagogique dans le cadre de son oral d'agreg. Btw, selon Thomas Rodet, c un des meilleurs de sa promo. ;)   Btw, on shoote les modules echOpen au MIT d'ici la fin du mois
 
-### **Hyacinthe Lacenne** - Oct 27, 2016 at 11:55 PM
+### **Hyacinthe** - 2016-10-27 at 11:55 PM
 
-#brightday  
-  
-nous avons accueilli aujourd'hui 3 ingé de l'ULB et leurs prof Hyacinthe Debeir.
-journée pleine d'enthousiasme et de bonnes énergies  
-  
-Hyacinthe était impressionné et ravi par la qualité des images que l'on obtient
-- et nous aussi : doigts, paume, avant-bras ;)  
-  
-ils travaillent sur echOpen jusqu'en mars 2017.  
-  
-l'idée d'Hyacinthe est d'instancier echOpen à l'ULB, de façon autonome  
-  
-embryon d'internationalisation  
-  
-![Nassim Chadli, Instanciator at
-echopen](./../../zz_assets/images/avatars/4069013.png) Nassim  : on vous
-attend aussi ;) n'hésitez pas à nous solliciter !  
-  
-@++
+#brightday   nous avons accueilli aujourd'hui 3 ingé de l'ULB et leurs prof Hyacinthe Debeir. journée pleine d'enthousiasme et de bonnes énergies   Hyacinthe était impressionné et ravi par la qualité des images que l'on obtient - et nous aussi : doigts, paume, avant-bras ;)   ils travaillent sur echOpen jusqu'en mars 2017.   l'idée d'Hyacinthe est d'instancier echOpen à l'ULB, de façon autonome   embryon d'internationalisation   ![Nassim Chadli, Instanciator at echopen](./../../zz_assets/images/avatars/4069013.png) Nassim : on vous attend aussi ;) n'hésitez pas à nous solliciter !   @++
 
-### **Emilie Mayer,** - Nov 07, 2016 at 7:30 PM
+### **Hyacinthe** - 2016-11-07 at 7:30 PM
 
-CV d'un étudiant des Mines de deuxième année, intéréssé pour faire son [stage
-"ingenieur"](http://www.mines-paristech.fr/Formation/Cycle-ingenieurs-
-civils/Cursus/Stages/) chez echopen sur la période estivale (12 à 16
-semaines). Je ne l'ai jamais rencontré mais son CV est impressionnant, +
-dimension internationale + Wiki +TedX +robotique + java + intéréssé par la
-santé (c'est dans son mail ) !  ![Hyacinthe Lacenne,
-echopen](./../../zz_assets/images/avatars/782178.png) lacenne
+CV d'un étudiant des Mines de deuxième année, intéréssé pour faire son [stage "ingenieur"](http://www.mines-paristech.fr/Formation/Cycle-ingenieurs- civils/Cursus/Stages/) chez echopen sur la période estivale (12 à 16 semaines). Je ne l'ai jamais rencontré mais son CV est impressionnant, + dimension internationale + Wiki +TedX +robotique + java + intéréssé par la santé (c'est dans son mail ) ! ![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne
 
 [
 
@@ -252,24 +114,17 @@ echopen](./../../zz_assets/images/avatars/782178.png) lacenne
 
 ](bc3-raw/files/18112132-cv_mahdi_mohamed.pdf)
 
-[ CV_Mahdi_Mohamed.pdf  341 KB • Download
-](bc3-raw/files/18112132-cv_mahdi_mohamed.pdf)
+[CV_Mahdi_Mohamed.pdf 341 KB • Download](bc3-raw/files/18112132-cv_mahdi_mohamed.pdf)
 
-### **Nassim Chadli,** - Nov 07, 2016 at 7:32 PM
+### **Nassim Chadli** - 2016-11-07 at 7:32 PM
 
-Oui C notre ingénieur chargé de nous mettre en place le côté Lab ici à Annaba
-(Algérie)
+Oui C notre ingénieur chargé de nous mettre en place le côté Lab ici à Annaba (Algérie)
 
-### **Nassim Chadli,** - Nov 07, 2016 at 7:33 PM
+### **Nassim Chadli** - 2016-11-07 at 7:33 PM
 
-Ah non ! Waw C son double alors. Notre ingénieur (Hyacinthe Dib) à presque le même
-parcours et le meme prénom !!
+Ah non ! Waw C son double alors. Notre ingénieur (Hyacinthe Dib) à presque le même parcours et le meme prénom !!
 
-### **Hyacinthe Lacenne** - Nov 08, 2016 at 12:53 AM
+### **Hyacinthe** - 2016-11-08 at 12:53 AM
 
-excellent ;)  ![Emilie Mayer, Community & knowledge  at
-echopen](./../../zz_assets/images/avatars/1269172.png) Emilie  je nous met en
-contact avec lui demain et vous tiens au courant  
-  
-@bientôt
+excellent ;) ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe je nous met en contact avec lui demain et vous tiens au courant   @bientôt
 
