--- a/bc3-data/101439997.md
+++ b/bc3-data/101439997.md
@@ -1,13 +1,8 @@
-#  Philippe Levesque
+# Philippe Levesque  - 2016-04-07
 
-Hyacinthe posted this Apr 07, 2016 at 10:15 AM · 1 person applauded
+Je viens de repenser que Philippe Levesque attendait qu'on fournisse des résultats avant de se prononcer pour nous ouvrir sa carte électronique de sonde. Maintenant qu'on a fait notre première démo il peut être temps de le recontacter non?
 
-Je viens de repenser que Philippe Levesque attendait qu'on fournisse des
-résultats avant de se prononcer pour nous ouvrir sa carte électronique de
-sonde. Maintenant qu'on a fait notre première démo il peut être temps de le
-recontacter non?
-
-### **Hyacinthe Lacenne** - Apr 07, 2016 at 10:17 AM
+### **Hyacinthe** - 2016-04-07 at 10:17 AM
 
 Already done =)
 
