--- a/bc3-data/116455094.md
+++ b/bc3-data/116455094.md
@@ -1,251 +1,110 @@
-#  soft
-
-Hyacinthe Lacenne posted this Apr 28, 2016 at 5:01 PM
+# soft  - 2016-04-28
 
 un thread autour de l'app, native, semi-native ou web
 
-### **Hyacinthe Lacenne** - Apr 28, 2016 at 5:13 PM
+### **Hyacinthe** - 2016-04-28 at 5:13 PM
 
-installé un ide collboratif sur cloud9  
-  
-pour y accéder  
-  
-<https://ide.c9.io/newben/echotest>  
-  
-toutes les utilités de python sont installés en natif sur le cloud : pip,
-virtualenv...  
-  
-version python 2.7.6  ![Hyacinthe Lacenne,
-echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  ![Hyacinthe, Danseur
-du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  si
-vous avez des habitudes sur d'autres versions, notamment les plus récentes,
-dites-moi
+installé un ide collboratif sur cloud9   pour y accéder   <https://ide.c9.io/newben/echotest>   toutes les utilités de python sont installés en natif sur le cloud : pip, virtualenv...   version python 2.7.6 ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe si vous avez des habitudes sur d'autres versions, notamment les plus récentes, dites-moi
 
-  
+ 
 
 **packages installés** 
 
-  
+ 
 
-libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev libv4l-
-dev
+libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev libv4l- dev
 
-  
+ 
 
 installation archi i386
 
-  
+ 
 
 opencv installé, version 3.0.0
 
-  
+ 
 
-scipy installé  
-  
-![Hyacinthe Lacenne, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe
-anyway ca serait pas mal de regarder codenvy, qui est bien plus fine grained,
-notamment en terme de config, de clonage, et le juge de paix est le tarif des
-différentes offres  
-  
-dès qu'on est ok sur  
-\- les specs du phantom  
-\- les IO des soumissions  
-\- les KPI de validation des soumissions  
-  
--&gt; API : j'ouvre un endpoint depuis l'app de mathieu  
--&gt; je script dans l'ide un update du learderboard
+scipy installé   ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe anyway ca serait pas mal de regarder codenvy, qui est bien plus fine grained, notamment en terme de config, de clonage, et le juge de paix est le tarif des différentes offres   dès qu'on est ok sur  \- les specs du phantom  \- les IO des soumissions  \- les KPI de validation des soumissions   -&gt; API : j'ouvre un endpoint depuis l'app de mathieu  -&gt; je script dans l'ide un update du learderboard
 
-### **Hyacinthe Lacenne** - Apr 28, 2016 at 5:55 PM
+### **Hyacinthe** - 2016-04-28 at 5:55 PM
 
-Sweet ! Tu minvites dessus? Id: hyacinthe124  
-  
-Avec mon coloc on avait comparé les deux, c9 en termes de ux générale
-l'emportait. Ensuite, on était sur une App rails "standard" donc le plan
-gratuit était largement suffisant :)  
-  
-Pour tes 3 points, vla un peu de food for thoughts ci dessous :)  
-  
-\- Pour déjà travailler sur des images, il y a le dump
-<https://github.com/hyacinthe124/murgen-dev-
-kit/blob/master/software/examples/Readme.md> qui liste qques images brutes (en
-sortie d'acquisition) - on avait échangé sur le format, il a été utilisé là :)
-. On connaît les caractéristiques de l'image, et celles du fantôme, donc on
-peut essayer de reconstruire des images avec différents algos :) le nom des
-fichiers est le md5 de l'image brute. Peuvent ils être servis par le serveur
-de Michel ? Y'a déjà les thumbs :)  
-\- Les specs du fantôme: il y aura une image du fantôme avec une règle, comme
-ça ça en donnera les specs de base.  
-\- Output: oui, qu'attendre en output? Une image? Un temps de conversion? Une
-notation par un médecin? Quel kpi ?  
-  
-Y'a déjà de quoi jouer un peu :)
+Sweet ! Tu minvites dessus? Id: Hyacinthe124   Avec mon coloc on avait comparé les deux, c9 en termes de ux générale l'emportait. Ensuite, on était sur une App rails "standard" donc le plan gratuit était largement suffisant :)   Pour tes 3 points, vla un peu de food for thoughts ci dessous :)   \- Pour déjà travailler sur des images, il y a le dump <https://github.com/Hyacinthe124/murgen-dev- kit/blob/master/software/examples/Readme.md> qui liste qques images brutes (en sortie d'acquisition) - on avait échangé sur le format, il a été utilisé là :) . On connaît les caractéristiques de l'image, et celles du fantôme, donc on peut essayer de reconstruire des images avec différents algos :) le nom des fichiers est le md5 de l'image brute. Peuvent ils être servis par le serveur de Michel ? Y'a déjà les thumbs :)  \- Les specs du fantôme: il y aura une image du fantôme avec une règle, comme ça ça en donnera les specs de base.  \- Output: oui, qu'attendre en output? Une image? Un temps de conversion? Une notation par un médecin? Quel kpi ?   Y'a déjà de quoi jouer un peu :)
 
-### **hyacinthe,** - Apr 30, 2016 at 9:11 AM
+### **Hyacinthe** - 2016-04-30 at 9:11 AM
 
-![Hyacinthe Lacenne, echopen](./../../zz_assets/images/avatars/782178.png)
-lacenne  tu as aussi codeanywhere :)
+![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne tu as aussi codeanywhere :)
 
-### **Hyacinthe Lacenne** - May 01, 2016 at 5:06 PM
+### **Hyacinthe** - 2016-05-01 at 5:06 PM
 
-Pour les fantomes utilisés dans les exemples cités, ca se passe sur
-<https://github.com/hyacinthe124/murgen-dev-
-kit/blob/master/software/examples/Readme.md>  -- rubrique "Specs des
-fantomes". Ca peut etre l'occasion d'une part de tester des algos de scan
-conversion et de traitement de l'image (reduction du bruit?) -- tout en
-faisant de la segmentation.
+Pour les fantomes utilisés dans les exemples cités, ca se passe sur <https://github.com/Hyacinthe124/murgen-dev- kit/blob/master/software/examples/Readme.md>  -- rubrique "Specs des fantomes". Ca peut etre l'occasion d'une part de tester des algos de scan conversion et de traitement de l'image (reduction du bruit?) -- tout en faisant de la segmentation.
 
-### **Hyacinthe Lacenne** - May 03, 2016 at 7:27 PM
+### **Hyacinthe** - 2016-05-03 at 7:27 PM
 
-thks, il faut que je fasse un premier bench de scan conversion en python  
-  
-PS : j'ai manifestement des pbs avec mes notifs mobiles sur BC
+thks, il faut que je fasse un premier bench de scan conversion en python   PS : j'ai manifestement des pbs avec mes notifs mobiles sur BC
 
-### **Hyacinthe Lacenne** - May 09, 2016 at 10:18 AM
+### **Hyacinthe** - 2016-05-09 at 10:18 AM
 
 je t'y ai invité - je regarde le reste
 
-### **Hyacinthe Lacenne** - May 13, 2016 at 9:14 PM
+### **Hyacinthe** - 2016-05-13 at 9:14 PM
 
-![Hyacinthe Lacenne, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  le
-cloud9 est installé avec 1 bench de scanconversion façon OpenCV/python  
-![Hyacinthe, Danseur du ventre at
-echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  j'ai installé
-octave. dis-moi si tu vois d'autres packages utiles  
-  
-next step, installer les utilités pour monitoring de perf  
-  
-fabriquer un script qui compare I/O de la soumission avec le bench.  
-  
-à cette fin , discussion des KPI qd vous voulez
+![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe le cloud9 est installé avec 1 bench de scanconversion façon OpenCV/python  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe j'ai installé octave. dis-moi si tu vois d'autres packages utiles   next step, installer les utilités pour monitoring de perf   fabriquer un script qui compare I/O de la soumission avec le bench.   à cette fin , discussion des KPI qd vous voulez
 
-### **Hyacinthe Lacenne** - Jun 22, 2016 at 9:58 AM
+### **Hyacinthe** - 2016-06-22 at 9:58 AM
 
-après discussion avec medicalem, on a le go de principe de leur DG pour prêt
-de fantôme de calibration  + fantôme digestif  
-  
-mais ca va prendre un peu de temps : il reviennent vers nous fin juillet  
-  
-vous tiens au courant
+après discussion avec medicalem, on a le go de principe de leur DG pour prêt de fantôme de calibration  + fantôme digestif   mais ca va prendre un peu de temps : il reviennent vers nous fin juillet   vous tiens au courant
 
-### **Hyacinthe Lacenne** - Jul 01, 2016 at 9:42 AM
+### **Hyacinthe** - 2016-07-01 at 9:42 AM
 
-mise en place de l'infra tests sur VM et sans VM  
-  
-mise en place de tests unitaires pour l'activité principale  
-  
-mise en place sur l'UI d'une règle pour appréciation des distances
-échographiques  
-  
-mise en place d'une interface de click pour mesure de distance entre deux
-points, et mesure de la distance en temps réel
+mise en place de l'infra tests sur VM et sans VM   mise en place de tests unitaires pour l'activité principale   mise en place sur l'UI d'une règle pour appréciation des distances échographiques   mise en place d'une interface de click pour mesure de distance entre deux points, et mesure de la distance en temps réel
 
-### **Hyacinthe Lacenne** - Jul 09, 2016 at 1:01 AM
+### **Hyacinthe** - 2016-07-09 at 1:01 AM
 
-[1 ptit écusson sur la page github]  
-  
-![Hyacinthe VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  on franchit un
-cap qualité sur l'app -&gt; elle vient de passer sous CI ;)  
-  
-Github n'intègre malheureusement pas Jenkins donc j'ai utilisé Travis, 1 rmq :
-usage plus simple pour les tâches habituelles mais twistés pour les besoins
-customs (genre ndk &amp; such)  
-  
-en tout cas le build passe et on a notre petite écusson sur la page github ;)  
-  
-<https://github.com/echopen/android-app>  
-  
-je ferai l'update sur le wiki pour les règles de soumission qui désormais
-devront passer le build  
-  
-dès que j'ai une fenêtre de tir je m'occupe de la couverture de code - j'ai
-rédigé pas mal de tests mais on doit être à peine à 10 % -  
--&gt; d'une part ca complétera les labels et bon signal qualité pour les contributeurs à venir  
--&gt; par ailleurs, ca donne une métrique pour un challenge -&gt; genre passer notre code coverage à 99% ! 1 #hackathon de rentrée ? ;)
+[1 ptit écusson sur la page github]   ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe on franchit un cap qualité sur l'app -&gt; elle vient de passer sous CI ;)   Github n'intègre malheureusement pas Jenkins donc j'ai utilisé Travis, 1 rmq : usage plus simple pour les tâches habituelles mais twistés pour les besoins customs (genre ndk &amp; such)   en tout cas le build passe et on a notre petite écusson sur la page github ;)   <https://github.com/echopen/android-app>   je ferai l'update sur le wiki pour les règles de soumission qui désormais devront passer le build   dès que j'ai une fenêtre de tir je m'occupe de la couverture de code - j'ai rédigé pas mal de tests mais on doit être à peine à 10 % -  -&gt; d'une part ca complétera les labels et bon signal qualité pour les contributeurs à venir  -&gt; par ailleurs, ca donne une métrique pour un challenge -&gt; genre passer notre code coverage à 99% ! 1 #hackathon de rentrée ? ;)
 
-### **Hyacinthe Lacenne** - Jul 16, 2016 at 11:54 PM
+### **Hyacinthe** - 2016-07-16 at 11:54 PM
 
-après discussion avec  ![Hyacinthe,
-echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe   cet am, lundi
-on va proposer une architecture pour un site lisible, qu'à base de gitbooks. c
-une propale hein ;) qui aura pour mérite de  l'architecture et de la
-synchronisation de la base de connaissance avec github  
-  
-une conséquence pratique sera de mener une refonte de l'orga des  repo.  
-  
-btw,  ![Hyacinthe Lacenne, echopen](./../../zz_assets/images/avatars/2157822.png)
-Hyacinthe  en collatéral de l'holacratie, ce serait pas mal d'adopter un  
-[Contributor Covenant](http://contributor-
-covenant.org/version/1/4/code_of_conduct.md), dont `rails` est adopteur
+après discussion avec ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe   cet am, lundi on va proposer une architecture pour un site lisible, qu'à base de gitbooks. c une propale hein ;) qui aura pour mérite de  l'architecture et de la synchronisation de la base de connaissance avec github   une conséquence pratique sera de mener une refonte de l'orga des  repo.   btw, ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe en collatéral de l'holacratie, ce serait pas mal d'adopter un  [Contributor Covenant](http://contributor- covenant.org/version/1/4/code_of_conduct.md), dont `rails` est adopteur
 
-### **Hyacinthe Lacenne** - Jul 17, 2016 at 10:06 AM
+### **Hyacinthe** - 2016-07-17 at 10:06 AM
 
-Intéressant.  
-On met ça plutôt dans le thread docu ou orga du coup? A réfléchir avec le
-moyen de ne rien perdre du wiki, ça serait dommage de perdre des productions
-:-)  
-  
-Pour l'holacratie, ça vaudra le coup d'y revenir avec la réflexion sur le mode
-d'orga. Nope?
+Intéressant.  On met ça plutôt dans le thread docu ou orga du coup? A réfléchir avec le moyen de ne rien perdre du wiki, ça serait dommage de perdre des productions :-)   Pour l'holacratie, ça vaudra le coup d'y revenir avec la réflexion sur le mode d'orga. Nope?
 
-### **Hyacinthe Lacenne** - Jul 18, 2016 at 10:15 AM
+### **Hyacinthe** - 2016-07-18 at 10:15 AM
 
-il n'y a pas de tels threads dédiés, orga, suis pas sur que ca soit pertinent
-pour tous les participants à ce basecamp et il y a déjà un thread "génération
-de doc" qu'il faudrait donc factoriser
+il n'y a pas de tels threads dédiés, orga, suis pas sur que ca soit pertinent pour tous les participants à ce basecamp et il y a déjà un thread "génération de doc" qu'il faudrait donc factoriser
 
-### **Hyacinthe,** - Jul 18, 2016 at 12:38 PM
+### **Hyacinthe** - 2016-07-18 at 12:38 PM
 
-Il faudrait discuter de l'architecture du site avec un "pro" du domaine.  
-  
-Comme je t'ai la semaine dernière  ![Hyacinthe Lacenne,
-echopen](./../../zz_assets/images/avatars/782178.png) lacenne  , j'ai un
-contributeur pour monter un site web. Ce fut son boulot à une époque.
+Il faudrait discuter de l'architecture du site avec un "pro" du domaine.   Comme je t'ai la semaine dernière ![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne , j'ai un contributeur pour monter un site web. Ce fut son boulot à une époque.
 
-### **Hyacinthe Lacenne** - Jul 18, 2016 at 12:39 PM
+### **Hyacinthe** - 2016-07-18 at 12:39 PM
 
 Top ca! Tu nous fais un topo de ce contributeur ce soir?
 
-### **Hyacinthe,** - Jul 18, 2016 at 1:19 PM
+### **Hyacinthe** - 2016-07-18 at 1:19 PM
 
-je ne suis pas là ce soir. Pour info c'est mon nouveau/futur coloc, on peut
-voir un aperçu de son travail sur son site :  
-  
-<http://www.julien-vignolles.com/>
+je ne suis pas là ce soir. Pour info c'est mon nouveau/futur coloc, on peut voir un aperçu de son travail sur son site :   <http://www.julien-vignolles.com/>
 
-### **Hyacinthe Lacenne** - Jul 18, 2016 at 1:22 PM
+### **Hyacinthe** - 2016-07-18 at 1:22 PM
 
-Pas mal - un dev RoR en somme. Moins orienté architecture de contenu though.  
-  
-Quid sinon de la propal soulevée un peu avant, à savoir évoluer vers un site
-statique sous framework Jekyll par exemple (qui tourne sous RoR) ?
+Pas mal - un dev RoR en somme. Moins orienté architecture de contenu though.   Quid sinon de la propal soulevée un peu avant, à savoir évoluer vers un site statique sous framework Jekyll par exemple (qui tourne sous RoR) ?
 
-### **Hyacinthe Lacenne** - Jul 18, 2016 at 1:37 PM
+### **Hyacinthe** - 2016-07-18 at 1:37 PM
 
-hello, merci  ![Hyacinthe, Danseur du ventre at
-echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  simplement il
-avait l'air chaud pour faire du test sur android. IL connait java. C un plus
-stimulant pour un bon dev que du faire du rails. Btw, tout est en place pour
-l'écriture de tests config : templating de base, base de helper, structure de
-mocking  
-  
-Du coup, pour un site statique, on peut mettre david sur le coup. Il faut voir
-si un générateur est le mieux, on en discute ce soir ;)
+hello, merci ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe simplement il avait l'air chaud pour faire du test sur android. IL connait java. C un plus stimulant pour un bon dev que du faire du rails. Btw, tout est en place pour l'écriture de tests config : templating de base, base de helper, structure de mocking   Du coup, pour un site statique, on peut mettre david sur le coup. Il faut voir si un générateur est le mieux, on en discute ce soir ;)
 
-### **Hyacinthe,** - Jul 18, 2016 at 1:43 PM
+### **Hyacinthe** - 2016-07-18 at 1:43 PM
 
-Il est chaud pour les deux. Et il à des trucs pour rendre un site plus
-"vendeur". A voir. J'en reparlerai avec lui
+Il est chaud pour les deux. Et il à des trucs pour rendre un site plus "vendeur". A voir. J'en reparlerai avec lui
 
-### **Hyacinthe Lacenne** - Jul 18, 2016 at 1:46 PM
+### **Hyacinthe** - 2016-07-18 at 1:46 PM
 
 Que demande le peuple !
 
-### **Hyacinthe Lacenne** - Aug 13, 2016 at 2:31 PM
+### **Hyacinthe** - 2016-08-13 at 2:31 PM
 
-![David Isnard, Dev php js html css symfony2 nodejs  at
-echopen](./../../zz_assets/images/avatars/4693510.png) David  a terminé le
-travail entamé il y a quelques mois par Mathieu Régnier
+![David Isnard, Dev php js html css symfony2 nodejs at echopen](./../../zz_assets/images/avatars/4693510.png) David a terminé le travail entamé il y a quelques mois par Mathieu Régnier
 
 interface node de récupération de données depuis la sonde dans l’aquarium
 
@@ -255,52 +114,17 @@ interface node de récupération de données depuis la sonde dans l’aquarium
 
 -&gt; pour le moment émulateur de data via un serveur TCP 
 
-@todo  
-\- review pul- request de david  
-\- qqs corrections à apporter au code pour les data volumineuses  
-\- adaptation du code de la redpitaya : pour l’agenda cf. tableau de
-![Hyacinthe, Danseur du ventre at
-echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  (salle echOpen)
+@todo  \- review pul- request de david  \- qqs corrections à apporter au code pour les data volumineuses  \- adaptation du code de la redpitaya : pour l’agenda cf. tableau de ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  (salle echOpen)
 
-### **Hyacinthe Lacenne** - Aug 20, 2016 at 2:38 PM
+### **Hyacinthe** - 2016-08-20 at 2:38 PM
 
-un dev d'Inde, pryiank tiwari rejoint la dev team de l'app;)  
-  
-premier milestone -&gt;  travail de l'UI -&gt; choix des preset par appareil à
-explorer (digestif, pulmonaire), via un carousel à scroll horizontal
+un dev d'Inde, pryiank tiwari rejoint la dev team de l'app;)   premier milestone -&gt;  travail de l'UI -&gt; choix des preset par appareil à explorer (digestif, pulmonaire), via un carousel à scroll horizontal
 
-### **Hyacinthe Lacenne** - Sep 06, 2016 at 4:27 PM
+### **Hyacinthe** - 2016-09-06 at 4:27 PM
 
-après rencontre du directeur pédagogique d'HETIC? une école de dev  
-  
-Go pour une semaine de sprints avec tous les étudiants de 2ème année autour
-d'échOpen  
-  
-Objectifs : design + UX + Inté  
-Date :  3ème semaine de novembre  
-  
--&gt; rencontre le 05.10 avec le resp du cours
+après rencontre du directeur pédagogique d'HETIC? une école de dev   Go pour une semaine de sprints avec tous les étudiants de 2ème année autour d'échOpen   Objectifs : design + UX + Inté  Date :  3ème semaine de novembre   -&gt; rencontre le 05.10 avec le resp du cours
 
-### **Hyacinthe Lacenne** - Oct 05, 2016 at 9:22 PM
+### **Hyacinthe** - 2016-10-05 at 9:22 PM
 
-AYÉ,  
-  
-on a le go d'école d'HETIC sur 2 projets )  
-  
-1)  
-UX + UI : sprint d'une semaine consacrée à echOpen aura lieu du 17 novembre au
-25 novembre  
-  
-#input : les idées de mock-ups issus du design camp de l'an dernier  
-#output : les PSD ou Sketch des 3 screens/activités de l'app  
-  
-nbre d'étudiants mobilisés : 25  
-  
-les enjeux de usability pour l'opérateur ont bien été saisis et sont jugées
-stimulantes  
-  
-2) Première semaine de juillet : 120 élèves planchent sur UX+UI+intégration
-android/ios !  
-  
-nice
+AYÉ,   on a le go d'école d'HETIC sur 2 projets )   1)  UX + UI : sprint d'une semaine consacrée à echOpen aura lieu du 17 novembre au 25 novembre   #input : les idées de mock-ups issus du design camp de l'an dernier  #output : les PSD ou Sketch des 3 screens/activités de l'app   nbre d'étudiants mobilisés : 25   les enjeux de usability pour l'opérateur ont bien été saisis et sont jugées stimulantes   2) Première semaine de juillet : 120 élèves planchent sur UX+UI+intégration android/ios !   nice
 
