--- a/bc3-data/136833430.md
+++ b/bc3-data/136833430.md
@@ -1,11 +1,8 @@
-#  Lost &amp; found @QG Archived
+# Lost &amp; found @QG Archived  - 2016-05-29
 
-Hyacinthe Lacenne posted this May 29, 2016 at 3:49 PM
+Yop, ai du oublier un cable d'iphone 5 noir ce vendredi au bureau... faites signe si vous le retrouvez =)
 
-Yop, ai du oublier un cable d'iphone 5 noir ce vendredi au bureau... faites
-signe si vous le retrouvez =)
-
-### **hyacinthe,** - May 30, 2016 at 5:56 PM
+### **Hyacinthe** - 2016-05-30 at 5:56 PM
 
 Ai retrouvé :)
 
