--- a/bc3-data/150456092.md
+++ b/bc3-data/150456092.md
@@ -1,116 +1,68 @@
-#  RANDOM
+# RANDOM  - 2016-06-17
 
-Hyacinthe posted this Jun 17, 2016 at 9:13 AM
+Hello, un fil de discussion random pour échanger ensemble un peu tout et n'importe quoi ;)
 
-Hello, un fil de discussion random pour échanger ensemble un peu tout et
-n'importe quoi ;)
+### **Hyacinthe** - 2016-06-17 at 9:15 AM
 
-### **Hyacinthe** - Jun 17, 2016 at 9:15 AM
+Hello all,   une startup développant un nouveau type d'éolienne horizontale adaptée en situation urbaine cherche un ingénieur avec des compétences en aérodynamique et mécanique des fluides, voir électrique.   Si vous connaissez quelqu'un qui connait quelqu'un ;)
 
-Hello all,  
-  
-une startup développant un nouveau type d'éolienne horizontale adaptée en
-situation urbaine cherche un ingénieur avec des compétences en aérodynamique
-et mécanique des fluides, voir électrique.  
-  
-Si vous connaissez quelqu'un qui connait quelqu'un ;)
+### **Hyacinthe** - 2016-06-17 at 9:46 AM
 
-### **Hyacinthe VINCENT,** - Jun 17, 2016 at 9:46 AM
+Non, mais je connais bien les gens d'un labo de l'ENSAM qui fait de la recherche partenariale et qui connait bien le sujet ;-) : <http://dynfluid.ensam.eu/>
 
-Non, mais je connais bien les gens d'un labo de l'ENSAM qui fait de la
-recherche partenariale et qui connait bien le sujet ;-) :
-<http://dynfluid.ensam.eu/>
+### **Hyacinthe** - 2016-06-17 at 9:48 AM
 
-### **Hyacinthe** - Jun 17, 2016 at 9:48 AM
+Excellent, merci ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  je passe le mot et te tiens au courant ;)
 
-Excellent, merci  ![Hyacinthe VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  je passe le mot
-et te tiens au courant ;)
+### **Hyacinthe** - 2016-06-17 at 3:50 PM
 
-### **Emilie Mayer,** - Jun 17, 2016 at 3:50 PM
+Si tu veux je peux envoyer un mail à ma promo, mais il faudrait un peu plus dinfos ;)
 
-Si tu veux je peux envoyer un mail à ma promo, mais il faudrait un peu plus
-dinfos ;)
+### **Hyacinthe** - 2016-06-22 at 7:45 AM
 
-### **Hyacinthe Lacenne** - Jun 22, 2016 at 7:45 AM
+bon les spécialistes connaissent sans doute cela par coeur, mais je poste ceci   <http://www.zdnet.com/pictures/10-alternatives-to-the-raspberry-pi/8/>
 
-bon les spécialistes connaissent sans doute cela par coeur, mais je poste ceci  
-  
-<http://www.zdnet.com/pictures/10-alternatives-to-the-raspberry-pi/8/>
+### **Hyacinthe** - 2016-06-22 at 12:46 PM
 
-### **Hyacinthe Lacenne** - Jun 22, 2016 at 12:46 PM
+Niveau captation, il existe un truc propre et pro dont on se sert dans une asso: <https://www.ubicast.eu/fr/> =)
 
-Niveau captation, il existe un truc propre et pro dont on se sert dans une
-asso: <https://www.ubicast.eu/fr/> =)
+### **Hyacinthe** - 2016-06-22 at 4:32 PM
 
-### **Emilie Mayer,** - Jun 22, 2016 at 4:32 PM
+<https://drive.google.com/file/d/0B78eZ66FqvN9UGNDUWVzY05HdzYyMXRneFBmVWFRRjVodXRB/view>   "Concours pour la 10e édition du Prix Ile de Science de la culture scientifique et technique.Ce concours vise à mettre en avant les projets et initiatives scientifiques et techniques particulièrement innovants et audacieux.  ==&gt; Ce concours est doté d'UNE BOURSE DE 2.000 EUROS.La date limite des dépôts des dossiers est fixée au mercredi 13 juillet 2016."   Bon parcours faut etre géographiquement sur le plateau de saclay, donc pas sure que ca marche, mais ça peut peut etre en intéresser certains....
 
-<https://drive.google.com/file/d/0B78eZ66FqvN9UGNDUWVzY05HdzYyMXRneFBmVWFRRjVodXRB/view>  
-  
-"Concours pour la 10e édition du Prix Ile de Science de la culture
-scientifique et technique.Ce concours vise à mettre en avant les projets et
-initiatives scientifiques et techniques particulièrement innovants et
-audacieux.  
-==&gt; Ce concours est doté d'UNE BOURSE DE 2.000 EUROS.La date limite des
-dépôts des dossiers est fixée au mercredi 13 juillet 2016."  
-  
-Bon parcours faut etre géographiquement sur le plateau de saclay, donc pas
-sure que ca marche, mais ça peut peut etre en intéresser certains....
+### **Hyacinthe** - 2016-07-05 at 12:55 PM
 
-### **Hyacinthe Lacenne** - Jul 05, 2016 at 12:55 PM
+Tjrs sur les financements, <http://www.franceactive.org/default.asp?id=27> -&gt; aller de 5k à 1.5Me   Sinon, plus fun : <https://github.com/usgov/forget-the-king>
 
-Tjrs sur les financements, <http://www.franceactive.org/default.asp?id=27>
--&gt; aller de 5k à 1.5Me  
-  
-Sinon, plus fun : <https://github.com/usgov/forget-the-king>
+### **Hyacinthe** - 2016-07-11 at 6:52 AM
 
-### **Hyacinthe Lacenne** - Jul 11, 2016 at 6:52 AM
+Discussion avec un pote de Withings, qui fait des balances qui mesurent la rigidité artérielle: avec deux petits piezos à distance fixée sur la carotide, on peut calculer la vitesse de propagation de l'onde de pouls, donc l'état des tuyaux (dont Hyacinthe nous a fait une premiere démo vendredi).
 
-Discussion avec un pote de Withings, qui fait des balances qui mesurent la
-rigidité artérielle: avec deux petits piezos à distance fixée sur la carotide,
-on peut calculer la vitesse de propagation de l'onde de pouls, donc l'état des
-tuyaux (dont Hyacinthe nous a fait une premiere démo vendredi).
+### **Hyacinthe** - 2016-07-13 at 3:14 PM
 
-### **Hyacinthe Lacenne** - Jul 13, 2016 at 3:14 PM
+![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe tu vas aiiimé : des labs de physiques open source   via ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe <http://www.physdev.org/open-source/>   btw, il passe ce lundi est echOpen ;)
 
-![Hyacinthe KHOYRATEE, Electronique at
-echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe  tu vas aiiimé :
-des labs de physiques open source  
-  
-via  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe
-<http://www.physdev.org/open-source/>  
-  
-btw, il passe ce lundi est echOpen ;)
+### **Hyacinthe** - 2016-07-15 at 9:09 AM
 
-### **Hyacinthe KHOYRATEE,** - Jul 15, 2016 at 9:09 AM
+Je n'ai pas entièrement saisi à quoi servait leurs machines mais ça a l'air génial :D
 
-Je n'ai pas entièrement saisi à quoi servait leurs machines mais ça a l'air
-génial :D
+### **Hyacinthe** - 2016-09-21 at 3:02 PM
 
-### **Hyacinthe** - Sep 21, 2016 at 3:02 PM
+Hello à tous,   Proposition pour exposer echOpen à l'espace Hyacinthe Gilles de Genne (ESPCI) de Novembre 2016 à mai 2017 à l’occasion de l’exposition Science Frugale
 
-Hello à tous,  
-  
-Proposition pour exposer echOpen à l'espace Hyacinthe Gilles de Genne (ESPCI) de
-Novembre 2016 à mai 2017 à l’occasion de l’exposition Science Frugale
-
-  * 2 premier mois d’incubation =&gt; Faire venir des projets qui vont ajouter des éléments dans l’exposition. 
-  * Exposition 
+ * 2 premier mois d’incubation =&gt; Faire venir des projets qui vont ajouter des éléments dans l’exposition.   * Exposition 
 
 Ouvert au public + événements possibles (conférences, workshops, etc.)
 
-  
+ 
 
 **besoin / proposition** : 
 
-  * Un texte + une photo pour montrer + qq informations 
-  * Idéalement un ancien prototype qui serait mis sous vitrine à exposer. 
-  * Proposer une idée d'événement (espace 100 mètre carré + amphithéâtre de 36 places)
+ * Un texte + une photo pour montrer + qq informations   * Idéalement un ancien prototype qui serait mis sous vitrine à exposer.   * Proposer une idée d'événement (espace 100 mètre carré + amphithéâtre de 36 places)
 
-  
-A vos idées ;) Ce serait cool !! Qui voudrait monter à bord de ce projet ?
+  A vos idées ;) Ce serait cool !! Qui voudrait monter à bord de ce projet ?
 
-### **Hyacinthe Lacenne** - Sep 22, 2016 at 7:39 AM
+### **Hyacinthe** - 2016-09-22 at 7:39 AM
 
 c top ça ;)
 
