--- a/bc3-data/151814533.md
+++ b/bc3-data/151814533.md
@@ -1,86 +1,34 @@
-#  Electronic lab'
+# Electronic lab'  - 2016-06-20
 
-Hyacinthe KHOYRATEE posted this Jun 20, 2016 at 2:06 PM · 5 people applauded
+Salut à tous,   J’espère que tout le monde va bien, je reprends une proposition que j'ai fais il y a de cela un moment. L'idée est si vous le voulez, de pouvoir imprimer vos circuits dans les locaux de l’hôtel dieu. Plusieurs sites expliquent la procédure à suivre.   Plusieurs façon d'imprimer ses circuits:  <https://www.sonelec-musique.com/electronique_bases_realisation_ci.html>   Gravure chimique (le moins cher à mon sens bien que certain on trouvé le moyen de créer des graveurs mécaniques low cost à partir d'imprimante 3D et c'est la que je me rends compte que ma parenthèse est trop grande):  <http://www.68hc08.net/articles.item.42/gravure-pcb-solution-1.html>[](http://www.68hc08.net/articles.item.42/gravure-pcb- solution-1.html)<http://wiki.jelectronique.com/doku.php?id=realisation_de_circuits_imprimes>   Si jamais vous décidez que ça vaut le coup, il faut pour ça :  * Une insoleuse (entre 200 et 1500e chez radiospare) ou alors regarder la solution d'un gars sur le site de sonelec ou il utilise une machine pour les ongles à 18e  * Des plaques epoxy (futur support de vos Circuits Imprimé, CI à 15e en moyenne)  * Des produits chimiques:            - Un révélateur (sachet déjà pret ou alors solution à base de soude, entre 1 à 5e)            - Perchlorure de fer (20 à 30e)  * Du papier calque pour imprimer ses typons  * Un logiciel de CAO, perso j'utilise Altium Designer mais il est cher, sinon j'ai un ami qui m'a montré celui la : <https://easyeda.com/> que je trouve vraiment bien!  * Tout le matos de base de protection (lunette, blouse, gants etc)  * Matos de méca : perceuse   Voila, j'ai encore jamais essayé mais bon ça n'a pas l'air non plus d'être le plus compliqué, si vous tentez dîtes le moi je suis curieux!
 
-Salut à tous,  
-  
-J’espère que tout le monde va bien, je reprends une proposition que j'ai fais
-il y a de cela un moment. L'idée est si vous le voulez, de pouvoir imprimer
-vos circuits dans les locaux de l’hôtel dieu. Plusieurs sites expliquent la
-procédure à suivre.  
-  
-Plusieurs façon d'imprimer ses circuits:  
-<https://www.sonelec-musique.com/electronique_bases_realisation_ci.html>  
-  
-Gravure chimique (le moins cher à mon sens bien que certain on trouvé le moyen
-de créer des graveurs mécaniques low cost à partir d'imprimante 3D et c'est la
-que je me rends compte que ma parenthèse est trop grande):  
-<http://www.68hc08.net/articles.item.42/gravure-pcb-solution-1.html>[  
-](http://www.68hc08.net/articles.item.42/gravure-pcb-
-solution-1.html)<http://wiki.jelectronique.com/doku.php?id=realisation_de_circuits_imprimes>  
-  
-Si jamais vous décidez que ça vaut le coup, il faut pour ça :  
-* Une insoleuse (entre 200 et 1500e chez radiospare) ou alors regarder la solution d'un gars sur le site de sonelec ou il utilise une machine pour les ongles à 18e  
-* Des plaques epoxy (futur support de vos Circuits Imprimé, CI à 15e en moyenne)  
-* Des produits chimiques:  
-          - Un révélateur (sachet déjà pret ou alors solution à base de soude, entre 1 à 5e)  
-          - Perchlorure de fer (20 à 30e)  
-* Du papier calque pour imprimer ses typons  
-* Un logiciel de CAO, perso j'utilise Altium Designer mais il est cher, sinon j'ai un ami qui m'a montré celui la : <https://easyeda.com/> que je trouve vraiment bien!  
-* Tout le matos de base de protection (lunette, blouse, gants etc)  
-* Matos de méca : perceuse  
-  
-Voila, j'ai encore jamais essayé mais bon ça n'a pas l'air non plus d'être le
-plus compliqué, si vous tentez dîtes le moi je suis curieux!
-
-### **Hyacinthe Lacenne** - Jun 20, 2016 at 2:08 PM
+### **Hyacinthe** - 2016-06-20 at 2:08 PM
 
 Ça me semble bien top et pertinent pour avancer sur la voie électronique :)
 
-### **Hyacinthe VINCENT,** - Jun 21, 2016 at 8:15 AM
+### **Hyacinthe** - 2016-06-21 at 8:15 AM
 
-Quelques autres pistes:  
-**Avec une imp laser:**
+Quelques autres pistes:  **Avec une imp laser:**
 
-  * Il semblerait que l'on puisse remplacer la phase typon, insolation, révélateur en faisant un transfert à chaud de l'encre des pistes imprimées sur papier à l'imprimante laser puis en éliminant le papier à l'eau. Il y a des tonnes d'exemples (ex <https://www.youtube.com/watch?v=imQTCW1yWkg>).
-  * On pourrait même hacker une imprimante laser (y en aurait pas une dans la salle de réunion) pour qu'elle imprime directement sur le PCB (<https://www.youtube.com/watch?v=VY-7hQ6ocx8>)
+ * Il semblerait que l'on puisse remplacer la phase typon, insolation, révélateur en faisant un transfert à chaud de l'encre des pistes imprimées sur papier à l'imprimante laser puis en éliminant le papier à l'eau. Il y a des tonnes d'exemples (ex <https://www.youtube.com/watch?v=imQTCW1yWkg>).  * On pourrait même hacker une imprimante laser (y en aurait pas une dans la salle de réunion) pour qu'elle imprime directement sur le PCB (<https://www.youtube.com/watch?v=VY-7hQ6ocx8>)
 
-**Avec une imp 3D  
-**  
+**Avec une imp 3D  ** 
 
-  * La gravure comme propose  ![Hyacinthe KHOYRATEE, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe 
-  * Le dépot du masque directement sur le PCB (<http://www.instructables.com/id/Make-Flexible-Circuit-Boards-Using-A-3D-Printer/>)
+ * La gravure comme propose ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe  * Le dépot du masque directement sur le PCB (<http://www.instructables.com/id/Make-Flexible-Circuit-Boards-Using-A-3D-Printer/>)
 
-  
+ 
 
-Et aussi peut-être en profiter pour se développer une compétence en CMS
-(composants soudés en surface) moins chers et bien plus compacts. Alors il
-faudra, en plus une plancha à 30€.
+Et aussi peut-être en profiter pour se développer une compétence en CMS (composants soudés en surface) moins chers et bien plus compacts. Alors il faudra, en plus une plancha à 30€.
 
-### **Hyacinthe KHOYRATEE,** - Jun 21, 2016 at 8:56 AM
+### **Hyacinthe** - 2016-06-21 at 8:56 AM
 
-Très intéressant, l'utilisation d'imprimante, à essayer! Si ça m'est
-accessible je tente le coup!  
-  
-Pour compléter ce que dit  ![Hyacinthe VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  à propos des
-CMS, réfléchir sur le sujet me parait aussi important car les CMS ne
-permettent pas seulement de gagner en place (plus besoin de percer sa carte et
-le montage est possible en double face assez facilement) mais aussi de gagner
-en performances  (distorsion en HF, CEM, bruit, etc). Il existe des façons
-assez simple de braser le CMS grâce à un four à refusion :  
-<http://wiki.jelectronique.com/doku.php?id=souder_des_cms>
+Très intéressant, l'utilisation d'imprimante, à essayer! Si ça m'est accessible je tente le coup!   Pour compléter ce que dit ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe à propos des CMS, réfléchir sur le sujet me parait aussi important car les CMS ne permettent pas seulement de gagner en place (plus besoin de percer sa carte et le montage est possible en double face assez facilement) mais aussi de gagner en performances  (distorsion en HF, CEM, bruit, etc). Il existe des façons assez simple de braser le CMS grâce à un four à refusion :  <http://wiki.jelectronique.com/doku.php?id=souder_des_cms>
 
-### **Hyacinthe Lacenne** - Jun 21, 2016 at 9:07 AM
+### **Hyacinthe** - 2016-06-21 at 9:07 AM
 
-Yop, bien vrai ça! Petits soucis de distorsions qu'on voit apparaitre bien
-facilement, sur des betes montages juste à base de résistances (non non non je
-ne pense pas à des R2R au delà de 1MHz =) )
+Yop, bien vrai ça! Petits soucis de distorsions qu'on voit apparaitre bien facilement, sur des betes montages juste à base de résistances (non non non je ne pense pas à des R2R au delà de 1MHz =) )
 
-### **Hyacinthe Lacenne** - Jun 25, 2016 at 5:36 PM
+### **Hyacinthe** - 2016-06-25 at 5:36 PM
 
-Pour l'imprimante laser, je viens de lire ca.. ca peut etre pas con!  
-  
-<https://hackaday.io/project/12133-automatic-audio-source-switching/log/40600
--proto-build>
+Pour l'imprimante laser, je viens de lire ca.. ca peut etre pas con!   <https://hackaday.io/project/12133-automatic-audio-source-switching/log/40600 -proto-build>
 
