--- a/bc3-data/202775646.md
+++ b/bc3-data/202775646.md
@@ -1,85 +1,44 @@
-#  Électronique et microcontrolers
+# Électronique et microcontrolers  - 2016-08-19
 
-hyacinthe posted this Aug 19, 2016 at 7:54 AM
+Petit thread dédié.   Première question du coup :) c'est vrai qu'on recherche un programmateur PIC? Et BM ne couvre pas?
 
-Petit thread dédié.  
-  
-Première question du coup :) c'est vrai qu'on recherche un programmateur PIC?
-Et BM ne couvre pas?
+### **Hyacinthe** - 2016-08-19 at 10:51 AM
 
-### **Hyacinthe Lacenne** - Aug 19, 2016 at 10:51 AM
+c pour le pipe maker, c joris qui était dessus cc  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe
 
-c pour le pipe maker, c joris qui était dessus cc  ![Hyacinthe, Danseur du ventre
-at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe
+### **Joris JEAN-BAPTISTE** - 2016-08-19 at 12:27 PM
 
-### **Joris JEAN-BAPTISTE,** - Aug 19, 2016 at 12:27 PM
+Pour tenir les délais je pense que ce serait pas mal d'avoir un spé PIC  Et d'être fixés sur les performances de l'ADC  ( jusqu'à 18MSPS en utilisant 1 ou 2 ADC (turbo mode))   A l'heure actuelle on atteint 8,6MSPS en continuous mode, résolution 6 bits et en utilisant la FIFO
 
-Pour tenir les délais je pense que ce serait pas mal d'avoir un spé PIC  
-Et d'être fixés sur les performances de l'ADC  ( jusqu'à 18MSPS en utilisant 1
-ou 2 ADC (turbo mode))  
-  
-A l'heure actuelle on atteint 8,6MSPS en continuous mode, résolution 6 bits et
-en utilisant la FIFO
+### **Hyacinthe** - 2016-08-19 at 12:50 PM
 
-### **Hyacinthe Lacenne** - Aug 19, 2016 at 12:50 PM
+Pour le pipe maker la cape beaglebone adc 40msps 10bits, accès en temps réel a la data dans un userspace Linux, me semble pas mal non plus :)
 
-Pour le pipe maker la cape beaglebone adc 40msps 10bits, accès en temps réel a
-la data dans un userspace Linux, me semble pas mal non plus :)
+### **Hyacinthe** - 2016-08-19 at 12:56 PM
 
-### **Hyacinthe Lacenne** - Aug 19, 2016 at 12:56 PM
+Ensuite,  ça dépend pour quoi on veut d'en servir dans le pipe maker, et quelles contraintes on a, c'est pas clair le besoin :)
 
-Ensuite,  ça dépend pour quoi on veut d'en servir dans le pipe maker, et
-quelles contraintes on a, c'est pas clair le besoin :)
+### **Hyacinthe** - 2016-08-19 at 1:01 PM
 
-### **Hyacinthe Lacenne** - Aug 19, 2016 at 1:01 PM
+![Joris JEAN-BAPTISTE, Elec analog & digit + Soft at echopen](./../../zz_assets/images/avatars/4392629.png) Joris ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe your point of view sur beagle bone ?
 
-![Joris JEAN-BAPTISTE, Elec analog & digit + Soft  at
-echopen](./../../zz_assets/images/avatars/4392629.png) Joris  ![Hyacinthe,
-Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png)
-Hyacinthe  your point of view sur beagle bone ?
+### **Joris JEAN-BAPTISTE** - 2016-08-19 at 1:10 PM
 
-### **Joris JEAN-BAPTISTE,** - Aug 19, 2016 at 1:10 PM
+Si la maîtrise de l'ADC beaglebone est au point pourquoi pas. ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe devrait confirmer
 
-Si la maîtrise de l'ADC beaglebone est au point pourquoi pas.  ![Hyacinthe,
-Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png)
-Hyacinthe  devrait confirmer
+### **Hyacinthe** - 2016-08-19 at 1:15 PM
 
-### **Hyacinthe Lacenne** - Aug 19, 2016 at 1:15 PM
+Attention, pas que Beaglebone. beaglebone plus prudaq. Je crois comprendre que bitmaker s'y interesse aussi.   L'accès aux data se passe par un device Linux - hyperfacile. Soit 40msps single channel, soit 2x20msps. Sur 10bits.   320Mo de buffer pour stocker les data si besoin.   Encore une fois, ça dépend ce qu'on attend de l'outil (ca ne retire pas la question de sortie des data post adc), en tout cas en termes de simplicité j'ai bien apprécié, c'est ce qui me sert à acquérir des boucles vidéos avec la sonde atl ;)
 
-Attention, pas que Beaglebone. beaglebone plus prudaq. Je crois comprendre que
-bitmaker s'y interesse aussi.  
-  
-L'accès aux data se passe par un device Linux - hyperfacile. Soit 40msps
-single channel, soit 2x20msps. Sur 10bits.  
-  
-320Mo de buffer pour stocker les data si besoin.  
-  
-Encore une fois, ça dépend ce qu'on attend de l'outil (ca ne retire pas la
-question de sortie des data post adc), en tout cas en termes de simplicité
-j'ai bien apprécié, c'est ce qui me sert à acquérir des boucles vidéos avec la
-sonde atl ;)
+### **Hyacinthe** - 2016-08-19 at 1:56 PM
 
-### **Hyacinthe,** - Aug 19, 2016 at 1:56 PM
+Le beaglebone tout comme la RedPitaya offre l'avantage d'utiliser un outil tout fait. C'est un peu moins cher que la RP, environ 150€ de ce que j'ai vu. C'est une possibilité. Mais si on regarde à plus long terme, de toute façon il faudra qu'on développe notre propre solution, d'où regarder la piste PIC32.
 
-Le beaglebone tout comme la RedPitaya offre l'avantage d'utiliser un outil
-tout fait. C'est un peu moins cher que la RP, environ 150€ de ce que j'ai vu.
-C'est une possibilité. Mais si on regarde à plus long terme, de toute façon il
-faudra qu'on développe notre propre solution, d'où regarder la piste PIC32.
-
-### **Hyacinthe Lacenne** - Aug 19, 2016 at 2:02 PM
+### **Hyacinthe** - 2016-08-19 at 2:02 PM
 
 ok c une bonne communauté mais je ne pensais que c'était aussi cher
 
-### **Hyacinthe Lacenne** - Aug 19, 2016 at 2:24 PM
+### **Hyacinthe** - 2016-08-19 at 2:24 PM
 
-A comparer ce qui est comparable ;)  
-Le pic a un adc, et si on ne veut qu'un adc effectivement c'est peut être ce
-dont on a besoin.  
-  
-Par contre jamais un pic n'exposera 40msps en temps réel pour un os classique.  
-  
-Ensuite, comment exporter les données du PIC, qu'est ce qu'on veut faire avec
-le pic,... C'est en fonction des réponses à ces questions ( pas encore clair
-pour moi today en lisant ce thread ) qu'on pourra vraiment répondre quelle
-solution est la plus appropriée :)
+A comparer ce qui est comparable ;)  Le pic a un adc, et si on ne veut qu'un adc effectivement c'est peut être ce dont on a besoin.   Par contre jamais un pic n'exposera 40msps en temps réel pour un os classique.   Ensuite, comment exporter les données du PIC, qu'est ce qu'on veut faire avec le pic,... C'est en fonction des réponses à ces questions ( pas encore clair pour moi today en lisant ce thread ) qu'on pourra vraiment répondre quelle solution est la plus appropriée :)
 
