--- a/bc3-data/251567699.md
+++ b/bc3-data/251567699.md
@@ -1,87 +1,32 @@
-#  events
-
-Hyacinthe Lacenne posted this Oct 05, 2016 at 9:24 PM
+# events  - 2016-10-05
 
 Un thread pour les events
 
-### **Hyacinthe Lacenne** - Oct 05, 2016 at 9:31 PM
+### **Hyacinthe** - 2016-10-05 at 9:31 PM
 
-echOpen est invité à participer à [Africa4Tech](https://africa4tech.org/) pour
-un workshop dédié à la co-construction de l'app Android  
-  
-L'event aura lieu à Marrakech, le 02.11.16 et le 04.11.16 et est labellisé
-Cop22  
-  
-Il y aura des devs front + back, avec me suis-je laissé entendre, des devs
-high level, notamment des games developers  
-  
-l'idée est de faire, en amont d'HETIC, la partie intégration android + dev
-algo sous GPU, et ce afin de se prémunir de la situation où l'on ne trouverait
-pas le temps, pour décembre, d'intégrer la fournée de design d'HETIC
+echOpen est invité à participer à [Africa4Tech](https://africa4tech.org/) pour un workshop dédié à la co-construction de l'app Android   L'event aura lieu à Marrakech, le 02.11.16 et le 04.11.16 et est labellisé Cop22   Il y aura des devs front + back, avec me suis-je laissé entendre, des devs high level, notamment des games developers   l'idée est de faire, en amont d'HETIC, la partie intégration android + dev algo sous GPU, et ce afin de se prémunir de la situation où l'on ne trouverait pas le temps, pour décembre, d'intégrer la fournée de design d'HETIC
 
-### **hyacinthe,** - Oct 07, 2016 at 10:51 AM
+### **Hyacinthe** - 2016-10-07 at 10:51 AM
 
-Un event où il serait clé qu'echopen participe, de par sa structure, et pour
-se positionner :  
-  
-  
-Le Domaine d’Activité Stratégique (DAS) « **Imagerie diagnostique et
-interventionnelle** » du pôle de compétitivité **Medicen Paris Region**
-organise en partenariat avec l’infrastructure nationale **France Life Imaging
-(FLI)**, le **mardi 15 novembre 2016 **à l’Institut du Cerveau et de la Moelle
-Epinière (Hôpital Pitié Salpêtrière, Paris),un colloque sur le thème : « **Les
-ultrasons en France : innovations pour l’imagerie médicale et la thérapie en
-2016 »**.  
-  
+Un event où il serait clé qu'echopen participe, de par sa structure, et pour se positionner :     Le Domaine d’Activité Stratégique (DAS) « **Imagerie diagnostique et interventionnelle** » du pôle de compétitivité **Medicen Paris Region** organise en partenariat avec l’infrastructure nationale **France Life Imaging (FLI)**, le **mardi 15 novembre 2016 **à l’Institut du Cerveau et de la Moelle Epinière (Hôpital Pitié Salpêtrière, Paris),un colloque sur le thème : « **Les ultrasons en France : innovations pour l’imagerie médicale et la thérapie en 2016 »**.   
 
-Faisant suite au colloque organisé par FLI en novembre 2014, l’objectif de ce
-colloque est de dresser un panorama des innovations académiques/cliniques et
-industrielles des ultrasons pour l’imagerie diagnostique et interventionnelle.
-Pour cela, un programme de communications invitées, complétées par des
-sessions de pitchs réservés aux industriels d’une part, et aux
-académiques/cliniques d’autre part, se succéderont pour présenter les
-innovations du domaine des ultrasons. Medicen Paris Region lancera
-prochainement un Appel à Manifestation d’Intérêt national auprès des autres
-pôles de compétitivité nationaux, afin d’identifier les organismes
-(académiques et industriels) ayant la volonté de venir présenter leurs
-innovations lors de ces sessions de pitch
+Faisant suite au colloque organisé par FLI en novembre 2014, l’objectif de ce colloque est de dresser un panorama des innovations académiques/cliniques et industrielles des ultrasons pour l’imagerie diagnostique et interventionnelle. Pour cela, un programme de communications invitées, complétées par des sessions de pitchs réservés aux industriels d’une part, et aux académiques/cliniques d’autre part, se succéderont pour présenter les innovations du domaine des ultrasons. Medicen Paris Region lancera prochainement un Appel à Manifestation d’Intérêt national auprès des autres pôles de compétitivité nationaux, afin d’identifier les organismes (académiques et industriels) ayant la volonté de venir présenter leurs innovations lors de ces sessions de pitch
 
-  
-Les autres temps forts du colloque seront deux tables rondes : la première
-traitera de la structuration d’une filière française des ultrasons, et la
-deuxième abordera le passage de l’invention académique/clinique au marché.  
-  
+  Les autres temps forts du colloque seront deux tables rondes : la première traitera de la structuration d’une filière française des ultrasons, et la deuxième abordera le passage de l’invention académique/clinique au marché.   
 
-  
-  
-  
+    
 
-  
-Ce colloque pourra être l’occasion d’annoncer la structuration de la filière
-française des ultrasons médicaux.  
-  
+  Ce colloque pourra être l’occasion d’annoncer la structuration de la filière française des ultrasons médicaux.   
 
-  
-  
-  
+    
 
-  
-Le colloque sera animé par le journaliste scientifique Fabrice Papillon.  
-  
+  Le colloque sera animé par le journaliste scientifique Fabrice Papillon.   
 
-  
-  
-  
+    
 
-  
-Pour consulter le programme prévisionnel, répondre à l'Appel Manifestation
-d'Intérêt ou encore vous inscrire **avant le vendredi 28 octobre, veuillez
-consulter le lien suivant :**[**https://my.medicen.org/manifestations/27956/  
-**](https://my.medicen.org/manifestations/27956/)
+  Pour consulter le programme prévisionnel, répondre à l'Appel Manifestation d'Intérêt ou encore vous inscrire **avant le vendredi 28 octobre, veuillez consulter le lien suivant :**[**https://my.medicen.org/manifestations/27956/  **](https://my.medicen.org/manifestations/27956/)
 
-### **Hyacinthe Lacenne** - Nov 03, 2016 at 8:42 AM
+### **Hyacinthe** - 2016-11-03 at 8:42 AM
 
-Je viens d'être relancé pour le colloque du 15, si ca tente du monde ..  
-<http://www.medicen.org/evenements/colloque-les-ultrasons-en-france-
-innovations-pour-limagerie-medicale-et-la-therapie-en-2016/>
+Je viens d'être relancé pour le colloque du 15, si ca tente du monde ..  <http://www.medicen.org/evenements/colloque-les-ultrasons-en-france- innovations-pour-limagerie-medicale-et-la-therapie-en-2016/>
 
