--- a/bc3-data/42151643.md
+++ b/bc3-data/42151643.md
@@ -1,28 +1,16 @@
-#  Schéma important pour le WIKI qui demande retour avant vendredi matin
+# Schéma important pour le WIKI qui demande retour avant vendredi matin  - 2016-01-11
 
-Emilie Mayer posted this Jan 11, 2016 at 7:07 PM · 1 person applauded
+Voici le schéma "bête à corne" de la méthode "apte" qui récapitule la base du projet Echopen et explicite le pourquoi. Pourriez vous y jeter un coup d'oeil et le commenter avant vendredi matin?   Merci !  <https://docs.google.com/drawings/d/1nnm6XBpvT74xdEnMIAr6KTZ2bwj428GBi_LyP0ob40o/edit?usp=sharing>     De plus, n'hésitez pas à aller jeter un coup d'oeil à "Déclinaison du besoin médical en exigences techniques, dans la to do list, car j'ai mis quelques liens concernant les normes.
 
-Voici le schéma "bête à corne" de la méthode "apte" qui récapitule la base du
-projet Echopen et explicite le pourquoi. Pourriez vous y jeter un coup d'oeil
-et le commenter avant vendredi matin?  
-  
-Merci !  
-<https://docs.google.com/drawings/d/1nnm6XBpvT74xdEnMIAr6KTZ2bwj428GBi_LyP0ob40o/edit?usp=sharing>  
-  
-  
-De plus, n'hésitez pas à aller jeter un coup d'oeil à "Déclinaison du besoin
-médical en exigences techniques, dans la to do list, car j'ai mis quelques
-liens concernant les normes.
-
-### **Hyacinthe LICCIONI,** - Jan 11, 2016 at 10:05 PM
+### **Hyacinthe** - 2016-01-11 at 10:05 PM
 
 J'ai pas les accès... Normal?
 
-### **Emilie Mayer,** - Jan 12, 2016 at 9:22 AM
+### **Hyacinthe** - 2016-01-12 at 9:22 AM
 
 J'ai changé le lien, ça devrait marcher maintenant
 
-### **Hyacinthe** - Jan 12, 2016 at 9:34 AM
+### **Hyacinthe** - 2016-01-12 at 9:34 AM
 
 Sinon, voilà le schéma...
 
@@ -32,6 +20,5 @@ Sinon, voilà le schéma...
 
 ](bc3-raw/files/751401-capture-d-ecran-2016-01-12-a-10-32-27.png)
 
-[ Capture d’écran 2016-01-12 à 10.32.27.png  506 KB • Download
-](bc3-raw/files/751401-capture-d-ecran-2016-01-12-a-10-32-27.png)
+[Capture d’écran 2016-01-12 à 10.32.27.png 506 KB • Download](bc3-raw/files/751401-capture-d-ecran-2016-01-12-a-10-32-27.png)
 
