--- a/bc3-data/43981519.md
+++ b/bc3-data/43981519.md
@@ -1,65 +1,34 @@
-#  echopen wikipedia
+# echopen wikipedia  - 2016-01-14
 
-Hyacinthe Lacenne posted this Jan 14, 2016 at 10:02 AM
+hello tous, juste un clin d'oeil. je forwarde un mail échangé dans le cadre de la mailing list "librehealthcare" qui rassemble les libristes de la santé. J'ai rien dit ;)   \---------- Forwarded message ---------  From: Sébastien Jodogne &lt;[s.jodogne@chu.ulg.ac.be](mailto:s.jodogne@chu.ulg.ac.be)&gt;  Date: jeu. 14 janv. 2016 à 09:47  Subject: [LibreHealthcare] Wikipédia  To: &lt;[librehealthcare@medecinelibre.net](mailto:librehealthcare@medecinelibre.net)&gt;
 
-hello tous, juste un clin d'oeil. je forwarde un mail échangé dans le cadre de
-la mailing list "librehealthcare" qui rassemble les libristes de la santé.
-J'ai rien dit ;)  
-  
-\---------- Forwarded message ---------  
-From: Sébastien Jodogne
-&lt;[s.jodogne@chu.ulg.ac.be](mailto:s.jodogne@chu.ulg.ac.be)&gt;  
-Date: jeu. 14 janv. 2016 à 09:47  
-Subject: [LibreHealthcare] Wikipédia  
-To:
-&lt;[librehealthcare@medecinelibre.net](mailto:librehealthcare@medecinelibre.net)&gt;
+   Chers tous,   Je viens de découvrir l'existence sur Wikipédia en français d'une page qui énumère les logiciels libres pour le secteur médical :  <https://fr.wikipedia.org/wiki/Logiciel_libre_m%C3%A9dical>   Ce serait bien que nous l'enrichissions (par exemple en y ajoutant echoOpen).   Sébastien-
 
-  
-  
-Chers tous,  
-  
-Je viens de découvrir l'existence sur Wikipédia en français d'une page qui
-énumère les logiciels libres pour le secteur médical :  
-<https://fr.wikipedia.org/wiki/Logiciel_libre_m%C3%A9dical>  
-  
-Ce serait bien que nous l'enrichissions (par exemple en y ajoutant echoOpen).  
-  
-Sébastien-
+### **Hyacinthe** - 2016-01-14 at 10:05 AM
 
-### **hyacinthe,** - Jan 14, 2016 at 10:05 AM
+Sweet! Pour rappel, echopen est présent sur la page méta, de matériel médical libre: <https://fr.m.wikipedia.org/wiki/Mat%C3%A9riel_libre>  ;)
 
-Sweet! Pour rappel, echopen est présent sur la page méta, de matériel médical
-libre: <https://fr.m.wikipedia.org/wiki/Mat%C3%A9riel_libre>  
-;)
+### **Hyacinthe** - 2016-01-14 at 11:05 AM
 
-### **Hyacinthe** - Jan 14, 2016 at 11:05 AM
+Top. Du coup, pour éviter de se faire évincer si des liens trop proches sont fait entre les éditeurs de la page et l'équipe d'echopen, si les membres de libre healthcare peuvent poser les première Hyacinthes, ce serait sans doute une bonne manière pour nous ensuite de compléter.
 
-Top. Du coup, pour éviter de se faire évincer si des liens trop proches sont
-fait entre les éditeurs de la page et l'équipe d'echopen, si les membres de
-libre healthcare peuvent poser les première hyacinthes, ce serait sans doute une
-bonne manière pour nous ensuite de compléter.
-
-### **Hyacinthe Lacenne** - Jan 14, 2016 at 11:19 AM
+### **Hyacinthe** - 2016-01-14 at 11:19 AM
 
 C leur proposition et donc à eux de jouer ;)
 
-### **Hyacinthe** - Jan 14, 2016 at 11:22 AM
+### **Hyacinthe** - 2016-01-14 at 11:22 AM
 
-Ok. Mais ce ne vaudrait pas le coup de leur donner une réponse avec qq liens,
-pour trouver les éléments principaux ? Je ne sais pas si cela peut porter
-préjudice ou au contraire les aider... Je ne les connais pas suffisamment.  
-  
-A toi de voir ;)
+Ok. Mais ce ne vaudrait pas le coup de leur donner une réponse avec qq liens, pour trouver les éléments principaux ? Je ne sais pas si cela peut porter préjudice ou au contraire les aider... Je ne les connais pas suffisamment.   A toi de voir ;)
 
-### **Hyacinthe Lacenne** - Jan 14, 2016 at 11:23 AM
+### **Hyacinthe** - 2016-01-14 at 11:23 AM
 
 Je leur ai fait un mail pour leur dire que pour + d info, on est là;)
 
-### **Hyacinthe Lacenne** - Jan 14, 2016 at 7:50 PM
+### **Hyacinthe** - 2016-01-14 at 7:50 PM
 
 voilà on y est  ;) <https://fr.wikipedia.org/wiki/Logiciel_libre_m%C3%A9dical>
 
-### **Hyacinthe** - Jan 14, 2016 at 7:50 PM
+### **Hyacinthe** - 2016-01-14 at 7:50 PM
 
 Cool ;)
 
