--- a/bc3-data/45242248.md
+++ b/bc3-data/45242248.md
@@ -1,15 +1,4 @@
-#  retour newsletter Archived
+# retour newsletter Archived  - 2016-01-16
 
-Hyacinthe Lacenne posted this Jan 16, 2016 at 3:51 PM
-
-hello Emilie,  
-  
-merci pour la newsletter, qqs remarques de détail :  
-  
-"nous avons organisé"  
-"l'objectif a été atteint : les performances de l'application ont été
-multipliées par 10"  
-"provient d'une partie du corps : la main de Hyacinthe! "  
-  
-bon we;)
+hello Hyacinthe,   merci pour la newsletter, qqs remarques de détail :   "nous avons organisé"  "l'objectif a été atteint : les performances de l'application ont été multipliées par 10"  "provient d'une partie du corps : la main de Hyacinthe! "   bon we;)
 
