--- a/bc3-data/45743772.md
+++ b/bc3-data/45743772.md
@@ -1,26 +1,20 @@
-#  rencontre electronique
+# rencontre electronique  - 2016-01-18
 
-Hyacinthe Lacenne posted this Jan 18, 2016 at 10:28 AM · 1 person applauded
+bertrand (duplat) vient ce mercredi fin de mat avec un ingé/électronicien paraît-il de très high level -&gt; Jean-Christophe Billard, qui travaille dans les device santé et est intéressé par echOpen ;)
 
-bertrand (duplat) vient ce mercredi fin de mat avec un ingé/électronicien
-paraît-il de très high level -&gt; Jean-Christophe Billard, qui travaille dans
-les device santé et est intéressé par echOpen ;)
+### **Hyacinthe** - 2016-01-18 at 11:22 AM
 
-### **hyacinthe,** - Jan 18, 2016 at 11:22 AM
+Du très bon! Un gadz qui a fait un ecg malin, du hardware de a à z,de l'innovation, et un business model pour bitmakers qui est intéressant!
 
-Du très bon! Un gadz qui a fait un ecg malin, du hardware de a à z,de
-l'innovation, et un business model pour bitmakers qui est intéressant!
-
-### **Hyacinthe VINCENT,** - Jan 18, 2016 at 12:45 PM
+### **Hyacinthe** - 2016-01-18 at 12:45 PM
 
 Un autre gadz ... on est foutus !!!
 
-### **hyacinthe,** - Jan 18, 2016 at 2:13 PM
+### **Hyacinthe** - 2016-01-18 at 2:13 PM
 
 Ils sont partout !!
 
-### **hyacinthe,** - Jan 20, 2016 at 8:26 PM
+### **Hyacinthe** - 2016-01-20 at 8:26 PM
 
-On peut le contacter sans souci?  
-La rencontre s'est bien passée ?
+On peut le contacter sans souci?  La rencontre s'est bien passée ?
 
