--- a/bc3-data/47104524.md
+++ b/bc3-data/47104524.md
@@ -1,58 +1,34 @@
-#  Composants CMS - comment jouer avec
+# Composants CMS - comment jouer avec  - 2016-01-20
 
-hyacinthe posted this Jan 20, 2016 at 9:06 AM
+yop, il y a des trucs sympas pour faire du breadboard avec des SMT, des "PCB breakouts" avec ce genre de truc par exemple :<https://www.adafruit.com/products/1210>  Il y a aussi des outils un peu plus costaud pour tester ces mêmes circuits, ca se trouve aussi sur adafruit par exemple sur <https://www.adafruit.com/products/1281>.  Pour la soudure sur ces tailles, ca peut valoir le coup de trouver un bec de fer sympa pour souder les pattes individuellement (
 
-yop, il y a des trucs sympas pour faire du breadboard avec des SMT, des "PCB
-breakouts" avec ce genre de truc par exemple
-:<https://www.adafruit.com/products/1210>  
-Il y a aussi des outils un peu plus costaud pour tester ces mêmes circuits, ca
-se trouve aussi sur adafruit par exemple sur
-<https://www.adafruit.com/products/1281>.  
-Pour la soudure sur ces tailles, ca peut valoir le coup de trouver un bec de
-fer sympa pour souder les pattes individuellement (
+ <https://www.youtube.com/watch?v=ihoX7x0RBz8> ) ou plus large pour le faire comme un boeuf ( <https://www.youtube.com/watch?v=5uiroWBkdFY> )  Une mini intro assez cool en fait :<http://www.rhaaa.fr/les-cms-bah-en-fait- cest-pas-si-terrifiant-tutorial-inside>
 
- <https://www.youtube.com/watch?v=ihoX7x0RBz8> ) ou plus large pour le faire
-comme un boeuf ( <https://www.youtube.com/watch?v=5uiroWBkdFY> )  
-Une mini intro assez cool en fait :<http://www.rhaaa.fr/les-cms-bah-en-fait-
-cest-pas-si-terrifiant-tutorial-inside>
+ 
 
-  
+ 
 
-  
+  Ping  ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe
 
-  
-Ping  ![Hyacinthe KHOYRATEE, Electronique at
-echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe
+### **Hyacinthe** - 2016-01-20 at 10:00 AM
 
-### **Hyacinthe VINCENT,** - Jan 20, 2016 at 10:00 AM
+Oui, tu as raison, je crois qu'aujourd'hui il faut acquérir la compétence "CMS". J'ai même vu un blog d'un Fablab ou ils préconisait de ne faire que ça. Le pb c'est de passer du breadboard au PCB avec les mêmes composants. Mais avec les adaptateurs proposés par Adafruit  ça doit le faire. Faudrait essayer.   On trouve aussi ça :
 
-Oui, tu as raison, je crois qu'aujourd'hui il faut acquérir la compétence
-"CMS". J'ai même vu un blog d'un Fablab ou ils préconisait de ne faire que ça.
-Le pb c'est de passer du breadboard au PCB avec les mêmes composants. Mais
-avec les adaptateurs proposés par Adafruit  ça doit le faire. Faudrait
-essayer.  
-  
-On trouve aussi ça :
+ * <http://www.seeedstudio.com/depot/xQFP-breakout-board-08mm-p-757.html>  * <http://www.seeedstudio.com/depot/QFP-surface-mount-protoboard-065mm-p-785.html>
 
-  * <http://www.seeedstudio.com/depot/xQFP-breakout-board-08mm-p-757.html>
-  * <http://www.seeedstudio.com/depot/QFP-surface-mount-protoboard-065mm-p-785.html>
+### **Hyacinthe** - 2016-01-20 at 10:37 AM
 
-### **hyacinthe,** - Jan 20, 2016 at 10:37 AM
+Pour ça on peut chopper un fer approprié (50e?), du flux, et peut être un canon à air chaud (50e aussi) pour dessouder et récupérer des composants :)
 
-Pour ça on peut chopper un fer approprié (50e?), du flux, et peut être un
-canon à air chaud (50e aussi) pour dessouder et récupérer des composants :)
+### **Hyacinthe** - 2016-01-20 at 1:21 PM
 
-### **Hyacinthe KHOYRATEE,** - Jan 20, 2016 at 1:21 PM
+Hum intéressant tous ça!! On a reçu les VGA d'ailleurs, il manque juste des breakout pour boitier QSOP
 
-Hum intéressant tous ça!! On a reçu les VGA d'ailleurs, il manque juste des
-breakout pour boitier QSOP
-
-### **hyacinthe,** - Jan 20, 2016 at 1:58 PM
+### **Hyacinthe** - 2016-01-20 at 1:58 PM
 
 Adafruit ?
 
-### **Hyacinthe KHOYRATEE,** - Jan 20, 2016 at 4:55 PM
+### **Hyacinthe** - 2016-01-20 at 4:55 PM
 
-Je viens juste de regarder, je n'ai pas trouvé de breakout pour boitier QSOP
-20 broches...
+Je viens juste de regarder, je n'ai pas trouvé de breakout pour boitier QSOP 20 broches...
 
