--- a/bc3-data/47419431.md
+++ b/bc3-data/47419431.md
@@ -1,13 +1,4 @@
-#  Commande de composants
+# Commande de composants  - 2016-01-20
 
-Hyacinthe KHOYRATEE posted this Jan 20, 2016 at 5:00 PM
-
-Bonsoir à tous,  
-  
-Un ingénieur électronique m'a recommandé ce site ; <https://octopart.com/>  
-  
-Il permet de retrouver des composants et d'en faire un comparatif de prix
-selon le fournisseur.  
-  
-Enjoy ;)
+Bonsoir à tous,   Un ingénieur électronique m'a recommandé ce site ; <https://octopart.com/>   Il permet de retrouver des composants et d'en faire un comparatif de prix selon le fournisseur.   Enjoy ;)
 
