--- a/bc3-data/48742382.md
+++ b/bc3-data/48742382.md
@@ -1,23 +1,4 @@
-#  Onboarding JC Billard - électronique
+# Onboarding JC Billard - électronique  - 2016-01-22
 
-Hyacinthe Lacenne posted this Jan 22, 2016 at 10:02 AM
-
-Oyé,  
-  
-JC propose un rdv ce lundi en début d'am  
-  
-l'idée est de présenter à lui et aux ingé de bitmakers  
-  
-\- un point d'étape et autres éléments de contexte  
-\- les choix électroniques et leurs motivations pour les end-points de février
-et de Juin  
-  
-l'idée serait qu'on sorte avec un embryon de structuration de l'accompagnement
-d'ici à juin sur 3 sujets :  
-  
-\- FPGA  
-\- miniaturisation  
-\- dev d'1 kit  
-  
-@++
+Oyé,   JC propose un rdv ce lundi en début d'am   l'idée est de présenter à lui et aux ingé de bitmakers   \- un point d'étape et autres éléments de contexte  \- les choix électroniques et leurs motivations pour les end-points de février et de Juin   l'idée serait qu'on sorte avec un embryon de structuration de l'accompagnement d'ici à juin sur 3 sujets :   \- FPGA  \- miniaturisation  \- dev d'1 kit   @++
 
