--- a/bc3-data/48859979.md
+++ b/bc3-data/48859979.md
@@ -1,80 +1,44 @@
-#  Traduction du Wiki en aglais
+# Traduction du Wiki en aglais  - 2016-01-22
 
-Emilie Mayer posted this Jan 22, 2016 at 2:10 PM · 1 person applauded
+hello,   Je viens de réaliser que la page accueil du Wiki, n'est pas en anglais, problème non?
 
-hello,  
-  
-Je viens de réaliser que la page accueil du Wiki, n'est pas en anglais,
-problème non?
+### **Hyacinthe** - 2016-01-25 at 8:12 AM
 
-### **Hyacinthe Lacenne** - Jan 25, 2016 at 8:12 AM
+merci Hyacinthe de cette intiative. Btw, je suggèrerais que l'on fasse un appel à compétences sur notre page facebook. Qu'en dis-tu ?   A bientôt,  M
 
-merci Emilie de cette intiative. Btw, je suggèrerais que l'on fasse un appel à
-compétences sur notre page facebook. Qu'en dis-tu ?  
-  
-A bientôt,  
-M
+### **Hyacinthe** - 2016-01-25 at 9:06 AM
 
-### **hyacinthe,** - Jan 25, 2016 at 9:06 AM
+Sweet ! BTW, nos  belges ientnus au captec n'étaient-ils pas partant pour de la trad ?
 
-Sweet ! BTW, nos  belges ientnus au captec n'étaient-ils pas partant pour de
-la trad ?
-
-### **Hyacinthe Lacenne** - Jan 25, 2016 at 5:18 PM
+### **Hyacinthe** - 2016-01-25 at 5:18 PM
 
 yes, il faut qu'on relance -&gt; to do
 
-### **Emilie Mayer,** - Jan 25, 2016 at 6:13 PM
+### **Hyacinthe** - 2016-01-25 at 6:13 PM
 
 j'ai posté un msg Facebook
 
-### **Hyacinthe Lacenne** - Jan 26, 2016 at 6:17 PM
+### **Hyacinthe** - 2016-01-26 at 6:17 PM
 
-hello Emilie,  
-  
-on devrait avoir du renfort. je forwarde son mail - donc on devrait la croiser
-vendredi  
-  
-"Salut,  
-  
-Je voulais venir au prochaine rdv echopen (je ne sais pas quand c'est,
-mais...). Anyway, je suis conceptrice-redactrice anglophone pour les objets
-digitaux et je peux aider sur la traduction du wiki. Normalement je facture
-600 la journée pour cela, mais bon, comme j'etais deja interessée et puis j'ai
-un peu de temps. Voici mon LinkedIn si tu veux voir un peu :  
-  
-Catherine Phillips  
-Copywriter / Concepteur-Redacteur Publicité Integrée  
-<https://www.linkedin.com/profile/view?id=39217606>  
-  
-On peut en parler au prochain rdv du groupe si tu veux. Sinon... quand c'est ?  
-  
-:)"
+hello Hyacinthe,   on devrait avoir du renfort. je forwarde son mail - donc on devrait la croiser vendredi   "Salut,   Je voulais venir au prochaine rdv echopen (je ne sais pas quand c'est, mais...). Anyway, je suis conceptrice-redactrice anglophone pour les objets digitaux et je peux aider sur la traduction du wiki. Normalement je facture 600 la journée pour cela, mais bon, comme j'etais deja interessée et puis j'ai un peu de temps. Voici mon LinkedIn si tu veux voir un peu :   Catherine Phillips  Copywriter / Concepteur-Redacteur Publicité Integrée  <https://www.linkedin.com/profile/view?id=39217606>   On peut en parler au prochain rdv du groupe si tu veux. Sinon... quand c'est ?   :)"
 
-### **hyacinthe,** - Jan 26, 2016 at 7:17 PM
+### **Hyacinthe** - 2016-01-26 at 7:17 PM
 
 Heureusement qu'elle ne fait pas payer ;)
 
-### **hyacinthe,** - Jan 26, 2016 at 7:19 PM
+### **Hyacinthe** - 2016-01-26 at 7:19 PM
 
-Btw, quid d'un trasnl-athon ?  
-Même entre nous, booker 1 journée / s'entendre pour chacun passer 20 mins par
-semaine sur ce point ?
+Btw, quid d'un trasnl-athon ?  Même entre nous, booker 1 journée / s'entendre pour chacun passer 20 mins par semaine sur ce point ?
 
-### **Hyacinthe Lacenne** - Jan 26, 2016 at 7:26 PM
+### **Hyacinthe** - 2016-01-26 at 7:26 PM
 
 J adore l idée d un translathon ;)
 
-### **Hyacinthe VINCENT,** - Jan 27, 2016 at 8:47 AM
+### **Hyacinthe** - 2016-01-27 at 8:47 AM
 
-Oui, moi aussi j'aime l'idée.  
-On fait des binomes : un nul-ophone, un anglophone et un seul clavier. Comme
-ça le nul-ophone progresse et l'anglophone produit un anglais simple et
-compréhensible. Idéalementle nul-ophone devrait être l'expert du domaine
-concerné.
+Oui, moi aussi j'aime l'idée.  On fait des binomes : un nul-ophone, un anglophone et un seul clavier. Comme ça le nul-ophone progresse et l'anglophone produit un anglais simple et compréhensible. Idéalementle nul-ophone devrait être l'expert du domaine concerné.
 
-### **Emilie Mayer,** - Jan 27, 2016 at 9:58 AM
+### **Hyacinthe** - 2016-01-27 at 9:58 AM
 
-Tout ça me parait super :) ! Elle sera là vendredi? On peut éventuellement la
-mettre dans la boucle de l'orga d'un translaton?
+Tout ça me parait super :) ! Elle sera là vendredi? On peut éventuellement la mettre dans la boucle de l'orga d'un translaton?
 
