--- a/bc3-data/51173176.md
+++ b/bc3-data/51173176.md
@@ -1,22 +1,8 @@
-#  Séance Photo Pour Fabre Archived
+# Séance Photo Pour Fabre Archived  - 2016-01-26
 
-Hyacinthe posted this Jan 26, 2016 at 5:18 PM · 1 person applauded
+Hello à tous,   Je viens de discuter avec une photographe qui est passé nous voir de la part de la Fondation Fabre. Elle aimerait faire quelques images de ce que nous faisons et quelques portraits de nous ;)   Ce sera l'occasion pour nous d'avoir des images pour étayer ce que nous faisons et pour Fabre de pouvoir parler du projet dans leurs différents rapports.   Il y aurait deux passages :
 
-Hello à tous,  
-  
-Je viens de discuter avec une photographe qui est passé nous voir de la part
-de la Fondation Fabre. Elle aimerait faire quelques images de ce que nous
-faisons et quelques portraits de nous ;)  
-  
-Ce sera l'occasion pour nous d'avoir des images pour étayer ce que nous
-faisons et pour Fabre de pouvoir parler du projet dans leurs différents
-rapports.  
-  
-Il y aurait deux passages :
+ 1. Pour des images des activités + portraits   2. Pour des images des test avec notre proto
 
-  1. Pour des images des activités + portraits 
-  2. Pour des images des test avec notre proto
-
-  
-On attends son retour et nos dates pour caler ça.
+  On attends son retour et nos dates pour caler ça.
 
