--- a/bc3-data/51715416.md
+++ b/bc3-data/51715416.md
@@ -1,16 +1,4 @@
-#  point dev
+# point dev  - 2016-01-27
 
-Hyacinthe Lacenne posted this Jan 27, 2016 at 9:47 AM
-
-hello,  
-  
-juste un update sur le dev  
-  
-les deux juniors de l'epitech travaillent aujourd'hui à une implémentation
-native de scanconversion à partir d'OPenCV, une façon de les faire rentrer
-dans le projet et de continuer l'optimisation de la perf. Greg et moi
-accompagnons  
-  
-Greg est en train de tester l'alternative UDP/TCP car il constate pas mal de
-pertes de paquets en UDP. ON vous tient au jus ;)
+hello,   juste un update sur le dev   les deux juniors de l'epitech travaillent aujourd'hui à une implémentation native de scanconversion à partir d'OPenCV, une façon de les faire rentrer dans le projet et de continuer l'optimisation de la perf. Greg et moi accompagnons   Greg est en train de tester l'alternative UDP/TCP car il constate pas mal de pertes de paquets en UDP. ON vous tient au jus ;)
 
