--- a/bc3-data/55426441.md
+++ b/bc3-data/55426441.md
@@ -1,269 +1,112 @@
-#  un contributeur coréen ;)
+# un contributeur coréen ;)  - 2016-02-02
 
-Hyacinthe Lacenne posted this Feb 02, 2016 at 8:49 AM · 1 person applauded
+nous avons reçu une demande de support pour l'app android de la part de  Honey Durga Tiwari, pour être complet :   Ph.D. from Department of Electronic, Information and Communication Engineering, Konkuk University,  Assistant Professor in Department of Computer Science, Kwangwoon University, Seoul, S. Korea.   il veut displayer un flow de data sur l'app. -&gt; j'ai demandé + d'infos pour l'accompagner   une fois cela précisé, on échangera sur d'éventuelles interactions électroniques   -&gt; @Hyacinthe : à l'odj de la prochaine réu, demander si certains souhaitent être destinataires des mails de la boîte [contact@echopen.org](mailto:contact@echopen.org) de façon à suivre ce type d'échanges    @++
 
-nous avons reçu une demande de support pour l'app android de la part de  
-Honey Durga Tiwari, pour être complet :  
-  
-Ph.D. from Department of Electronic, Information and Communication
-Engineering, Konkuk University,  Assistant Professor in Department of Computer
-Science, Kwangwoon University, Seoul, S. Korea.  
-  
-il veut displayer un flow de data sur l'app. -&gt; j'ai demandé + d'infos pour
-l'accompagner  
-  
-une fois cela précisé, on échangera sur d'éventuelles interactions
-électroniques  
-  
--&gt; @hyacinthe : à l'odj de la prochaine réu, demander si certains souhaitent être destinataires des mails de la boîte [contact@echopen.org](mailto:contact@echopen.org) de façon à suivre ce type d'échanges   
-  
-@++
+### **Hyacinthe** - 2016-02-02 at 9:56 AM
 
-### **Hyacinthe** - Feb 02, 2016 at 9:56 AM
+top.   Pour l'adresse email contact, n'aurions nous pas intérêt à la connecter sur une sorte de mailing list dans laquelle nous pourrions lancer certains messages de basecamp en public link ?   Ce qui offre à tous ceux qui souhaitent répondre de se rendre sur le public link d'une discussion du Basecamp sans avoir besoin de connexion...   Bref, on voit ça à ce moment là.
 
-top.  
-  
-Pour l'adresse email contact, n'aurions nous pas intérêt à la connecter sur
-une sorte de mailing list dans laquelle nous pourrions lancer certains
-messages de basecamp en public link ?  
-  
-Ce qui offre à tous ceux qui souhaitent répondre de se rendre sur le public
-link d'une discussion du Basecamp sans avoir besoin de connexion...  
-  
-Bref, on voit ça à ce moment là.
+### **Hyacinthe** - 2016-02-02 at 10:03 AM
 
-### **hyacinthe,** - Feb 02, 2016 at 10:03 AM
+On pouvait forwarder automatiquement les    sur basecamp2, je ne sais pas  ça marche sur basecamp3.  Hyacinthe, tu sais si ya une adresse ?
 
-On pouvait forwarder automatiquement les    sur basecamp2, je ne sais pas  ça
-marche sur basecamp3.  
-Hyacinthe, tu sais si ya une adresse ?
+### **Hyacinthe** - 2016-02-02 at 10:38 AM
 
-### **hyacinthe,** - Feb 02, 2016 at 10:38 AM
+Sinon, @Hyacinthe, ça vaut pas le coup pour des gens en delocalise, de créer un emulateur qui stream des vraies donnés en boucle ? Histoire qu'ils puissent essayer sur une pseudo boucle loupée ?
 
-Sinon, @hyacinthe, ça vaut pas le coup pour des gens en delocalise, de créer un
-emulateur qui stream des vraies donnés en boucle ? Histoire qu'ils puissent
-essayer sur une pseudo boucle loupée ?
+### **Hyacinthe** - 2016-02-02 at 11:27 AM
 
-### **Hyacinthe Lacenne** - Feb 02, 2016 at 11:27 AM
+déjà proposé - voici le dernier échange en attendant d'organiser l'accès à ce type d'échange   @+   "Firstly, I wish to thank you for the quick and prompt reply.I will follow the steps mentioned in your mail to post the feedback on GitHub.
 
-déjà proposé - voici le dernier échange en attendant d'organiser l'accès à ce
-type d'échange  
-  
-@+  
-  
-"Firstly, I wish to thank you for the quick and prompt reply.I will follow
-the steps mentioned in your mail to post the feedback on GitHub.
+ 
 
-  
+I will also follow the DOC for OenCv integration in the project. As for the streaming data i mean the continuous data coming from a 16 element sensor probe which will correspondingly changing the display continuously.
 
-I will also follow the DOC for OenCv integration in the project. As for the
-streaming data i mean the continuous data coming from a 16 element sensor
-probe which will correspondingly changing the display continuously.
+I wonder if we will be able to keep the frame refresh rate high enough  given the high volume of data coming from sensor. I think that although we can do "scan conversion" with static data, the computation will limit the maximum refresh rate.However, I also think that first we may worry about accuracy of the display rather than speed at this moment.Hence, at the moment I require the help regarding the use of TCP connection for bringing in the sensor data at high speed to the handheld device and then using it with echOpen.At this moment i do not have the probe but my associates are working on designing such a probe.Hence, I am trying to run the echOpen  on a handheld device and bring the sensor data using TCP where the TCP server may be sitting on some local network where the sensor data is being refreshed continuously.
 
-I wonder if we will be able to keep the frame refresh rate high enough  given
-the high volume of data coming from sensor. I think that although we can do
-"scan conversion" with static data, the computation will limit the maximum
-refresh rate.However, I also think that first we may worry about accuracy of
-the display rather than speed at this moment.Hence, at the moment I require
-the help regarding the use of TCP connection for bringing in the sensor data
-at high speed to the handheld device and then using it with echOpen.At this
-moment i do not have the probe but my associates are working on designing such
-a probe.Hence, I am trying to run the echOpen  on a handheld device and bring
-the sensor data using TCP where the TCP server may be sitting on some local
-network where the sensor data is being refreshed continuously.
+Since we already have the TCP and UDP implementations such setup will be a test example for using TCP /UDP connection with echOpen.I shall be highly obliged if you could help me to set up and run such a simulation.
 
-Since we already have the TCP and UDP implementations such setup will be a
-test example for using TCP /UDP connection with echOpen.I shall be highly
-obliged if you could help me to set up and run such a simulation.
+I am extremely sorry for the inconvenience and thank you for the help and Once again thank you for you quick reply.Thank you,With regards,Yours sincerely,Honey Durga Tiwari
 
-I am extremely sorry for the inconvenience and thank you for the help and Once
-again thank you for you quick reply.Thank you,With regards,Yours
-sincerely,Honey Durga Tiwari
-
-"  
-  
-  
-Hi again Honey Durga Tiwari,  
-  
-If I understand well, you have some simulated data running on a local TCP
-server and you want to bring them in the app. If this is the case, you have
-indeed to follow the doc and then I think we'll have to interact together in
-order to fine tune the configuration settings that you'll find int the
-`Hyacinthes` class. Moreover our hyacinthes are set in 1 element probe context,
-so we should adapt them. We are at disposal to work on that.  
-  
-If you don't have any simulated data, we could work and ship to you a TCP
-server with fake data continuously running on it.  
-  
-By the way, we will release in one month the full ultrasound probe prototype -
-hardware+android app - perhaps we could share our knowledge about that. If so,
-we could organize a transpacific hangout. What do you think  ?
+"     Hi again Honey Durga Tiwari,   If I understand well, you have some simulated data running on a local TCP server and you want to bring them in the app. If this is the case, you have indeed to follow the doc and then I think we'll have to interact together in order to fine tune the configuration settings that you'll find int the `Hyacinthes` class. Moreover our Hyacinthes are set in 1 element probe context, so we should adapt them. We are at disposal to work on that.   If you don't have any simulated data, we could work and ship to you a TCP server with fake data continuously running on it.   By the way, we will release in one month the full ultrasound probe prototype - hardware+android app - perhaps we could share our knowledge about that. If so, we could organize a transpacific hangout. What do you think  ?
 
 …
 
-  
+ 
 
 Best regards,
 
 nowami
 
-### **hyacinthe,** - Feb 02, 2016 at 7:50 PM
+### **Hyacinthe** - 2016-02-02 at 7:50 PM
 
 Sweet !
 
-### **Hyacinthe Lacenne** - Feb 03, 2016 at 8:48 AM
+### **Hyacinthe** - 2016-02-03 at 8:48 AM
 
 la suite ;)
 
-  
-  
+   
 
-Le mer. 3 févr. 2016 à 05:41, Honey Durga Tiwari
-&lt;[hdurgatiwari@gmail.com](mailto:hdurgatiwari@gmail.com)&gt; a écrit :
+Le mer. 3 févr. 2016 à 05:41, Honey Durga Tiwari &lt;[hdurgatiwari@gmail.com](mailto:hdurgatiwari@gmail.com)&gt; a écrit :
 
-> Respected Sir,  
->  
-> Please accept my sincere thanks for sparring your most valuable time in
-answering my questions.  
->  
-> At the moment I do not have the server with sensor data. My original plan
-was to make a local server using some interface with MATLAB where I will model
-a simple sensor. Then connect my handheld device to get the sensor data from
-server using any wireless interface. Then use this sensor data for conversion
-to image and display it using some android application.  
->  
-> In the later stage my colleagues will develop a commercial probe which will
-send the data using TCP to any application which will do image conversion and
-display.  
->  
-> I completely understand that the explanation above is vague in every sense
-but it is just an overly simplified version of the plan.  
->  
-> From my end I will do whatever humanly possible to contribute for the
-development of echOpen. It will be an honor for me if I could be of any
-assistance.  
->  
-> My only request to you is for the help in setting the android studio
-environment and running the simulation with whatever input data available to
-us at the moment. As I continue to use and understand the system I will keep
-discussing and providing you the simulation results.  
->  
-> Although I am little bit bound by the funds available to me, in terms of
-education or work there is absolutely no bounds for sharing any kind of
-information. Hence please let me know the way you think I can work with you.  
->  
-> Once again I wish to thank you for all the help extended to me and I
-sincerely apologize for any inconvenience caused to you due to me.  
->  
-> Thanking you,  
->  
-> With regards,  
->  
-> Yours sincerely,  
->  
-> Honey Durga Tiwari
+> Respected Sir,  >  > Please accept my sincere thanks for sparring your most valuable time in answering my questions.  >  > At the moment I do not have the server with sensor data. My original plan was to make a local server using some interface with MATLAB where I will model a simple sensor. Then connect my handheld device to get the sensor data from server using any wireless interface. Then use this sensor data for conversion to image and display it using some android application.  >  > In the later stage my colleagues will develop a commercial probe which will send the data using TCP to any application which will do image conversion and display.  >  > I completely understand that the explanation above is vague in every sense but it is just an overly simplified version of the plan.  >  > From my end I will do whatever humanly possible to contribute for the development of echOpen. It will be an honor for me if I could be of any assistance.  >  > My only request to you is for the help in setting the android studio environment and running the simulation with whatever input data available to us at the moment. As I continue to use and understand the system I will keep discussing and providing you the simulation results.  >  > Although I am little bit bound by the funds available to me, in terms of education or work there is absolutely no bounds for sharing any kind of information. Hence please let me know the way you think I can work with you.  >  > Once again I wish to thank you for all the help extended to me and I sincerely apologize for any inconvenience caused to you due to me.  >  > Thanking you,  >  > With regards,  >  > Yours sincerely,  >  > Honey Durga Tiwari
 
-  
-et la réponse  
-  
-Dear Honey Durga Tiwari,
+  et la réponse   Dear Honey Durga Tiwari,
 
-  
-  
+   
 
 Thank you for your response ;)
 
-  
-  
+   
 
-I think the best way for us to help you on the TCP side would be to send us
-fake data of your TCP server and set correctly the hyacinthes.
+I think the best way for us to help you on the TCP side would be to send us fake data of your TCP server and set correctly the Hyacinthes.
 
-  
-  
+   
 
-What I propose  you is to have some skype meeting in order for me to show you
-what are the main configuration setting that need to be set
+What I propose  you is to have some skype meeting in order for me to show you what are the main configuration setting that need to be set
 
-in the `Hyacinthes` class. It will be the opportunity to present you the state
-of the art of our work and we will measure the interactions we can have.
+in the `Hyacinthes` class. It will be the opportunity to present you the state of the art of our work and we will measure the interactions we can have.
 
-  
-  
+   
 
-So it is my turn to thank you warmly for the help you want to give to our
-team.
+So it is my turn to thank you warmly for the help you want to give to our team.
 
-  
+ 
 
 Do you have any availability these days ?
 
-  
+ 
 
 Best regards,
 
 nowami
 
-### **hyacinthe,** - Feb 03, 2016 at 9:20 AM
+### **Hyacinthe** - 2016-02-03 at 9:20 AM
 
-Gaffe à la license donc, ils font un truc commercial, et tant que y'a pas de
-license sur le repo, ils peuvent capturer le code et le mettre sous leur
-licence ;)
+Gaffe à la license donc, ils font un truc commercial, et tant que y'a pas de license sur le repo, ils peuvent capturer le code et le mettre sous leur licence ;)
 
-### **Emilie Mayer,** - Feb 03, 2016 at 9:37 AM
+### **Hyacinthe** - 2016-02-03 at 9:37 AM
 
-Yes je me demande ce qu'ils font comme sonde exactement...   ![hyacinthe, hardware
-thinker at echopen](./../../zz_assets/images/avatars/782574.png) hyacinthe  je ne
-comprend pas ta phrase pas de licence sur le repo?
+Yes je me demande ce qu'ils font comme sonde exactement...   ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe  je ne comprend pas ta phrase pas de licence sur le repo?
 
-### **hyacinthe,** - Feb 04, 2016 at 5:33 AM
+### **Hyacinthe** - 2016-02-04 at 5:33 AM
 
-Le repository ne contenait pas de licence, le contenu n'était donc pas
-couvert, appropriable possiblement par qqun qui ne voudrait pas mettre le code
-sous license ouverte ;)
+Le repository ne contenait pas de licence, le contenu n'était donc pas couvert, appropriable possiblement par qqun qui ne voudrait pas mettre le code sous license ouverte ;)
 
-### **Hyacinthe Lacenne** - Feb 04, 2016 at 10:53 AM
+### **Hyacinthe** - 2016-02-04 at 10:53 AM
 
-hello,  
-  
-je ne comprends pas bien car le code de l'app est sous licence depuis qu'on a
-eu les éléments de jonathan.  
-![Hyacinthe LICCIONI, FPGA at
-echopen](./../../zz_assets/images/avatars/1249124.png) Hyacinthe   et  ![Hyacinthe,
-Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png)
-Hyacinthe  confirment que leur kit-soft est bien sous licence  
-  
-btw, selon jonathan, il s'agissait de mettre sous contrôle de licence la
-racine des repo  
-  
-@hyacinthe: qu'as tu précisément en tête ?  
-  
-@+
+hello,   je ne comprends pas bien car le code de l'app est sous licence depuis qu'on a eu les éléments de jonathan.  ![Hyacinthe, FPGA at echopen](./../../zz_assets/images/avatars/1249124.png) Hyacinthe   et  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  confirment que leur kit-soft est bien sous licence   btw, selon jonathan, il s'agissait de mettre sous contrôle de licence la racine des repo   @Hyacinthe: qu'as tu précisément en tête ?   @+
 
-### **hyacinthe,** - Feb 04, 2016 at 10:59 AM
+### **Hyacinthe** - 2016-02-04 at 10:59 AM
 
-My bad, la partie license du readme est vide, la mention de la license étant
-en tête de fichier :)  
-Mes xcuses les plus plates :  
-p  
-  
-Edit: a moins que la mention de le readme ait été ajoutée today ;)
+My bad, la partie license du readme est vide, la mention de la license étant en tête de fichier :)  Mes xcuses les plus plates :  p   Edit: a moins que la mention de le readme ait été ajoutée today ;)
 
-### **hyacinthe,** - Feb 04, 2016 at 12:26 PM
+### **Hyacinthe** - 2016-02-04 at 12:26 PM
 
-Pour clarifier comment faire, y'a la page gnu.org/licenses/gpl-
-faq.html#LicenceCopyOnly qui est bien faite -  
-Donc rajouter la mention dans le readme semble lever toute ambiguïté :)
+Pour clarifier comment faire, y'a la page gnu.org/licenses/gpl- faq.html#LicenceCopyOnly qui est bien faite -  Donc rajouter la mention dans le readme semble lever toute ambiguïté :)
 
-### **Hyacinthe Lacenne** - Feb 04, 2016 at 12:26 PM
+### **Hyacinthe** - 2016-02-04 at 12:26 PM
 
-en fait, hyacinthe a jouté les mentions dans les readme ce jour et du coup je
-les ai ajoutées dans les différents readme du soft  
-  
-mais à ma connaissance, il y a des des gros proj comme hadoop :
-<https://github.com/apache/hadoop>  
-  
-anyway, je ne connaissais pas ces usages donc updaté  
-  
-;)
+en fait, Hyacinthe a jouté les mentions dans les readme ce jour et du coup je les ai ajoutées dans les différents readme du soft   mais à ma connaissance, il y a des des gros proj comme hadoop : <https://github.com/apache/hadoop>   anyway, je ne connaissais pas ces usages donc updaté   ;)
 
