--- a/bc3-data/57197477.md
+++ b/bc3-data/57197477.md
@@ -1,41 +1,24 @@
-#  Traduction wiki
+# Traduction wiki  - 2016-02-04
 
-Hyacinthe Lacenne posted this Feb 04, 2016 at 10:48 AM · 1 person applauded
-
-deux traducteurs wiki fr-&gt;en se sont manifestés. ils vont commencer ce jour
-. Il s'agit de Catherine Philips et Nicolas Etaix  
-  
-je leur ai proposé pour commencer  
-  
-_la page de home_
+deux traducteurs wiki fr-&gt;en se sont manifestés. ils vont commencer ce jour . Il s'agit de Catherine Philips et Nicolas Etaix   je leur ai proposé pour commencer   _la page de home_
 
 <http://echopen.org/>
 
-  
+ 
 
 _la page de FAQ_
 
-  
+ 
 
 <http://echopen.org/index.php?title=FAQ>
 
-  
+ 
 
-_le groupe de pages correspond à l'onglet `Enjeux` sur la home (avec trad des
-ongles)_
+_le groupe de pages correspond à l'onglet `Enjeux` sur la home (avec trad des ongles)_
 
-<http://echopen.org/>  
-  
-@hyacinthe : tu devrais recevoir des demandes d'inscription  
-  
-@++
+<http://echopen.org/>   @Hyacinthe : tu devrais recevoir des demandes d'inscription   @++
 
-### **hyacinthe,** - Feb 04, 2016 at 11:05 AM
+### **Hyacinthe** - 2016-02-04 at 11:05 AM
 
-Sweet! Hyacinthe, le nom de Nicolas doit te rappeler qqchose :)  
-Si y'a un problème quelquonque avec les droits de ces deux là pendant une
-session hyacintheoffline , on est tous administrateurs donc on peut tous leur donner
-les droits à priori.  
-  
-Et faut surtout leur demander de confirmer leur e-mail :)
+Sweet! Hyacinthe, le nom de Nicolas doit te rappeler qqchose :)  Si y'a un problème quelquonque avec les droits de ces deux là pendant une session Hyacintheoffline , on est tous administrateurs donc on peut tous leur donner les droits à priori.   Et faut surtout leur demander de confirmer leur e-mail :)
 
