--- a/bc3-data/57318220.md
+++ b/bc3-data/57318220.md
@@ -1,17 +1,4 @@
-#  Licences echOpen
+# Licences echOpen  - 2016-02-04
 
-Hyacinthe posted this Feb 04, 2016 at 2:27 PM · 1 person applauded
-
-Les licences echopen, licences qui couvrent l'ensemble des travaux réalisés
-par la communauté sont :  
-\- Une licence Hardware (libre) disponible sur le
-[wiki](http://echopen.org/index.php?title=Licence_echopen)  
-\- Une licence Software (bsd / open) disponible sur le
-[github](https://github.com/echopen/echopen/blob/master/LICENSE)  
-  
-Nous avons clarifié la situation des licences ce matin dans les différents
-repo sur le github en ajoutant en plus les liens en tête de chaque ReadMe.  
-  
-Je vous invite à discuter des licences sur ce fil de discussion pour le cas ou
-vous auriez des questions.
+Les licences echopen, licences qui couvrent l'ensemble des travaux réalisés par la communauté sont :  \- Une licence Hardware (libre) disponible sur le [wiki](http://echopen.org/index.php?title=Licence_echopen)  \- Une licence Software (bsd / open) disponible sur le [github](https://github.com/echopen/echopen/blob/master/LICENSE)   Nous avons clarifié la situation des licences ce matin dans les différents repo sur le github en ajoutant en plus les liens en tête de chaque ReadMe.   Je vous invite à discuter des licences sur ce fil de discussion pour le cas ou vous auriez des questions.
 
