--- a/bc3-data/58040654.md
+++ b/bc3-data/58040654.md
@@ -1,196 +1,120 @@
-#  Veille echOpen
+# Veille echOpen  - 2016-02-05
 
-hyacinthe posted this Feb 05, 2016 at 12:29 PM · 1 person applauded
+Lu sur le Web :)   <http://blog.cecilemonteil.lequotidiendumedecin.fr/2016/02/03/et-si-demain- lechographie-devenait-un-jeu-denfant/>
 
-Lu sur le Web :)  
-  
-<http://blog.cecilemonteil.lequotidiendumedecin.fr/2016/02/03/et-si-demain-
-lechographie-devenait-un-jeu-denfant/>
+### **Hyacinthe** - 2016-02-05 at 12:38 PM
 
-### **Emilie Mayer,** - Feb 05, 2016 at 12:38 PM
+A mettre dans "on parle de nous" sur le wiki ;) Vous la connaissez? (elle est bien informée pour le 10 mars?
 
-A mettre dans "on parle de nous" sur le wiki ;) Vous la connaissez? (elle est
-bien informée pour le 10 mars?
-
-### **Hyacinthe Lacenne** - Feb 05, 2016 at 9:51 PM
+### **Hyacinthe** - 2016-02-05 at 9:51 PM
 
 oui j'ai vu ça... je ne savais pas qu'elle allait le bloguer
 
-### **Emilie Mayer,** - Feb 08, 2016 at 7:25 PM
+### **Hyacinthe** - 2016-02-08 at 7:25 PM
 
-Elle dit que le lumify est à 200 $, peut-être faudrait il actualiser nos
-données sur le wiki, où l'on écrit que les sondes actuelles coûtent 10 fois
-plus?
+Elle dit que le lumify est à 200 $, peut-être faudrait il actualiser nos données sur le wiki, où l'on écrit que les sondes actuelles coûtent 10 fois plus?
 
-### **Hyacinthe Lacenne** - Feb 08, 2016 at 10:53 PM
+### **Hyacinthe** - 2016-02-08 at 10:53 PM
 
 en fait c 200$ en location (par mois si je ne  m'abuse) ;)
 
-### **hyacinthe,** - Feb 09, 2016 at 7:54 AM
+### **Hyacinthe** - 2016-02-09 at 7:54 AM
 
-Rent a service, rather than buy an object. Smart - ca prévient l'obsolescence
-programmée.
+Rent a service, rather than buy an object. Smart - ca prévient l'obsolescence programmée.
 
-### **hyacinthe,** - Feb 09, 2016 at 8:26 AM
+### **Hyacinthe** - 2016-02-09 at 8:26 AM
 
-Sinon y'a des trucs cool qui sortent:  
-  
-<http://jewishbusinessnews.com/2016/02/08/israeli-technion-develops-small-
-portable-ultrasound-system-for-live-imaging/>
+Sinon y'a des trucs cool qui sortent:   <http://jewishbusinessnews.com/2016/02/08/israeli-technion-develops-small- portable-ultrasound-system-for-live-imaging/>
 
-### **Hyacinthe Lacenne** - Feb 16, 2016 at 6:06 PM
+### **Hyacinthe** - 2016-02-16 at 6:06 PM
 
-Des ressources pour la veille:  
-Dans le drive : echOpen\2. PROTOTYPAGE\articles\Echographe
-portable_ultraportable : ce dossier contient plusieurs specs d'ultraportables  
-Dans le drive tjrs, le benchmark de Na:
-<https://docs.google.com/spreadsheets/d/1DoB_r402ad38lLJ9d7Yscn8G-
-SH5KQb1geCV3MpepAo/edit?pli=1#gid=1179411353>
+Des ressources pour la veille:  Dans le drive : echOpen\2. PROTOTYPAGE\articles\Echographe portable_ultraportable : ce dossier contient plusieurs specs d'ultraportables  Dans le drive tjrs, le benchmark de Na: <https://docs.google.com/spreadsheets/d/1DoB_r402ad38lLJ9d7Yscn8G- SH5KQb1geCV3MpepAo/edit?pli=1#gid=1179411353>
 
 ![Cleardot](https://ssl.gstatic.com/ui/v1/icons/mail/images/cleardot.gif)
 
-### **Hyacinthe Lacenne** - Feb 16, 2016 at 6:50 PM
+### **Hyacinthe** - 2016-02-16 at 6:50 PM
 
-Ce qu'on veut faire :  
-<http://sci-hub.io/10.1109/ULTSYM.2015.0517>  
-  
-=)
+Ce qu'on veut faire :  <http://sci-hub.io/10.1109/ULTSYM.2015.0517>   =)
 
-### **Hyacinthe Lacenne** - Feb 16, 2016 at 6:59 PM
+### **Hyacinthe** - 2016-02-16 at 6:59 PM
 
-![Hyacinthe Lacenne, echopen](./../../zz_assets/images/avatars/782178.png)
-lacenne  : je ne sais pas si tu as vu, mais y'a des trucs funky. W. K. Kong,
-W. Lee, K. C. Kim, Y. Yoo, and T. –K. Song, “Implementation and optimization
-of ultrasound signal processing algorithms on mobile GPU,” Proc. SPIE Medical
-Imaging, pp. 90401F-90401F, 2014.
+![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne  : je ne sais pas si tu as vu, mais y'a des trucs funky. W. K. Kong, W. Lee, K. C. Kim, Y. Yoo, and T. –K. Song, “Implementation and optimization of ultrasound signal processing algorithms on mobile GPU,” Proc. SPIE Medical Imaging, pp. 90401F-90401F, 2014.
 
-### **Hyacinthe Lacenne** - Feb 16, 2016 at 8:41 PM
+### **Hyacinthe** - 2016-02-16 at 8:41 PM
 
 excellent - je vais checker ;)
 
-### **Hyacinthe Lacenne** - Feb 20, 2016 at 10:55 AM
+### **Hyacinthe** - 2016-02-20 at 10:55 AM
 
-greg parle d'echOpen - avec une majuscule grande comme un O -  dans
-10xmanagement ;) <http://www.10xmanagement.com/qa-interview-with-10xer-greg-
-sadetsky/>
+greg parle d'echOpen - avec une majuscule grande comme un O -  dans 10xmanagement ;) <http://www.10xmanagement.com/qa-interview-with-10xer-greg- sadetsky/>
 
-### **Hyacinthe Lacenne** - Feb 22, 2016 at 3:23 PM
+### **Hyacinthe** - 2016-02-22 at 3:23 PM
 
-![Hyacinthe LICCIONI, FPGA at
-echopen](./../../zz_assets/images/avatars/1249124.png) Hyacinthe  ![Hyacinthe
-Lacenne, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  ![Hyacinthe
-KHOYRATEE, Electronique at
-echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe  ![Hyacinthe
-VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  
-  
-du FPGA avec un IDE d'arduino et en open source - ca s'appelle
-[papilio](http://papilio.cc/)
+![Hyacinthe, FPGA at echopen](./../../zz_assets/images/avatars/1249124.png) Hyacinthe ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe ![Hyacinthe, Electronique at echopen](./../../zz_assets/images/avatars/1249123.png) Hyacinthe ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe   du FPGA avec un IDE d'arduino et en open source - ca s'appelle [papilio](http://papilio.cc/)
 
-### **Hyacinthe Lacenne** - Feb 22, 2016 at 3:30 PM
+### **Hyacinthe** - 2016-02-22 at 3:30 PM
 
-Pour compléter, il y a d'autres bouzins, du style LOGi ou Logi-Pi pour
-Raspberry ou LOGI Bone pour BBB =)  
-  
-Pour du vraiment mini tu as du Xula 2 qui est minus au possible =)  
-  
-A voir le compromis prix/board/capacité du fpga.
+Pour compléter, il y a d'autres bouzins, du style LOGi ou Logi-Pi pour Raspberry ou LOGI Bone pour BBB =)   Pour du vraiment mini tu as du Xula 2 qui est minus au possible =)   A voir le compromis prix/board/capacité du fpga.
 
-### **Muriel,** - Feb 25, 2016 at 8:48 PM
+### **Hyacinthe** - 2016-02-25 at 8:48 PM
 
-Date de lancement du Lumify en France : septembre 2016.  
-Les démarches d'enregistrement sont déjà commencées.  
-(info récupérée sur le stand Philips à la Journée d'Innovation en Santé du 23
-janvier à la Cité des Sciences et de l'Industrie )
+Date de lancement du Lumify en France : septembre 2016.  Les démarches d'enregistrement sont déjà commencées.  (info récupérée sur le stand Philips à la Journée d'Innovation en Santé du 23 janvier à la Cité des Sciences et de l'Industrie )
 
-### **Hyacinthe Lacenne** - Mar 01, 2016 at 12:24 AM
+### **Hyacinthe** - 2016-03-01 at 12:24 AM
 
-merci  ![Muriel, Contributeur méthodologie at
-echopen](./../../zz_assets/images/avatars/1269173.png) Muriel  on a encore 1
-peu  de marge ;)
+merci  ![Hyacinthe, Contributeur méthodologie at echopen](./../../zz_assets/images/avatars/1269173.png) Hyacinthe  on a encore 1 peu  de marge ;)
 
-### **Emilie Mayer,** - Mar 01, 2016 at 10:58 AM
+### **Hyacinthe** - 2016-03-01 at 10:58 AM
 
 De marge pour...?
 
-### **Hyacinthe Lacenne** - Mar 01, 2016 at 12:04 PM
+### **Hyacinthe** - 2016-03-01 at 12:04 PM
 
 De marge pour finaliste un outil pour septembre ;)
 
-### **Hyacinthe Lacenne** - Mar 03, 2016 at 2:18 PM
+### **Hyacinthe** - 2016-03-03 at 2:18 PM
 
-un post autour de l'open source hardware et d'un outil de documentation qui
-rapporté comme prometteur :  
-  
-[  
-http://blogs.plos.org/synbio/2016/03/01/open-source-hardware-is-an-
-opportunity-for-synthetic-biology-research-the-docubricks-approach-by-tobias-
-wenzel/  
-](http://blogs.plos.org/synbio/2016/03/01/open-source-hardware-is-an-
-opportunity-for-synthetic-biology-research-the-docubricks-approach-by-tobias-
-wenzel/)  
+un post autour de l'open source hardware et d'un outil de documentation qui rapporté comme prometteur :   [ http://blogs.plos.org/synbio/2016/03/01/open-source-hardware-is-an- opportunity-for-synthetic-biology-research-the-docubricks-approach-by-tobias- wenzel/ ](http://blogs.plos.org/synbio/2016/03/01/open-source-hardware-is-an- opportunity-for-synthetic-biology-research-the-docubricks-approach-by-tobias- wenzel/) 
 
-[  
-http://docubricks.com/  
-](http://docubricks.com/)
+[ http://docubricks.com/ ](http://docubricks.com/)
 
-### **Hyacinthe Lacenne** - Mar 09, 2016 at 10:20 AM
+### **Hyacinthe** - 2016-03-09 at 10:20 AM
 
-intéressant : <http://www.nature.com/news/open-hardware-pioneers-push-for-low-
-cost-lab-kit-1.19518>
+intéressant : <http://www.nature.com/news/open-hardware-pioneers-push-for-low- cost-lab-kit-1.19518>
 
-### **Hyacinthe** - Mar 21, 2016 at 1:31 PM
+### **Hyacinthe** - 2016-03-21 at 1:31 PM
 
-Je pose ça là !  
-  
-[http://www.fiercemedicaldevices.com/story/ge-healthcare-handheld-ultrasound-
-pilot-nhs-test-20m-nigerian-health-
-initia/2016-03-17?utm_medium=rss&amp;utm_source=rss&amp;utm_campaign=rss](http://www.fiercemedicaldevices.com/story
-/ge-healthcare-handheld-ultrasound-pilot-nhs-test-20m-nigerian-health-
-initia/2016-03-17?utm_medium=rss&utm_source=rss&utm_campaign=rss)
+Je pose ça là !   [http://www.fiercemedicaldevices.com/story/ge-healthcare-handheld-ultrasound- pilot-nhs-test-20m-nigerian-health- initia/2016-03-17?utm_medium=rss&amp;utm_source=rss&amp;utm_campaign=rss](http://www.fiercemedicaldevices.com/story /ge-healthcare-handheld-ultrasound-pilot-nhs-test-20m-nigerian-health- initia/2016-03-17?utm_medium=rss&utm_source=rss&utm_campaign=rss)
 
-### **Hyacinthe Lacenne** - Mar 21, 2016 at 4:20 PM
+### **Hyacinthe** - 2016-03-21 at 4:20 PM
 
-special  ![Hyacinthe VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  
-  
-après le dej avec Djalel &amp; Benjamin, où nous sommes convenus de chercher
-des datasets afin de pouvoir étancher la soif de data des learning machines  
-  
-voici un premier set de data ouvert d'images echo :
-<http://cimlaboratory.com/applications/thyroid/>.
+special  ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe   après le dej avec Hyacinthe &amp; Hyacinthe, où nous sommes convenus de chercher des datasets afin de pouvoir étancher la soif de data des learning machines   voici un premier set de data ouvert d'images echo : <http://cimlaboratory.com/applications/thyroid/>.
 
-  
+ 
 
-Il s'agit d'écho de la thyroïde, qui sont d'ailleurs annotées (tunmeurs
-malignes ou bénignes). L'objet de l'équipe qui a mis en ligne ce dataset est
-de faire de l'assistance dignanostique
+Il s'agit d'écho de la thyroïde, qui sont d'ailleurs annotées (tunmeurs malignes ou bénignes). L'objet de l'équipe qui a mis en ligne ce dataset est de faire de l'assistance dignanostique
 
-  
+ 
 
-<https://www.researchgate.net/publication
-/275340525_An_open_access_thyroid_ultrasound-image_Database>
+<https://www.researchgate.net/publication /275340525_An_open_access_thyroid_ultrasound-image_Database>
 
-  
+ 
 
 Par ailleurs, dans la pêche à l'info d'outils open source orientée imageries :
 
-  
-et des modèles de sondes 3D printables :
+  et des modèles de sondes 3D printables :
 
 <http://perk-software.cs.queensu.ca/plus/doc/nightly/modelcatalog/>
 
-un utilitaire de stockage et d'indexation :
-[http://www.midasplatform.org](http://www.midasplatform.org/)
+un utilitaire de stockage et d'indexation : [http://www.midasplatform.org](http://www.midasplatform.org/)
 
-un autre package open source, tout velu d'algorithmes:
-<https://www.assembla.com/spaces/plus/wiki>
+un autre package open source, tout velu d'algorithmes: <https://www.assembla.com/spaces/plus/wiki>
 
 et dans le même esprit : <https://gforge.ti.com/gf/project/med_ultrasound/>
 
-### **hyacinthe,** - Mar 24, 2016 at 9:45 AM
+### **Hyacinthe** - 2016-03-24 at 9:45 AM
 
-Elle est grosse la clarius..  
+Elle est grosse la clarius.. 
 
 [
 
@@ -198,37 +122,29 @@ Elle est grosse la clarius..
 
 ](bc3-raw/files/2899590-img_20160324_104447.jpg)
 
-[ IMG_20160324_104447.jpg  52.8 KB • Download
-](bc3-raw/files/2899590-img_20160324_104447.jpg)
+[IMG_20160324_104447.jpg 52.8 KB • Download](bc3-raw/files/2899590-img_20160324_104447.jpg)
 
-### **Hyacinthe VINCENT,** - Mar 24, 2016 at 11:30 AM
+### **Hyacinthe** - 2016-03-24 at 11:30 AM
 
 Oui mais y a tout dedans, y compris les batteries.
 
-### **Hyacinthe Lacenne** - May 17, 2016 at 1:38 PM
+### **Hyacinthe** - 2016-05-17 at 1:38 PM
 
-me revoilà  
-  
-<http://www.nextinpact.com/news/99854-raspberry-pi-raspbian-passe-au-
-bluetooth-zero-gagne-connecteur-pour-camera.htm>
+me revoilà   <http://www.nextinpact.com/news/99854-raspberry-pi-raspbian-passe-au- bluetooth-zero-gagne-connecteur-pour-camera.htm>
 
-### **Hyacinthe Lacenne** - May 24, 2016 at 2:55 PM
+### **Hyacinthe** - 2016-05-24 at 2:55 PM
 
-C'est ca ! Le zero que j'ai a son connecteur caméra, que je ne retrouve sur
-aucun layout (cf google image).  
-  
-Si on arrive à avoir une image préformée en amont pour simuler la caméro,
-c'est tout bénéf ;)
+C'est ca ! Le zero que j'ai a son connecteur caméra, que je ne retrouve sur aucun layout (cf google image).   Si on arrive à avoir une image préformée en amont pour simuler la caméro, c'est tout bénéf ;)
 
-### **hyacinthe,** - Jun 28, 2016 at 5:59 PM
+### **Hyacinthe** - 2016-06-28 at 5:59 PM
 
 Je viens de re-découvrir le VoCore... Intéressant, même si (assez)  limité
 
-### **Hyacinthe VINCENT,** - Jun 29, 2016 at 8:14 AM
+### **Hyacinthe** - 2016-06-29 at 8:14 AM
 
 Pas mal quand même <http://vonger.cn/?p=2383> mais faudrait virer le linux.
 
-### **Hyacinthe Lacenne** - Jun 29, 2016 at 8:20 AM
+### **Hyacinthe** - 2016-06-29 at 8:20 AM
 
 Ou mettre un xenomai / RTAI =)
 
