--- a/bc3-data/58798075.md
+++ b/bc3-data/58798075.md
@@ -1,208 +1,130 @@
-#  traduction wiki on drive
+# traduction wiki on drive  - 2016-02-07
 
-Hyacinthe Lacenne posted this Feb 07, 2016 at 12:08 AM · 1 person applauded
+hello à tous,   Catherine Philips et Nicolas Etaix ont fait un super travail de trad.   voici le dossier drive :
 
-hello à tous,  
-  
-Catherine Philips et Nicolas Etaix ont fait un super travail de trad.  
-  
-voici le dossier drive :
+  <https://drive.google.com/open?id=0B0V8htWBLPWBNk5OZThJMEtGWjg>
 
-  
-<https://drive.google.com/open?id=0B0V8htWBLPWBNk5OZThJMEtGWjg>
-
-  
-  
-leur avais proposé d'éditer directement le wiki mais il préfère une contre-
-validation sur le drive.  
-  
-leur avais proposé de commencer par  
-  
-_la page de home_
+   leur avais proposé d'éditer directement le wiki mais il préfère une contre- validation sur le drive.   leur avais proposé de commencer par   _la page de home_
 
 <http://echopen.org/>
 
-  
+ 
 
 _la page de FAQ_
 
-  
+ 
 
 <http://echopen.org/index.php?title=FAQ>
 
-  
+ 
 
 _le groupe de pages correspond à l'onglet `Enjeux` sur la home_
 
 <http://echopen.org/>
 
-### **hyacinthe,** - Feb 08, 2016 at 8:06 AM
+### **Hyacinthe** - 2016-02-08 at 8:06 AM
 
-On les ajoute à ce basecamp ? Je sais en tout cas qu'on gagnerait à y mettre
-Nicolas :)
+On les ajoute à ce basecamp ? Je sais en tout cas qu'on gagnerait à y mettre Nicolas :)
 
-### **Hyacinthe** - Feb 08, 2016 at 8:15 AM
+### **Hyacinthe** - 2016-02-08 at 8:15 AM
 
-Si vous voulez.  ![Hyacinthe Lacenne,
-echopen](./../../zz_assets/images/avatars/782178.png) lacenne  qu'en penses
-tu ? sont-ils de futures contributeurs réguliers ?  
-  
-De quel Nicolas parles tu ? Si c'est Nicolas Nallet, je peux lui demander s'il
-le souhaite.
+Si vous voulez.  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne  qu'en penses tu ? sont-ils de futures contributeurs réguliers ?   De quel Nicolas parles tu ? Si c'est Nicolas Nallet, je peux lui demander s'il le souhaite.
 
-### **Hyacinthe Lacenne** - Feb 08, 2016 at 8:39 AM
+### **Hyacinthe** - 2016-02-08 at 8:39 AM
 
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  je
-pense que  ![hyacinthe, hardware thinker at
-echopen](./../../zz_assets/images/avatars/782574.png) hyacinthe  parle des
-traducteurs du wiki : catehrine philips et nicolas etaix
+![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  je pense que  ![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe  parle des traducteurs du wiki : catehrine philips et nicolas etaix
 
-### **Hyacinthe** - Feb 08, 2016 at 9:34 AM
+### **Hyacinthe** - 2016-02-08 at 9:34 AM
 
-Ok. Merci. Du coup, pensez-vous qu'ils soient des contributeurs réguliers ?
-Afin de la ajouter. Merci.
+Ok. Merci. Du coup, pensez-vous qu'ils soient des contributeurs réguliers ? Afin de la ajouter. Merci.
 
-### **hyacinthe,** - Feb 08, 2016 at 10:28 AM
+### **Hyacinthe** - 2016-02-08 at 10:28 AM
 
 Nico faisait de l'ultrason, ça peut valoir le coup. No se pour Catherine.
 
-### **Hyacinthe** - Feb 08, 2016 at 10:30 AM
+### **Hyacinthe** - 2016-02-08 at 10:30 AM
 
 Ok, je l'ajoute mais est ce que quelqu'un peut me donner son e-mail ? Merci
 
-### **Hyacinthe Lacenne** - Feb 08, 2016 at 11:18 AM
+### **Hyacinthe** - 2016-02-08 at 11:18 AM
 
 voici : [zenico124@gmail.com](mailto:zenico124@gmail.com)
 
-### **Hyacinthe** - Feb 08, 2016 at 11:20 AM
+### **Hyacinthe** - 2016-02-08 at 11:20 AM
 
 Merci, c'est ajouté.
 
-### **Nicolas,** - Feb 08, 2016 at 12:56 PM
+### **Nicolas** - 2016-02-08 at 12:56 PM
 
 Bonjour!
 
-### **Hyacinthe** - Feb 08, 2016 at 3:41 PM
+### **Hyacinthe** - 2016-02-08 at 3:41 PM
 
-Bonjour  ![Nicolas, Tech & such at
-echopen](./../../zz_assets/images/avatars/1946185.png) Nicolas  bienvenue sur
-le basecamp echopen. A ta dispo si tu as des questions.
+Bonjour  ![Nicolas, Tech & such at echopen](./../../zz_assets/images/avatars/1946185.png) Nicolas  bienvenue sur le basecamp echopen. A ta dispo si tu as des questions.
 
-### **hyacinthe,** - Feb 08, 2016 at 5:48 PM
+### **Hyacinthe** - 2016-02-08 at 5:48 PM
 
 Kikoo @Nicolas ;)
 
-### **Nicolas,** - Feb 08, 2016 at 6:15 PM
+### **Nicolas** - 2016-02-08 at 6:15 PM
 
-Salut, maintenant que vous avez déplacé les fichiers sur votre drive je peux
-encore les modifier, mais je ne peux pas en ajouter. Est ce qu'il y a moyen
-d'avoir des droits pour cela. Sinon je peux mettre un lien vers les nouveaux
-fichiers ici peut etre?
+Salut, maintenant que vous avez déplacé les fichiers sur votre drive je peux encore les modifier, mais je ne peux pas en ajouter. Est ce qu'il y a moyen d'avoir des droits pour cela. Sinon je peux mettre un lien vers les nouveaux fichiers ici peut etre?
 
-### **Hyacinthe** - Feb 08, 2016 at 6:40 PM
+### **Hyacinthe** - 2016-02-08 at 6:40 PM
 
-![Nicolas, Tech & such at
-echopen](./../../zz_assets/images/avatars/1946185.png) Nicolas  je t'ai ajouté
-au dossier. Tu devrais alors pouvoir ajouter ce que tu veux.
+![Nicolas, Tech & such at echopen](./../../zz_assets/images/avatars/1946185.png) Nicolas  je t'ai ajouté au dossier. Tu devrais alors pouvoir ajouter ce que tu veux.
 
-### **Nicolas,** - Feb 08, 2016 at 6:44 PM
+### **Nicolas** - 2016-02-08 at 6:44 PM
 
 Merci, parfait!
 
-### **Nicolas,** - Feb 08, 2016 at 7:20 PM
+### **Nicolas** - 2016-02-08 at 7:20 PM
 
-Re-bonjour tout le monde,  
-Petite question pour les personnes ayant rédigé la page FAQ. Sur la partie "A
-quel stade de développement en est le projet?", il y a une phrase qui n'est
-pas finie j'ai l'impression: " Un module de formation de 48H à ce que nous
-appèlerons l’EchoSthétoscopie". Est ce que ce module est en cours de
-développement, ou bien est-il déjà prêt?  
-PS: Je ne sais si il vaut mieux commencer une nouvelle discussion pour chaque
-question ou bien juste ajouter toutes les questions ici...
+Re-bonjour tout le monde,  Petite question pour les personnes ayant rédigé la page FAQ. Sur la partie "A quel stade de développement en est le projet?", il y a une phrase qui n'est pas finie j'ai l'impression: " Un module de formation de 48H à ce que nous appèlerons l’EchoSthétoscopie". Est ce que ce module est en cours de développement, ou bien est-il déjà prêt?  PS: Je ne sais si il vaut mieux commencer une nouvelle discussion pour chaque question ou bien juste ajouter toutes les questions ici...
 
-### **Hyacinthe Lacenne** - Feb 08, 2016 at 10:57 PM
+### **Hyacinthe** - 2016-02-08 at 10:57 PM
 
-hello  ![Nicolas, Tech & such at
-echopen](./../../zz_assets/images/avatars/1946185.png) Nicolas ,  
-  
-le module de formation est en cours de conception en fait ;)  
-  
-par ailleurs, je ping  ![Hyacinthe,
-echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  pour la
-question que tu soulèves  
-  
-@++
+hello  ![Nicolas, Tech & such at echopen](./../../zz_assets/images/avatars/1946185.png) Nicolas ,   le module de formation est en cours de conception en fait ;)   par ailleurs, je ping  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  pour la question que tu soulèves   @++
 
-### **Nicolas,** - Feb 09, 2016 at 8:15 AM
+### **Nicolas** - 2016-02-09 at 8:15 AM
 
-Merci hyacinthe, tant que je suis sur le sujet, je viens de me rendre compte que
-j'ai peut etre surinterprete, le but c'est de faire la formation en 48h
-effective? Pour l'instant j'avais traduit par 2 days training, mais j'ai peut
-etre tord.
+Merci Hyacinthe, tant que je suis sur le sujet, je viens de me rendre compte que j'ai peut etre surinterprete, le but c'est de faire la formation en 48h effective? Pour l'instant j'avais traduit par 2 days training, mais j'ai peut etre tord.
 
-### **hyacinthe,** - Feb 09, 2016 at 8:18 AM
+### **Hyacinthe** - 2016-02-09 at 8:18 AM
 
 Sur un week-end c'est ça?
 
-### **Hyacinthe** - Feb 09, 2016 at 8:21 AM
+### **Hyacinthe** - 2016-02-09 at 8:21 AM
 
-Bonjour  ![Nicolas, Tech & such at
-echopen](./../../zz_assets/images/avatars/1946185.png) Nicolas  merci pour tes
-remaruqes.
+Bonjour  ![Nicolas, Tech & such at echopen](./../../zz_assets/images/avatars/1946185.png) Nicolas  merci pour tes remaruqes.
 
-  * La formation a pour ambition d'être effectuée en 48h  (soir un week-end par exemple) =&gt; 2 days training est parfait. 
-  * Pour l'utilisation de l'outils basecamp, l'idée est de réussir insérer les informations au bon endroit. S'il s'agit d'une remarques qui s'insère dans un fil de discussion, alors c'est parfait, sinon, il est intéressant de créer un nouveau fil, uniquement si la thématique mérite des échanges au sein de la communauté. Pour ce qui est des petites questions, nous avons un slack, sorte d'outils de chat dans lequel je viens de t'ajouter.
+ * La formation a pour ambition d'être effectuée en 48h  (soir un week-end par exemple) =&gt; 2 days training est parfait.   * Pour l'utilisation de l'outils basecamp, l'idée est de réussir insérer les informations au bon endroit. S'il s'agit d'une remarques qui s'insère dans un fil de discussion, alors c'est parfait, sinon, il est intéressant de créer un nouveau fil, uniquement si la thématique mérite des échanges au sein de la communauté. Pour ce qui est des petites questions, nous avons un slack, sorte d'outils de chat dans lequel je viens de t'ajouter.
 
-### **Emilie Mayer,** - Feb 09, 2016 at 11:03 AM
+### **Hyacinthe** - 2016-02-09 at 11:03 AM
 
-Notre formulation en français est en effet ambiguë, car formation en 48 h
-effective fait plutôt une semaine. On devrait remplacer 48h, par week-end.
+Notre formulation en français est en effet ambiguë, car formation en 48 h effective fait plutôt une semaine. On devrait remplacer 48h, par week-end.
 
-### **Hyacinthe Lacenne** - Feb 11, 2016 at 3:31 PM
+### **Hyacinthe** - 2016-02-11 at 3:31 PM
 
-hello à tous,  
-  
-après cette séquence d'échange pour vous dire que je vais commencer la
-migration des contenus stabilisés du drive vers le site : je commence par la
-home  
-  
-@++
+hello à tous,   après cette séquence d'échange pour vous dire que je vais commencer la migration des contenus stabilisés du drive vers le site : je commence par la home   @++
 
-### **hyacinthe,** - Feb 11, 2016 at 3:50 PM
+### **Hyacinthe** - 2016-02-11 at 3:50 PM
 
-Tu migrer bien la version anglaise dans l'espace langue française, et la
-version anglaise dans la zone anglophone ?
+Tu migrer bien la version anglaise dans l'espace langue française, et la version anglaise dans la zone anglophone ?
 
-### **Hyacinthe Lacenne** - Feb 11, 2016 at 4:07 PM
+### **Hyacinthe** - 2016-02-11 at 4:07 PM
 
-OMG, on a deux versions ? on avait dit en réu de bureau d'il y a 10 jours que
-l'on migrait tout le contenu non ?  
-bon, anyway on a une trace de tous les contenus, donc je peux les rétablir
+OMG, on a deux versions ? on avait dit en réu de bureau d'il y a 10 jours que l'on migrait tout le contenu non ?  bon, anyway on a une trace de tous les contenus, donc je peux les rétablir
 
-### **Nicolas,** - Feb 11, 2016 at 6:49 PM
+### **Nicolas** - 2016-02-11 at 6:49 PM
 
-Hello,  
-  
-Je me suis permis de changer le lien vers wikipedia pour open source hardware
-pour le wiki anglais.  
-  
-Nico
+Hello,   Je me suis permis de changer le lien vers wikipedia pour open source hardware pour le wiki anglais.   Nico
 
-### **hyacinthe,** - Feb 12, 2016 at 7:26 AM
+### **Hyacinthe** - 2016-02-12 at 7:26 AM
 
-En fait mediawiki propose de manière intégrée (et bien faite) la localisation
-des pages - cf la discussion sur Slack.  
-Ça permet de maintenir pour les pages du wiki les deux langues, et de servir
-la bonne version aux visiteurs :) pas besoin de le faire partout, seulement
-pour les pages ou y'a deux langues :)
+En fait mediawiki propose de manière intégrée (et bien faite) la localisation des pages - cf la discussion sur Slack.  Ça permet de maintenir pour les pages du wiki les deux langues, et de servir la bonne version aux visiteurs :) pas besoin de le faire partout, seulement pour les pages ou y'a deux langues :)
 
-### **Hyacinthe Lacenne** - Feb 12, 2016 at 10:46 PM
+### **Hyacinthe** - 2016-02-12 at 10:46 PM
 
-ah ok - simplement pour que je sois up-to-date, on est dac qu'on avait décidé
-de basculer toutes les nouvelles contrib en anglais.  
-Si c le cas, deux versions, ca peut donner une lecture un peu heurtée pour
-ceux qui, situés dans un set de pays francophone, verraient la langue changer
-d'une page à l'autre  
-  
-ceci étant, g sans doute raté le coche sur le slack, donc je m'adapte ;)
+ah ok - simplement pour que je sois up-to-date, on est dac qu'on avait décidé de basculer toutes les nouvelles contrib en anglais.  Si c le cas, deux versions, ca peut donner une lecture un peu heurtée pour ceux qui, situés dans un set de pays francophone, verraient la langue changer d'une page à l'autre   ceci étant, g sans doute raté le coche sur le slack, donc je m'adapte ;)
 
