--- a/bc3-data/61034890.md
+++ b/bc3-data/61034890.md
@@ -1,95 +1,30 @@
-#  queuing the docs
+# queuing the docs  - 2016-02-10
 
-Hyacinthe Lacenne posted this Feb 10, 2016 at 11:41 AM · 1 person applauded
+hello à tous,   Voici un message d'un doc ;) Comme pour Marie-Thérèse Barrellier, je vais lui proposer de passer nous voir - à défaut d'avoir un outil utilisable, il faudrait qu'on commence à les impliquer -&gt; IA Hyacinthe + Hyacinthe &amp; why not Moocification de la formation de Hyacinthe   Bonjour,  Médecin urgentiste SAMU-SMUR-Urgences, formé à l’écho (DIU d’Echographie Appliquée à l’Urgence), j’utilise la technique au quotidien:  abdo, voies urinaires, coeur, gros vaisseaux, musculo-squelletique, un peu de poumons et de DTC;  sans prétendre nullement au titre « d’expert ».  En quoi puis-je vous être utile?  Amicalement,  Alexandre Maisonneuve  [alexmaisonneuve@msn.com](mailto:alexmaisonneuve@msn.com)
 
-hello à tous,  
-  
-Voici un message d'un doc ;) Comme pour Marie-Thérèse Barrellier, je vais lui
-proposer de passer nous voir - à défaut d'avoir un outil utilisable, il
-faudrait qu'on commence à les impliquer -&gt; IA Djalel + hyacinthe &amp; why not
-Moocification de la formation de hyacinthe  
-  
-Bonjour,  
-Médecin urgentiste SAMU-SMUR-Urgences, formé à l’écho (DIU d’Echographie
-Appliquée à l’Urgence), j’utilise la technique au quotidien:  
-abdo, voies urinaires, coeur, gros vaisseaux, musculo-squelletique, un peu de
-poumons et de DTC;  
-sans prétendre nullement au titre « d’expert ».  
-En quoi puis-je vous être utile?  
-Amicalement,  
-Alexandre Maisonneuve  
-[alexmaisonneuve@msn.com](mailto:alexmaisonneuve@msn.com)
+### **Hyacinthe** - 2016-02-10 at 11:51 AM
 
-### **hyacinthe,** - Feb 10, 2016 at 11:51 AM
+On peut peut être ls impliquer sur des points qu'on devrait creuser avec l'optique "user" (en vrac):
 
-On peut peut être ls impliquer sur des points qu'on devrait creuser avec
-l'optique "user" (en vrac):
-
-  * Le cahier des charges de l'outil 
-  * Un appui à l'expression et l'analyse des besoins 
-  * Une cartographie plus poussée des usages
+ * Le cahier des charges de l'outil   * Un appui à l'expression et l'analyse des besoins   * Une cartographie plus poussée des usages
 
 What say?
 
-### **Hyacinthe Lacenne** - Feb 10, 2016 at 3:06 PM
+### **Hyacinthe** - 2016-02-10 at 3:06 PM
 
-sure - je mets cela dans le pipe ;) de toutes façons il faudra que l'on monte
-incessamment un CapMed
+sure - je mets cela dans le pipe ;) de toutes façons il faudra que l'on monte incessamment un CapMed
 
-### **Hyacinthe Lacenne** - Mar 02, 2016 at 11:30 AM
+### **Hyacinthe** - 2016-03-02 at 11:30 AM
 
-voici un mail que nous venons de recevoir ;)  
-  
-Bonjour
+voici un mail que nous venons de recevoir ;)   Bonjour
 
-  
-Je suis cadre supérieur de santé sur les HUPC issu de la filière rééducation,
-kinésithérapie.
+  Je suis cadre supérieur de santé sur les HUPC issu de la filière rééducation, kinésithérapie.
 
-  
-Je suis également responsable d’une organisation professionnelle de
-kinésithérapeutes et nous serions intéressés que vous présentiez l’echOpen au
-congrès de kinésithérapie que nous organisons début juin.
+  Je suis également responsable d’une organisation professionnelle de kinésithérapeutes et nous serions intéressés que vous présentiez l’echOpen au congrès de kinésithérapie que nous organisons début juin.
 
-  
-Nous pensons également que l’échographie pourrait apporter une aide pertinente
-aux professionnels dans leur rééducation.  
-  
-Je connais bien l’Hôtel Dieu pour y avoir exercé pendant 5 ans et je sollicite
-de vous y rencontrer, ou ailleurs, afin d’évoquer ces différents sujets.  
-  
-Bien cordialement  
-Didier LANTZ  
-06 61 44 09 41  
-  
-*HUPC dans le mail qui veut dire (Hôpitaux Universitaires Paris-Centre, Cochin, Broca, Hôtel-Dieu)
+  Nous pensons également que l’échographie pourrait apporter une aide pertinente aux professionnels dans leur rééducation.   Je connais bien l’Hôtel Dieu pour y avoir exercé pendant 5 ans et je sollicite de vous y rencontrer, ou ailleurs, afin d’évoquer ces différents sujets.   Bien cordialement  Didier LANTZ  06 61 44 09 41   *HUPC dans le mail qui veut dire (Hôpitaux Universitaires Paris-Centre, Cochin, Broca, Hôtel-Dieu)
 
-### **Hyacinthe Lacenne** - Mar 03, 2016 at 2:11 PM
+### **Hyacinthe** - 2016-03-03 at 2:11 PM
 
-hello,  
-  
-J'ai rencontré ce jour Didier Lantz. Gentilhomme cordial et attentif ;) il a
-officié à Cochin puis à l'Hôtel Dieu, ce qui me rappelle ;)  
-  
-Les usages qui intéresseraient les kiné sont pas nécessairement là où mes
-habitudes m'auraient porté :  
-  
-\- état de la vessie : pb important en rééducation neuro, vérifier si la
-vessie est +/- pleine, important dans les contextes de sondage)  
-\- au plan pulmonaire : s'assurer de la qualité des manoeuvres respiratoires  
-\- et bien entendu, l'ostéo-articulaire  
-  
-Il nous propose d'intervenir au congrès du syndicat dont il est président, le
-2 ou le 3 juin. Ca se passe à Aix-les-bains.  
-  
-Je lui proposé de participer au prochain CapMed. Il est Ok pour venir avec ses
-collègues praticiens dont un qui utilise l'échographie à usage d'exploration
-kinésithérapique  
-  
-Il nous propose de recruter des béta-testeurs  
-  
-Il nous propose le moment venu de diffuser l'info echOpen auprès des 35000
-contacts de sa profession  
-  
-oilà
+hello,   J'ai rencontré ce jour Didier Lantz. Gentilhomme cordial et attentif ;) il a officié à Cochin puis à l'Hôtel Dieu, ce qui me rappelle ;)   Les usages qui intéresseraient les kiné sont pas nécessairement là où mes habitudes m'auraient porté :   \- état de la vessie : pb important en rééducation neuro, vérifier si la vessie est +/- pleine, important dans les contextes de sondage)  \- au plan pulmonaire : s'assurer de la qualité des manoeuvres respiratoires  \- et bien entendu, l'ostéo-articulaire   Il nous propose d'intervenir au congrès du syndicat dont il est président, le 2 ou le 3 juin. Ca se passe à Aix-les-bains.   Je lui proposé de participer au prochain CapMed. Il est Ok pour venir avec ses collègues praticiens dont un qui utilise l'échographie à usage d'exploration kinésithérapique   Il nous propose de recruter des béta-testeurs   Il nous propose le moment venu de diffuser l'info echOpen auprès des 35000 contacts de sa profession   oilà
 
