--- a/bc3-data/61832272.md
+++ b/bc3-data/61832272.md
@@ -1,161 +1,62 @@
-#  Organisation Release 24 Mars Archived
+# Organisation Release 24 Mars Archived  - 2016-02-11
 
-Hyacinthe Lacenne posted this Feb 11, 2016 at 9:48 AM · 3 people applauded
+Le 24 mars prochain, nous présenterons le premier prototype echopen V1 fonctionnel. Je vous invite à ce que nous discutions de cet event sur ce fil de discussion.     hello, pour le 10 mars l'hôtel dieu nous mets à disposition l'amphi Lapersonne qui a une capacité d'accueil d'une centaine de personnes  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  je te le montre tout à l'heure s'il est ouvert   @++
 
-Le 24 mars prochain, nous présenterons le premier prototype echopen V1
-fonctionnel. Je vous invite à ce que nous discutions de cet event sur ce fil
-de discussion.  
-  
-  
-hello, pour le 10 mars l'hôtel dieu nous mets à disposition l'amphi Lapersonne
-qui a une capacité d'accueil d'une centaine de personnes  
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  je
-te le montre tout à l'heure s'il est ouvert  
-  
-@++
-
-### **hyacinthe,** - Feb 11, 2016 at 12:22 PM
+### **Hyacinthe** - 2016-02-11 at 12:22 PM
 
 Lolz on peut clapper plein de fois :)
 
-### **Hyacinthe** - Feb 16, 2016 at 9:47 AM
+### **Hyacinthe** - 2016-02-16 at 9:47 AM
 
-Bonjour à tous,  
-  
-Voici un
-[document](https://docs.google.com/document/d/1a0zdl_S_7NqN_43ucPCCLC85oOnPcukcj5HtsbgfaTc/edit#)
-pour l'organisation de la soirée du 10 mars prochain.  
-  
-=&gt;DeadLine pour vos remarque : A LA FIN DE LA SEMAINE (le 19.02.2016) pour
-valider les grandes lignes lundi prochain.
+Bonjour à tous,   Voici un [document](https://docs.google.com/document/d/1a0zdl_S_7NqN_43ucPCCLC85oOnPcukcj5HtsbgfaTc/edit#) pour l'organisation de la soirée du 10 mars prochain.   =&gt;DeadLine pour vos remarque : A LA FIN DE LA SEMAINE (le 19.02.2016) pour valider les grandes lignes lundi prochain.
 
-### **Emilie Mayer,** - Feb 16, 2016 at 10:24 AM
+### **Hyacinthe** - 2016-02-16 at 10:24 AM
 
 * On pourrait faire une petite explication de comment fonctionne l'échographie
 
-### **hyacinthe,** - Feb 16, 2016 at 9:06 PM
+### **Hyacinthe** - 2016-02-16 at 9:06 PM
 
 Au dernier captech,  yen avait une, à recycler?
 
-### **Hyacinthe** - Feb 28, 2016 at 8:12 AM
+### **Hyacinthe** - 2016-02-28 at 8:12 AM
 
-Hello,  
-  
-Le 10 mars approche... On va lancer les invitations des demain et mardi.  
-  
-1\. Invitations par email nominatives pour les "VIP" =&gt; lundi. Il s'agit
-des personnes qui se sont impliqués le plus dans le projet et de ceux qui
-pourraient avoir un rôle important dans les prochaines étapes.  
-  
-2\. Lien Eventbrite à diffuser par emailing à la communauté + event Facebook
-=&gt; Mardi, avec un nombre de places limitées en fonction des "VIP". Nous
-pourrons toujours changer le nombre sur l'invitation éventbrite.  
-  
-D'expérience, 10 jours avant est un bon timing...  
-  
-Ensuite, dans la semaine qui vient, nous affinerons le déroulé et organiserons
-la logistique (traiteur, etc.)  
-  
-Bon dimanche  
-  
-À demain
+Hello,   Le 10 mars approche... On va lancer les invitations des demain et mardi.   1\. Invitations par email nominatives pour les "VIP" =&gt; lundi. Il s'agit des personnes qui se sont impliqués le plus dans le projet et de ceux qui pourraient avoir un rôle important dans les prochaines étapes.   2\. Lien Eventbrite à diffuser par emailing à la communauté + event Facebook =&gt; Mardi, avec un nombre de places limitées en fonction des "VIP". Nous pourrons toujours changer le nombre sur l'invitation éventbrite.   D'expérience, 10 jours avant est un bon timing...   Ensuite, dans la semaine qui vient, nous affinerons le déroulé et organiserons la logistique (traiteur, etc.)   Bon dimanche   À demain
 
-### **Hyacinthe** - Mar 15, 2016 at 8:19 AM
+### **Hyacinthe** - 2016-03-15 at 8:19 AM
 
-Bonjour à tous,  
-  
-Afin d'inviter les gens à la soirée de présentation de la sonde echopen, voici
-l'image réalisée par Barabara que vous pouvez utiliser et diffuser.  
-  
-Merci d'ajouter les personnes invité dans la liste du le
-[Gdoc](https://docs.google.com/document/d/1a0zdl_S_7NqN_43ucPCCLC85oOnPcukcj5HtsbgfaTc/edit#)  
-  
-Le lien pour l'eventibrite : <https://www.eventbrite.fr/e/billets-echopen-est-
-de-sortie-23049885829>  
-  
-Enfin, il y a aussi un évènement Facebook.  
-  
-@+  
-  
+Bonjour à tous,   Afin d'inviter les gens à la soirée de présentation de la sonde echopen, voici l'image réalisée par Barabara que vous pouvez utiliser et diffuser.   Merci d'ajouter les personnes invité dans la liste du le [Gdoc](https://docs.google.com/document/d/1a0zdl_S_7NqN_43ucPCCLC85oOnPcukcj5HtsbgfaTc/edit#)   Le lien pour l'eventibrite : <https://www.eventbrite.fr/e/billets-echopen-est- de-sortie-23049885829>   Enfin, il y a aussi un évènement Facebook.   @+   
 
 [
 
-![](bc3-raw/files/2553919
--invitation-echopen-24-mars-2016.jpg)
+![](bc3-raw/files/2553919 -invitation-echopen-24-mars-2016.jpg)
 
-](bc3-raw/files/2553919
--invitation-echopen-24-mars-2016.jpg)
+](bc3-raw/files/2553919 -invitation-echopen-24-mars-2016.jpg)
 
-[ Invitation Echopen 24 Mars 2016.jpg  448 KB • Download
-](bc3-raw/files/2553919
--invitation-echopen-24-mars-2016.jpg)
+[Invitation Echopen 24 Mars 2016.jpg 448 KB • Download](bc3-raw/files/2553919 -invitation-echopen-24-mars-2016.jpg)
 
-### **hyacinthe,** - Mar 15, 2016 at 12:17 PM
+### **Hyacinthe** - 2016-03-15 at 12:17 PM
 
 Btw, toutes les images utilisables sont sur le drive?
 
-### **Hyacinthe** - Mar 15, 2016 at 12:22 PM
+### **Hyacinthe** - 2016-03-15 at 12:22 PM
 
-Pour le moment nous n'avons que celle ci mais les autres devraient arriver
-d'ici la fin de la semaine... Je les ajouterai sur le drive dès réception
+Pour le moment nous n'avons que celle ci mais les autres devraient arriver d'ici la fin de la semaine... Je les ajouterai sur le drive dès réception
 
-### **Hyacinthe** - Mar 23, 2016 at 11:01 AM
+### **Hyacinthe** - 2016-03-23 at 11:01 AM
 
-Hello all,  
-  
-Je suis en train de réaliser une présentation pour demain soir afin d'avoir un
-support visuel des différentes interventions.  
-  
-L'idéal serait que tout le monde participe ;) et puisse dire un petit mot sur
-ce qu'il a fait en 3 minutes...  
-  
-Le déroulé (pour le moment) devrait ressembler à quelque chose du genre :
+Hello all,   Je suis en train de réaliser une présentation pour demain soir afin d'avoir un support visuel des différentes interventions.   L'idéal serait que tout le monde participe ;) et puisse dire un petit mot sur ce qu'il a fait en 3 minutes...   Le déroulé (pour le moment) devrait ressembler à quelque chose du genre :
 
-  1. Mot d'acceuil - 2-3"
-  2. Présentation d'echopen (Hyacinthe) - 10"
-  3. Partenaires (APHP / Fondation Hyacinthe Fabre) - 15"
-  4. Concept d'echostéthoscopie (Hyacinthe B.) - 10-15"
-  5. Les grandes réalisations (**VOUS TOUS** ;)) - 30-35"
-    1. Emilie / Muriel : Archi &amp; doc
-    2. Hyacinthe : Transducteur (éventuellement avec Gérard et Hyacinthe Loyau qui devraient être présents)
-    3. Hyacinthe V. : Mécaniques 
-    4. Hyacinthe / Hyacinthe Li. : éléctonique 
-    5. Hyacinthe : Assemblage &amp; such
-    6. Hyacinthe : App
-    7. Mathieu : Interface
-    8. Hyacinthe : Murgen
-  6. Démonstration du dispositif =&gt; Tous ceux qui seront nécéssaires pour faire fonctionner la sonde - le temps qu'il faudra ;)
-  7. Q&amp;A avec la salle - 10 à 15"
-  8. Buffet. 
+ 1. Mot d'acceuil - 2-3"  2. Présentation d'echopen (Hyacinthe) - 10"  3. Partenaires (APHP / Fondation Hyacinthe Fabre) - 15"  4. Concept d'echostéthoscopie (Hyacinthe B.) - 10-15"  5. Les grandes réalisations (**VOUS TOUS** ;)) - 30-35"   1. Hyacinthe / Hyacinthe : Archi &amp; doc   2. Hyacinthe : Transducteur (éventuellement avec Gérard et Hyacinthe Loyau qui devraient être présents)   3. Hyacinthe V. : Mécaniques    4. Hyacinthe / Hyacinthe Li. : éléctonique    5. Hyacinthe : Assemblage &amp; such   6. Hyacinthe : App   7. Mathieu : Interface   8. Hyacinthe : Murgen  6. Démonstration du dispositif =&gt; Tous ceux qui seront nécéssaires pour faire fonctionner la sonde - le temps qu'il faudra ;)  7. Q&amp;A avec la salle - 10 à 15"  8. Buffet. 
 
-  
-Pour vos présentations (citées ci-dessus), j'ai préparé une slide (titre +
-image-s) que je vous enverrai ce soir et que je finaliserai demain dans la
-journée. Si vous souhaitez ajouter des détails, n'hésitez pas à m'envoyer vos
-contenu que je les intègre dans la présentation. Il s'agit en qq minutes de
-présenter ce que vous avez réalisé de manière simple et en s'adressant à un
-public non-expert.  
-  
-J'ai déjà reçu celle de Hyacinthe pour Murgen.  
-  
-A dispo
+  Pour vos présentations (citées ci-dessus), j'ai préparé une slide (titre + image-s) que je vous enverrai ce soir et que je finaliserai demain dans la journée. Si vous souhaitez ajouter des détails, n'hésitez pas à m'envoyer vos contenu que je les intègre dans la présentation. Il s'agit en qq minutes de présenter ce que vous avez réalisé de manière simple et en s'adressant à un public non-expert.   J'ai déjà reçu celle de Hyacinthe pour Murgen.   A dispo
 
-### **Hyacinthe Lacenne** - Mar 23, 2016 at 11:07 AM
+### **Hyacinthe** - 2016-03-23 at 11:07 AM
 
 de mon côté prévois plutôt 5mn !
 
-### **Hyacinthe** - Mar 23, 2016 at 6:34 PM
+### **Hyacinthe** - 2016-03-23 at 6:34 PM
 
-Bonsoir à tous,  
-  
-Voilà donc le draft de présentation avec l'ajout des éléments de Hyacinthe &amp;
-Hyacinthe. Il me manque encore des images, qui veindront demain, ainsi qu'une
-relecture  
-  
-Si vous avez des remarques, merci de vos retours. Les slides sont
-volontairement peu fournies pour laisser à chacun une part de liberté dans ses
-explications.  
-  
+Bonsoir à tous,   Voilà donc le draft de présentation avec l'ajout des éléments de Hyacinthe &amp; Hyacinthe. Il me manque encore des images, qui veindront demain, ainsi qu'une relecture   Si vous avez des remarques, merci de vos retours. Les slides sont volontairement peu fournies pour laisser à chacun une part de liberté dans ses explications.   
 
 [
 
@@ -163,37 +64,23 @@ explications.
 
 ](bc3-raw/files/2875588-echopen_presentation_24_mars_2016.pdf)
 
-[ echopen_presentation_24_mars_2016.pdf  11.2 MB • Download
-](bc3-raw/files/2875588-echopen_presentation_24_mars_2016.pdf)
+[echopen_presentation_24_mars_2016.pdf 11.2 MB • Download](bc3-raw/files/2875588-echopen_presentation_24_mars_2016.pdf)
 
-### **hyacinthe,** - Mar 23, 2016 at 8:17 PM
+### **Hyacinthe** - 2016-03-23 at 8:17 PM
 
-Top!  
-Pour l'organisation de demain, j'ai pu échanger vendredi contre jeudi, donc
-faites signe so ya besoin!
+Top!  Pour l'organisation de demain, j'ai pu échanger vendredi contre jeudi, donc faites signe so ya besoin!
 
-### **Hyacinthe VINCENT,** - Mar 23, 2016 at 9:48 PM
+### **Hyacinthe** - 2016-03-23 at 9:48 PM
 
-Beau boulot !  
-Qq petits pb dans la partie méca :
+Beau boulot !  Qq petits pb dans la partie méca :
 
-  1. un copier/coller intempestif p18 et p19 : retourne prendre les textes dans l'original
-  2. une faute p18 à "nouvelle**s** possibilités"
-  3. toutes mes photos sont très floues sur le PDF. Je ne sais pas ce que tu utilises comme outil de présentation mais essaye peut-être de réexporter les slides du drive dans un autre format, les importer dans ton outil et déplace les photos de mes slides importés vers tes slides. Comme ça elles devraient rester dans leur résolution maxi. Sinon, je peux te donner demain matin les originaux mais il faudra refaire qq recadrage. Tiens moi au courant.
+ 1. un copier/coller intempestif p18 et p19 : retourne prendre les textes dans l'original  2. une faute p18 à "nouvelle**s** possibilités"  3. toutes mes photos sont très floues sur le PDF. Je ne sais pas ce que tu utilises comme outil de présentation mais essaye peut-être de réexporter les slides du drive dans un autre format, les importer dans ton outil et déplace les photos de mes slides importés vers tes slides. Comme ça elles devraient rester dans leur résolution maxi. Sinon, je peux te donner demain matin les originaux mais il faudra refaire qq recadrage. Tiens moi au courant.
 
-### **Hyacinthe** - Mar 24, 2016 at 7:28 AM
+### **Hyacinthe** - 2016-03-24 at 7:28 AM
 
-Merci  ![Hyacinthe VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe , bien vue...
-Désolé pour ces boeugs. C'est corrigé.  
-En effet les photos sont un peu floues. Si tu m'envoies les originaux, je peux
-les intégrer dans la journée, j'ai des masques d'images sur les slides, ça
-devrait donc ne pas poser de soucis. J'ai exporté en pptx et intégré les
-éléments sur keynote.
+Merci  ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe , bien vue... Désolé pour ces boeugs. C'est corrigé.  En effet les photos sont un peu floues. Si tu m'envoies les originaux, je peux les intégrer dans la journée, j'ai des masques d'images sur les slides, ça devrait donc ne pas poser de soucis. J'ai exporté en pptx et intégré les éléments sur keynote.
 
-### **Emilie Mayer,** - Jun 02, 2016 at 9:54 AM
+### **Hyacinthe** - 2016-06-02 at 9:54 AM
 
-<http://www.fondationhyacinthefabre.org/fr/suivre-notre-action/echopen-lancement-
-du-premier-prototype-dechostethoscope-open-source-low-cost>  
-la fondation fabre parle du release.
+<http://www.fondationHyacinthefabre.org/fr/suivre-notre-action/echopen-lancement- du-premier-prototype-dechostethoscope-open-source-low-cost>  la fondation fabre parle du release.
 
