--- a/bc3-data/63875590.md
+++ b/bc3-data/63875590.md
@@ -1,41 +1,14 @@
-#  prod. echopen versionnée
+# prod. echopen versionnée  - 2016-02-15
 
-Hyacinthe Lacenne posted this Feb 15, 2016 at 9:09 AM · 1 person applauded
+hello à tous,   dans la suite des intuitions de  ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe   sur le versionning de toute la prod., vo[ICI](https://github.com/LibreHealthcare/LibreHealthcare)  l'example de librehealthcare   @++
 
-hello à tous,  
-  
-dans la suite des intuitions de  ![Hyacinthe VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe   sur le
-versionning de toute la prod.,
-vo[ICI](https://github.com/LibreHealthcare/LibreHealthcare)  
-l'example de librehealthcare  
-  
-@++
+### **Hyacinthe** - 2016-02-15 at 9:51 AM
 
-### **Hyacinthe VINCENT,** - Feb 15, 2016 at 9:51 AM
+Oui, c'est bien l'idée.  Juste un peu surpris par les fichiers "*.org" en plus des "*.md" mais Github à l'air de savoir les afficher ce qui est intéressant. Je ne connaissais pas ce format (wiki like).  Un petit coup de Google -&gt; <http://orgmode.org/fr/index.html> : ça à l'air intéressant !  C'est bien beau de découper toute la doc en pages/fiches liées par des tags et dans une syntaxe textuelle simple mais à un moment il faut générer un site web (ou un pdf, ou des slides, ...) avec des menus, des hyper liens, un template... "_Org mode"_ à l'air de se charger de ça (et de beaucoup d'autres choses aussi). Petit pb, ça a l'air d'être un package d'Emacs.  A voir si on trouverait un outil équivalent de génération de site web statique à partir de fichiers sources textuels mais moins exotique.
 
-Oui, c'est bien l'idée.  
-Juste un peu surpris par les fichiers "*.org" en plus des "*.md" mais Github à
-l'air de savoir les afficher ce qui est intéressant. Je ne connaissais pas ce
-format (wiki like).  
-Un petit coup de Google -&gt; <http://orgmode.org/fr/index.html> : ça à l'air
-intéressant !  
-C'est bien beau de découper toute la doc en pages/fiches liées par des tags
-et dans une syntaxe textuelle simple mais à un moment il faut générer un site
-web (ou un pdf, ou des slides, ...) avec des menus, des hyper liens, un
-template... "_Org mode"_ à l'air de se charger de ça (et de beaucoup d'autres
-choses aussi). Petit pb, ça a l'air d'être un package d'Emacs.  
-A voir si on trouverait un outil équivalent de génération de site web statique
-à partir de fichiers sources textuels mais moins exotique.
+ * Voir des choses autour de "_Pandoc_" qui, lui, sait convertir chaque page individuellement.  * Voir aussi <http://jekyllrb.com/> (là c'est du ruby).  * On préfère du python ... il suffit de demander : <http://hyde.github.io/> (<http://philipm.at/2011/jekyll_vs_hyde.html>).
 
-  * Voir des choses autour de "_Pandoc_" qui, lui, sait convertir chaque page individuellement.
-  * Voir aussi <http://jekyllrb.com/> (là c'est du ruby).
-  * On préfère du python ... il suffit de demander : <http://hyde.github.io/> (<http://philipm.at/2011/jekyll_vs_hyde.html>).
+### **Hyacinthe** - 2016-02-15 at 1:37 PM
 
-### **Hyacinthe VINCENT,** - Feb 15, 2016 at 1:37 PM
-
-Il ne faudra par perdre de vue que, si la doc est disséminée partout parmi les
-fichiers sources, l'outil de doc devra être capable de collecter les pages
-dans une arborescence quelconque et différente de la structure du site web à
-produire.
+Il ne faudra par perdre de vue que, si la doc est disséminée partout parmi les fichiers sources, l'outil de doc devra être capable de collecter les pages dans une arborescence quelconque et différente de la structure du site web à produire.
 
