--- a/bc3-data/68705722.md
+++ b/bc3-data/68705722.md
@@ -1,27 +1,4 @@
-#  rencontre CRI
+# rencontre CRI  - 2016-02-22
 
-Hyacinthe Lacenne posted this Feb 22, 2016 at 1:11 PM · 1 person applauded
-
-deuxième rencontre avec le CRI  
-  
-visite de l'Open Lab  
-\- par Kevin Lhost, électronicien qui fat des choses très rigolotes, notamment
-des détecteurs de mouvements open hardware - intéressant pour parkinson &amp;
-such  
-\- matos : plein d'imprimantes 3D avec plein de type matériaux, une découpe
-laser et des choses + spécialisées pour l'électronique  
-\- ouvert qd on veut : ce serait bien d'y confectionner notre boîte pour le 10
-mars  
-\- nous est proposé un hackathon sur un sujet de notre choix, autour de l'open
-hardware, fin mars avec leurs étudiants (licence, master, doctorants) assortis
-d'un mini-exposé sur le sujet  
-\-- je proposerai un hackathon méca / on ferait venir la team de l'AFORP  
-hyacinthe, tu voulais faire un tour là-bas, c qd tu veux !  
-  
-\- l'Open Lab migre à cochin au  mois d'avril, donc proposition d'installation
-d'une instance d'echopen, ils sont ok. Du coup, soit  
-\-- installation d'un des aspects : méca ou électronique  
-\-- soit une full install d'une instance genre murgen  
-en tout cas, l'orga d'un hackathon permettrait d'approfondir nos interactions
-et de trancher dans de bonnes conditions ce genre d'alternative
+deuxième rencontre avec le CRI   visite de l'Open Lab  \- par Kevin Lhost, électronicien qui fat des choses très rigolotes, notamment des détecteurs de mouvements open hardware - intéressant pour parkinson &amp; such  \- matos : plein d'imprimantes 3D avec plein de type matériaux, une découpe laser et des choses + spécialisées pour l'électronique  \- ouvert qd on veut : ce serait bien d'y confectionner notre boîte pour le 10 mars  \- nous est proposé un hackathon sur un sujet de notre choix, autour de l'open hardware, fin mars avec leurs étudiants (licence, master, doctorants) assortis d'un mini-exposé sur le sujet  \-- je proposerai un hackathon méca / on ferait venir la team de l'AFORP  Hyacinthe, tu voulais faire un tour là-bas, c qd tu veux !   \- l'Open Lab migre à cochin au  mois d'avril, donc proposition d'installation d'une instance d'echopen, ils sont ok. Du coup, soit  \-- installation d'un des aspects : méca ou électronique  \-- soit une full install d'une instance genre murgen  en tout cas, l'orga d'un hackathon permettrait d'approfondir nos interactions et de trancher dans de bonnes conditions ce genre d'alternative
 
