--- a/bc3-data/88261948.md
+++ b/bc3-data/88261948.md
@@ -1,84 +1,40 @@
-#  events
+# events  - 2016-03-19
 
-Hyacinthe Lacenne posted this Mar 19, 2016 at 7:14 PM · 1 person applauded
+la team de Tedx est revenu vers nous pour nous faire intervenir à l'occas de leur deuxième gros event de l'année : `l'échappée`   au pgm 3 jours : conf + ateliers de sensibilisation/onboarding (RH + financeurs) + rencontre.   parmi les conférenciers, la scène de la frenchtech. En principe, Peter Thiel fait la clôture   parmi les institutionnels qui débusque les bons projets : la fondation Bill &amp; Melinda Gates, Google, etc...   Et ça passe dans un château donc c rigolo
 
-la team de Tedx est revenu vers nous pour nous faire intervenir à l'occas de
-leur deuxième gros event de l'année : `l'échappée`  
-  
-au pgm 3 jours : conf + ateliers de sensibilisation/onboarding (RH +
-financeurs) + rencontre.  
-  
-parmi les conférenciers, la scène de la frenchtech. En principe, Peter Thiel
-fait la clôture  
-  
-parmi les institutionnels qui débusque les bons projets : la fondation Bill
-&amp; Melinda Gates, Google, etc...  
-  
-Et ça passe dans un château donc c rigolo
+### **Hyacinthe** - 2016-03-20 at 12:50 PM
 
-### **hyacinthe,** - Mar 20, 2016 at 12:50 PM
+Chouette ! C'est quand? Ça peut être sympa d'y aller en équipe si l'événement s'y prête :)
 
-Chouette ! C'est quand? Ça peut être sympa d'y aller en équipe si l'événement
-s'y prête :)
+### **Hyacinthe** - 2016-03-21 at 10:57 AM
 
-### **Hyacinthe Lacenne** - Mar 21, 2016 at 10:57 AM
+sure ! ;) ensuite je crois que le nb de billets est limité   en pcpe ce sont des keynotes en one-man dont le format 10' est réglé (comme ted) mais j'ai insisté sur la nature communautaire du projet et la nécessité que l'on soit plusieurs à le présenter - ils doivent me faire un retour - ce serait d'ailleurs pas mal qu'il y a ait une fille  ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe ;)
 
-sure ! ;) ensuite je crois que le nb de billets est limité  
-  
-en pcpe ce sont des keynotes en one-man dont le format 10' est réglé (comme
-ted) mais j'ai insisté sur la nature communautaire du projet et la nécessité
-que l'on soit plusieurs à le présenter - ils doivent me faire un retour - ce
-serait d'ailleurs pas mal qu'il y a ait une fille  ![Emilie Mayer, Community &
-knowledge  at echopen](./../../zz_assets/images/avatars/1269172.png) Emilie
-;)
-
-### **Emilie Mayer,** - Mar 21, 2016 at 1:45 PM
+### **Hyacinthe** - 2016-03-21 at 1:45 PM
 
 Motivée! Ce serait quand?
 
-### **Hyacinthe Lacenne** - Mar 21, 2016 at 2:28 PM
+### **Hyacinthe** - 2016-03-21 at 2:28 PM
 
 ce serait genre 28, 29 et 30 mai
 
-### **Hyacinthe Lacenne** - Apr 05, 2016 at 10:40 PM
+### **Hyacinthe** - 2016-04-05 at 10:40 PM
 
-hello,  
-  
-comme promis, le lien vers la hope conf  
-  
-<https://hopeconf.wordpress.com/>  
-  
-[mitch altman](https://fr.wikipedia.org/wiki/Mitch_Altman) est intéressé par
-echOpen ;)  
-  
-il s'agit de proposer avant la fin du we une propale de workshop  
-  
-ca serait rigolo d'y aller à plusieurs, ca se passe à NYC du 22 au 24 juillet  
-  
-@++
+hello,   comme promis, le lien vers la hope conf   <https://hopeconf.wordpress.com/>   [mitch altman](https://fr.wikipedia.org/wiki/Mitch_Altman) est intéressé par echOpen ;)   il s'agit de proposer avant la fin du we une propale de workshop   ca serait rigolo d'y aller à plusieurs, ca se passe à NYC du 22 au 24 juillet   @++
 
-### **Hyacinthe Lacenne** - Apr 06, 2016 at 6:29 PM
+### **Hyacinthe** - 2016-04-06 at 6:29 PM
 
-la deadline pour proposer un workshop est vendredi, si vous avez des
-suggestions, c le moment ;)
+la deadline pour proposer un workshop est vendredi, si vous avez des suggestions, c le moment ;)
 
-### **Emilie Mayer,** - Apr 08, 2016 at 9:06 AM
+### **Hyacinthe** - 2016-04-08 at 9:06 AM
 
 C'est à dire deadline pour proposer un workshop? A new York?
 
-### **Hyacinthe Lacenne** - Apr 25, 2016 at 8:04 AM
+### **Hyacinthe** - 2016-04-25 at 8:04 AM
 
-oui c cela, on a été relancé. le pb c que ca coûte cher d'y aller... mais si
-qqn se sent, je peux voir si on peut arranger cela
+oui c cela, on a été relancé. le pb c que ca coûte cher d'y aller... mais si qqn se sent, je peux voir si on peut arranger cela
 
-### **Hyacinthe Lacenne** - Apr 26, 2016 at 8:07 AM
+### **Hyacinthe** - 2016-04-26 at 8:07 AM
 
-hello,  
-  
-Luke Flegg du CollabCamp est venu vers nous. Il organise un  "[Collaboration
-Lab Camp Paris 2016](https://www.facebook.com/events/747763475367071/)", un
-event du 13 au 17 mai et souhaiterait héberger qqs events chez echopen  
-  
-1 skype est en cours d'organisation, si ca intéresse d'y participer, dites-moi
-;)
+hello,   Luke Flegg du CollabCamp est venu vers nous. Il organise un  "[Collaboration Lab Camp Paris 2016](https://www.facebook.com/events/747763475367071/)", un event du 13 au 17 mai et souhaiterait héberger qqs events chez echopen   1 skype est en cours d'organisation, si ca intéresse d'y participer, dites-moi ;)
 
