--- a/bc3-data/88851044.md
+++ b/bc3-data/88851044.md
@@ -1,78 +1,34 @@
-#  workshops communautaires
-
-Hyacinthe Lacenne posted this Mar 21, 2016 at 11:00 AM
+# workshops communautaires  - 2016-03-21
 
 fil de discussion autour des captech, capdev et autres hackathons
 
-### **Hyacinthe Lacenne** - Mar 21, 2016 at 11:05 AM
+### **Hyacinthe** - 2016-03-21 at 11:05 AM
 
-ce vendredi 18.03.16, rencontre avec Hyacinthe et le CRI - thème :
-makathon/mécathon  
-  
-\- ok pour un hackathon méca  
-\- thématiquer  
-\- public du CRI : de l'étudiant en master aux doctorants (+ difficle à
-mobliser mais étant donnée la nature du projet, ca devrait le faire) :
-formation techno-scientifique (dev, electro, gamers), designers...  
-\- thématique : 3 enjeux identifiés -&gt; conception mécanique, design de
-l'objet, publication d'un guide montage  
-\- date proposée : soit avant le 21 avril soit à compter de la mi-mai : car
-déménagement de l'Open Lab à Cochin. Etant donnés les contraintes de prépa, on
-est convenu de mi-mai  
-  
-btw, le matériel de l'Open Lab nous est ouvert et ce, notamment pour la
-fabrication de la boîte pour le 24 mars
+ce vendredi 18.03.16, rencontre avec Hyacinthe et le CRI - thème : makathon/mécathon   \- ok pour un hackathon méca  \- thématiquer  \- public du CRI : de l'étudiant en master aux doctorants (+ difficle à mobliser mais étant donnée la nature du projet, ca devrait le faire) : formation techno-scientifique (dev, electro, gamers), designers...  \- thématique : 3 enjeux identifiés -&gt; conception mécanique, design de l'objet, publication d'un guide montage  \- date proposée : soit avant le 21 avril soit à compter de la mi-mai : car déménagement de l'Open Lab à Cochin. Etant donnés les contraintes de prépa, on est convenu de mi-mai   btw, le matériel de l'Open Lab nous est ouvert et ce, notamment pour la fabrication de la boîte pour le 24 mars
 
-### **Hyacinthe VINCENT,** - Mar 21, 2016 at 12:31 PM
+### **Hyacinthe** - 2016-03-21 at 12:31 PM
 
 Et je suis resté un peu ensuite pour faire un tour du Fablab :
 
-  * Qq outils de découpe de bois.
-  * Impression 3D : filaire et résine polymérisée aux UV.
-  * Découpeuse laser.
-  * Bonne compétence de réalisation de circuits électroniques en CMS "à la plancha", ça n'a pas l'air si difficile, le résultat était nickel et ils sont prets à nous accompagner. Les circuits sont commandés en chine et livrés dans la semaine (40€ les 40 de 30x30 en double face, 5€ pce en 4 couches).
-  * Accessible aussi le WE.
+ * Qq outils de découpe de bois.  * Impression 3D : filaire et résine polymérisée aux UV.  * Découpeuse laser.  * Bonne compétence de réalisation de circuits électroniques en CMS "à la plancha", ça n'a pas l'air si difficile, le résultat était nickel et ils sont prets à nous accompagner. Les circuits sont commandés en chine et livrés dans la semaine (40€ les 40 de 30x30 en double face, 5€ pce en 4 couches).  * Accessible aussi le WE.
 
-### **Hyacinthe** - Mar 31, 2016 at 11:05 AM
+### **Hyacinthe** - 2016-03-31 at 11:05 AM
 
-Pour le Captech de mardi prochain :  
-Le document de base de référence est disponible
-[ici](https://docs.google.com/document/d/1vNT7Ir01gAAjsohgqN5a_Y9ZoAEBHPQmQlIxxvTKVGc/edit#).
-Pour ce qui est des points fonctions &amp; such, on voit cela demain matin
-avec  ![Emilie Mayer, Community & knowledge  at
-echopen](./../../zz_assets/images/avatars/1269172.png) Emilie  et  ![Muriel,
-Contributeur méthodologie at
-echopen](./../../zz_assets/images/avatars/1269173.png) Muriel . On finalise
-aujourd'hui avec  ![Hyacinthe, Danseur du ventre at
-echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  le schéma de la
-sonde.  
-  
-Vos remarques sont les bienvenues ;)
+Pour le Captech de mardi prochain :  Le document de base de référence est disponible [ici](https://docs.google.com/document/d/1vNT7Ir01gAAjsohgqN5a_Y9ZoAEBHPQmQlIxxvTKVGc/edit#). Pour ce qui est des points fonctions &amp; such, on voit cela demain matin avec  ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  et  ![Hyacinthe, Contributeur méthodologie at echopen](./../../zz_assets/images/avatars/1269173.png) Hyacinthe . On finalise aujourd'hui avec  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  le schéma de la sonde.   Vos remarques sont les bienvenues ;)
 
-### **Hyacinthe Lacenne** - Mar 31, 2016 at 8:23 PM
+### **Hyacinthe** - 2016-03-31 at 8:23 PM
 
-Merci!  
-J'ai avancé sur le doc.
+Merci!  J'ai avancé sur le doc.
 
-### **Hyacinthe** - Apr 02, 2016 at 11:05 AM
+### **Hyacinthe** - 2016-04-02 at 11:05 AM
 
-Bonjour à tous,  
-  
-En prévision du CAPTech de mardi prochain, voici les premiers éléments de
-présentation
+Bonjour à tous,   En prévision du CAPTech de mardi prochain, voici les premiers éléments de présentation
 
-  * Le [Schéma](https://docs.google.com/presentation/d/1X4QVfOYeUJSIhjSg8QRVOj-x31x2ZA7QWVpnQNl3qtY/edit#slide=id.p4) de la sonde (revu par  ![Hyacinthe VINCENT, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe ) que je mettrai en forme lundi après-midi sur la base du travail déjà réalisé par  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  puis avec  ![Emilie Mayer, Community & knowledge  at echopen](./../../zz_assets/images/avatars/1269172.png) Emilie  et  ![Muriel, Contributeur méthodologie at echopen](./../../zz_assets/images/avatars/1269173.png) Muriel  et parti du [tableau](https://docs.google.com/spreadsheets/d/17jtXg-r6_nDEFxN0xtRFjEYXCeVaxZG9clrJDgage0o/edit) général. 
-  * Nous parlerons aussi des aspects de documentation pour le quel  ![Emilie Mayer, Community & knowledge  at echopen](./../../zz_assets/images/avatars/1269172.png) Emilie  et  ![Muriel, Contributeur méthodologie at echopen](./../../zz_assets/images/avatars/1269173.png) Muriel  on commencé une [document](https://docs.google.com/document/d/11dJB4cTPcXkxdXE4P0HZj2o6fjAQtg2ZvGt33IAwT-s/edit#) que je vous invite à regarder et vos remarques sont les bienvenues. Notez que dans ce travail de documentation il est important que la lecture soit simple et qu'il y aura, à terme, des normes à respecter.  
+ * Le [Schéma](https://docs.google.com/presentation/d/1X4QVfOYeUJSIhjSg8QRVOj-x31x2ZA7QWVpnQNl3qtY/edit#slide=id.p4) de la sonde (revu par  ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe ) que je mettrai en forme lundi après-midi sur la base du travail déjà réalisé par  ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  puis avec  ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  et  ![Hyacinthe, Contributeur méthodologie at echopen](./../../zz_assets/images/avatars/1269173.png) Hyacinthe  et parti du [tableau](https://docs.google.com/spreadsheets/d/17jtXg-r6_nDEFxN0xtRFjEYXCeVaxZG9clrJDgage0o/edit) général.   * Nous parlerons aussi des aspects de documentation pour le quel  ![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  et  ![Hyacinthe, Contributeur méthodologie at echopen](./../../zz_assets/images/avatars/1269173.png) Hyacinthe  on commencé une [document](https://docs.google.com/document/d/11dJB4cTPcXkxdXE4P0HZj2o6fjAQtg2ZvGt33IAwT-s/edit#) que je vous invite à regarder et vos remarques sont les bienvenues. Notez que dans ce travail de documentation il est important que la lecture soit simple et qu'il y aura, à terme, des normes à respecter.  
 
-  
-Bonne journée à tous.
+  Bonne journée à tous.
 
-### **Hyacinthe Lacenne** - Apr 12, 2016 at 2:12 PM
+### **Hyacinthe** - 2016-04-12 at 2:12 PM
 
-![Hyacinthe VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  voici le gdoc
-d'  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe
-pour la prépa du hackaton méca ;)  
-  
-<https://docs.google.com/document/d/1T0rcg9NmNtdjPB8jdhmQ5RWkwCaVaP7IqTzbHIdKJgM/edit#heading=h.51pvtcdf4smh>
+![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  voici le gdoc d'  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe pour la prépa du hackaton méca ;)   <https://docs.google.com/document/d/1T0rcg9NmNtdjPB8jdhmQ5RWkwCaVaP7IqTzbHIdKJgM/edit#heading=h.51pvtcdf4smh>
 
