--- a/bc3-data/90548815.md
+++ b/bc3-data/90548815.md
@@ -1,13 +1,6 @@
-#  news again
+# news again  - 2016-03-23
 
-Hyacinthe Lacenne posted this Mar 23, 2016 at 1:18 AM · 4 people applauded
-
-02.10 à l'hôtel dieu, le 23.03.16, pour la première fois depuis notre début,
-echOpen observe une structure anatomique  
-  
-il s'agit de l'éminence thénar et hypothénar du sieur Hyacinthe : sans doute un
-fléchisseur profond, un court abducteur et un bout de scaphoïde  
-  
+02.10 à l'hôtel dieu, le 23.03.16, pour la première fois depuis notre début, echOpen observe une structure anatomique   il s'agit de l'éminence thénar et hypothénar du sieur Hyacinthe : sans doute un fléchisseur profond, un court abducteur et un bout de scaphoïde   
 
 [
 
@@ -15,23 +8,17 @@ fléchisseur profond, un court abducteur et un bout de scaphoïde
 
 ](bc3-raw/files/2844289-screenshot_2016-03-23-02-06-57.png)
 
-[ Screenshot_2016-03-23-02-06-57.png  193 KB • Download
-](bc3-raw/files/2844289-screenshot_2016-03-23-02-06-57.png)
+[Screenshot_2016-03-23-02-06-57.png 193 KB • Download](bc3-raw/files/2844289-screenshot_2016-03-23-02-06-57.png)
 
-  
-  
-;)
+   ;)
 
-### **hyacinthe,** - Mar 23, 2016 at 6:09 AM
+### **Hyacinthe** - 2016-03-23 at 6:09 AM
 
 Excellent !!!
 
-### **Hyacinthe Lacenne** - Mar 23, 2016 at 7:33 AM
+### **Hyacinthe** - 2016-03-23 at 7:33 AM
 
-Plus je la vois et plus c'est canon =)  
-  
-Hyacinthe, tu peux jouer sur les niveaux de gris de l'image pour améliorer la
-lisibilité de l'image?  
+Plus je la vois et plus c'est canon =)   Hyacinthe, tu peux jouer sur les niveaux de gris de l'image pour améliorer la lisibilité de l'image? 
 
 [
 
@@ -39,28 +26,23 @@ lisibilité de l'image?
 
 ](bc3-raw/files/2849167-image1.png)
 
-[ Image1.png  81.8 KB • Download
-](bc3-raw/files/2849167-image1.png)
+[Image1.png 81.8 KB • Download](bc3-raw/files/2849167-image1.png)
 
-### **Hyacinthe Lacenne** - Mar 23, 2016 at 8:14 AM
+### **Hyacinthe** - 2016-03-23 at 8:14 AM
 
 Yes je vais regarder ça aujourd hui ;)
 
-### **Hyacinthe VINCENT,** - Mar 23, 2016 at 8:22 AM
+### **Hyacinthe** - 2016-03-23 at 8:22 AM
 
-Impressionnant! Génial! Bluffant!  
-  
-Personnellement je ne reconnais pas Hyacinthe, mais c'est vrai je ne le connais
-pas assez intimement.
+Impressionnant! Génial! Bluffant!   Personnellement je ne reconnais pas Hyacinthe, mais c'est vrai je ne le connais pas assez intimement.
 
-### **Hyacinthe KHOYRATEE,** - Mar 23, 2016 at 8:30 AM
+### **Hyacinthe** - 2016-03-23 at 8:30 AM
 
-Ayant vécu dans la grotte avec lui, on voit un morceau de Hyacinthe dans le coin
-:p
+Ayant vécu dans la grotte avec lui, on voit un morceau de Hyacinthe dans le coin :p
 
-### **Hyacinthe Lacenne** - Apr 14, 2016 at 8:45 AM
+### **Hyacinthe** - 2016-04-14 at 8:45 AM
 
-hyacinthe debeir nous adresse un article sur echOpen dans un journal belge  
+Hyacinthe debeir nous adresse un article sur echOpen dans un journal belge 
 
 [
 
@@ -68,8 +50,7 @@ hyacinthe debeir nous adresse un article sur echOpen dans un journal belge
 
 ](bc3-raw/files/3384084-img_20160406_184742.jpg)
 
-[ IMG_20160406_184742.jpg  1.69 MB • Download
-](bc3-raw/files/3384084-img_20160406_184742.jpg)
+[IMG_20160406_184742.jpg 1.69 MB • Download](bc3-raw/files/3384084-img_20160406_184742.jpg)
 
 [
 
@@ -77,8 +58,7 @@ hyacinthe debeir nous adresse un article sur echOpen dans un journal belge
 
 ](bc3-raw/files/3384127-img_20160406_184832.jpg)
 
-[ IMG_20160406_184832.jpg  1.49 MB • Download
-](bc3-raw/files/3384127-img_20160406_184832.jpg)
+[IMG_20160406_184832.jpg 1.49 MB • Download](bc3-raw/files/3384127-img_20160406_184832.jpg)
 
 [
 
@@ -86,91 +66,57 @@ hyacinthe debeir nous adresse un article sur echOpen dans un journal belge
 
 ](bc3-raw/files/3384190-img_20160406_184840.jpg)
 
-[ IMG_20160406_184840.jpg  1.35 MB • Download
-](bc3-raw/files/3384190-img_20160406_184840.jpg)
+[IMG_20160406_184840.jpg 1.35 MB • Download](bc3-raw/files/3384190-img_20160406_184840.jpg)
 
-### **Hyacinthe Lacenne** - Apr 14, 2016 at 8:49 AM
+### **Hyacinthe** - 2016-04-14 at 8:49 AM
 
-Greg me fait savoir qu'il passe juin, juillet à Panam -&gt; bien trop bien  
-  
-Greg demande si on est OK pour l'accueillir en résidence again -&gt; ben en
-fait clairement  
-  
-Greg souhaite savoir si une chambre est dispo à lHD -&gt; je demande ce jour à
-la direction  
-  
-la direction me répond que l'HD peut l'accueillir en résidence dans une
-chambre cet été  
-  
-c pas de la bonne nouvelle ça ;)
+Greg me fait savoir qu'il passe juin, juillet à Panam -&gt; bien trop bien   Greg demande si on est OK pour l'accueillir en résidence again -&gt; ben en fait clairement   Greg souhaite savoir si une chambre est dispo à lHD -&gt; je demande ce jour à la direction   la direction me répond que l'HD peut l'accueillir en résidence dans une chambre cet été   c pas de la bonne nouvelle ça ;)
 
-### **Hyacinthe Lacenne** - Apr 14, 2016 at 8:51 AM
+### **Hyacinthe** - 2016-04-14 at 8:51 AM
 
 Excellent !
 
-### **Hyacinthe Lacenne** - Apr 25, 2016 at 8:06 AM
+### **Hyacinthe** - 2016-04-25 at 8:06 AM
 
-Greg sera donc en résidence du 24 juin au 24 juillet. Et la chambre est
-réservée à l'HD ;)
+Greg sera donc en résidence du 24 juin au 24 juillet. Et la chambre est réservée à l'HD ;)
 
-### **Hyacinthe Lacenne** - Apr 25, 2016 at 12:47 PM
+### **Hyacinthe** - 2016-04-25 at 12:47 PM
 
-voici un mail d'un doctorante en echo Virginie Grand-Perret et voici son
-profil [pro](http://fr.viadeo.com/fr/profile/virginie.grand-perret). vous
-tiens au courant  
-  
-Bonjour,
+voici un mail d'un doctorante en echo Virginie Grand-Perret et voici son profil [pro](http://fr.viadeo.com/fr/profile/virginie.grand-perret). vous tiens au courant   Bonjour,
 
-  
+ 
 
-je viens de découvrir votre projet Echopen, qui correspond à un rêve que j'ai
-eu en commençant ma thèse sur l'échographie de contraste cette année, aussi
-j'aurais voulu en savoir plus et vous rencontrer.
+je viens de découvrir votre projet Echopen, qui correspond à un rêve que j'ai eu en commençant ma thèse sur l'échographie de contraste cette année, aussi j'aurais voulu en savoir plus et vous rencontrer.
 
-  
+ 
 
 Seriez-vous disponible cette semaine prochaine pour en discuter ?
 
-  
+ 
 
 merci d'avance et bonne journée,
 
-### **Emilie Mayer,** - Apr 25, 2016 at 7:48 PM
+### **Hyacinthe** - 2016-04-25 at 7:48 PM
 
 C'est tooooop!
 
-### **Hyacinthe Lacenne** - May 03, 2016 at 4:49 PM
+### **Hyacinthe** - 2016-05-03 at 4:49 PM
 
-dans le cadre d'epidemium, rencontre de Soobash Daiboo, astrophysicien, data-
-analyst et qui connaît bien le traitement du signal, il est très intéressé par
-echOpen. Il passe nous voir mardi à 11H00. avis aux amateurs
+dans le cadre d'epidemium, rencontre de Soobash Daiboo, astrophysicien, data- analyst et qui connaît bien le traitement du signal, il est très intéressé par echOpen. Il passe nous voir mardi à 11H00. avis aux amateurs
 
-### **Hyacinthe Lacenne** - May 30, 2016 at 9:52 AM
+### **Hyacinthe** - 2016-05-30 at 9:52 AM
 
-on vous fait un debrief de ce riche we ce soir avec emilie ;)  
-  
-btw, cette semaine plusieurs entretiens pour les stagiaires et installation de
-la team traitement d'image  
-  
-btw, voici un message de frédéric amiel suite à notre échange sur la
-mobilisation d'étudiants de l'ISEP :  
-  
-"Bonjour Mr Lacenne ,
+on vous fait un debrief de ce riche we ce soir avec Hyacinthe ;)   btw, cette semaine plusieurs entretiens pour les stagiaires et installation de la team traitement d'image   btw, voici un message de frédéric amiel suite à notre échange sur la mobilisation d'étudiants de l'ISEP :   "Bonjour Mr Lacenne ,
 
-  
+ 
 
- Oui déjà vous avez rencontré Zahra Barwane qui devrait travailler plutôt sur
-l'algorithme de traitement. Sinon nous avons un groupe d'étudiant mastere mais
-le temps alloué pour leur projet ne leur permettra pas d'avancer
-significativement.
+ Oui déjà vous avez rencontré Zahra Barwane qui devrait travailler plutôt sur l'algorithme de traitement. Sinon nous avons un groupe d'étudiant mastere mais le temps alloué pour leur projet ne leur permettra pas d'avancer significativement.
 
-  
+ 
 
- Nous avons approvisionné le matériel de façon à préparer une version avec un
-FPGA contenant un processeur ARM, qui sera connecté à une carte de conversion
-rapide, le but étant :
+ Nous avons approvisionné le matériel de façon à préparer une version avec un FPGA contenant un processeur ARM, qui sera connecté à une carte de conversion rapide, le but étant :
 
-  
+ 
 
    - Dans le FPGA d'implanter une transformée permettant de "voir" la variation de fréquence (effet doppler). 
 
@@ -178,22 +124,19 @@ rapide, le but étant :
 
    - Dans le microcontroleur, de gérer la transmission Wifi vers la partie visualisation.
 
-  
+ 
 
-     Le microcontroleur embarque un Linux ce qui permet facilement tout type
-de transmission.
+     Le microcontroleur embarque un Linux ce qui permet facilement tout type de transmission.
 
-  
+ 
 
- Par contre nous n'aurons probablement pas de résultats significatifs cette
-année scolaire en raison du manque de ressource. (Les étudiants avaient déjà
-des projets).
+ Par contre nous n'aurons probablement pas de résultats significatifs cette année scolaire en raison du manque de ressource. (Les étudiants avaient déjà des projets).
 
-  
+ 
 
 De façon générale, nous avons défini les sujets suivants :
 
-  
+ 
 
      - Simulateur sous MATLAB : avec le propos de simuler le signal reçu en fonction d'une image paramétrant les milieux traversés. 
 
@@ -203,136 +146,79 @@ De façon générale, nous avons défini les sujets suivants :
 
      - Implantation avec la transmission Wifi.
 
-  
+ 
 
-Je compte participer à la prochaine grande réunion dans tous les cas de façon
-à rester informé. Nous devrions être plus efficace avec notre prochain lot
-d'étudiants.
+Je compte participer à la prochaine grande réunion dans tous les cas de façon à rester informé. Nous devrions être plus efficace avec notre prochain lot d'étudiants.
 
-  
+ 
 
              bien cordialement,
 
-  
+ 
 
-                     Frédéric AMIEL  
-"
+                     Frédéric AMIEL  "
 
-### **Hyacinthe** - May 30, 2016 at 9:54 AM
+### **Hyacinthe** - 2016-05-30 at 9:54 AM
 
-\+ un étudiant de l'UPMC qui souhaite faire un stage de 2 mois (email reçu ce
-matin) en attente d'une date d'entretien
+\+ un étudiant de l'UPMC qui souhaite faire un stage de 2 mois (email reçu ce matin) en attente d'une date d'entretien
 
-### **Hyacinthe Lacenne** - May 30, 2016 at 9:56 AM
+### **Hyacinthe** - 2016-05-30 at 9:56 AM
 
 Terrible !
 
-### **Hyacinthe VINCENT,** - May 30, 2016 at 10:04 AM
+### **Hyacinthe** - 2016-05-30 at 10:04 AM
 
-echOpen ... "intégrateur de compétences" ...  
-Je propose de mettre en place un réseau de deep learning non supervisé pour
-récupérer, classer, valoriser et intégrer toutes les contributions dans le
-dépot echOpen. ;-)
+echOpen ... "intégrateur de compétences" ...  Je propose de mettre en place un réseau de deep learning non supervisé pour récupérer, classer, valoriser et intégrer toutes les contributions dans le dépot echOpen. ;-)
 
-### **Hyacinthe Lacenne** - May 30, 2016 at 10:11 AM
+### **Hyacinthe** - 2016-05-30 at 10:11 AM
 
-hehe  
-  
-On aurait besoin d'un petit doc "annuaire" public avec les noms, skills,
-travaux et contacts de chacun -- style un MD qqpart ou une page sur le wiki !
+hehe   On aurait besoin d'un petit doc "annuaire" public avec les noms, skills, travaux et contacts de chacun -- style un MD qqpart ou une page sur le wiki !
 
-### **Hyacinthe Lacenne** - May 30, 2016 at 10:20 AM
+### **Hyacinthe** - 2016-05-30 at 10:20 AM
 
-Ces quelques points sont intégrés dans l'ODJ de ce soir, n'hésitez pas à
-compléter, c'est sur :
-<https://docs.google.com/document/d/1QvdCm2CYsujH8HKidR_w9i20oFb5dsWRUXKGGW8xfrw/edit>#
+Ces quelques points sont intégrés dans l'ODJ de ce soir, n'hésitez pas à compléter, c'est sur : <https://docs.google.com/document/d/1QvdCm2CYsujH8HKidR_w9i20oFb5dsWRUXKGGW8xfrw/edit>#
 
-### **Emilie Mayer,** - May 30, 2016 at 10:33 AM
+### **Hyacinthe** - 2016-05-30 at 10:33 AM
 
-Yes et il faut qu'on s'inscrive sur "je m'engage" pour récupérer plein de
-talents, il n'y a pas 10 000 associations tech :
-<https://jemengage.paris.fr/associations/inscription>[  
-  
-](https://jemengage.paris.fr/associations/inscription)A ce soir!
+Yes et il faut qu'on s'inscrive sur "je m'engage" pour récupérer plein de talents, il n'y a pas 10 000 associations tech : <https://jemengage.paris.fr/associations/inscription>[ ](https://jemengage.paris.fr/associations/inscription)A ce soir!
 
-### **Hyacinthe** - May 31, 2016 at 2:48 PM
+### **Hyacinthe** - 2016-05-31 at 2:48 PM
 
-Joris Jean-Baptiste, étudiant en 4ème année à l'UPMC va nous rejoindre pour un
-stage de 2 mois et sans doute travailler sur :
+Joris Jean-Baptiste, étudiant en 4ème année à l'UPMC va nous rejoindre pour un stage de 2 mois et sans doute travailler sur :
 
-  * ADC
-  * Micro-contrôleur 
-  * Electronique (modules) 
+ * ADC  * Micro-contrôleur   * Electronique (modules) 
 
-Cela cadre bien avec les exigences de son stage. On attends le retour de son
-établissement pour signer la convention. Il devrait nous rejoindre dès demain
-pour commencer à avancer à nos côtés.  
-  
-Ensuite,  ![Michel Bala, Electronique analogique  at
-echopen](./../../zz_assets/images/avatars/2008321.png) Michel  qui a fini se
-examens d'agrégation est passé aujourd'hui et va continuer l'aventure une
-partie de l'été ;)  
-  
-Enfin, nous attendons le retour de deux étudiants chinois (UPMC &amp; Spelec)
-qui pourraient eux aussi nous rejoindre pour deux mois.  
-  
-@+
+Cela cadre bien avec les exigences de son stage. On attends le retour de son établissement pour signer la convention. Il devrait nous rejoindre dès demain pour commencer à avancer à nos côtés.   Ensuite, ![Michel Bala, Electronique analogique at echopen](./../../zz_assets/images/avatars/2008321.png) Michel qui a fini se examens d'agrégation est passé aujourd'hui et va continuer l'aventure une partie de l'été ;)   Enfin, nous attendons le retour de deux étudiants chinois (UPMC &amp; Spelec) qui pourraient eux aussi nous rejoindre pour deux mois.   @+
 
-### **Hyacinthe Lacenne** - Jun 02, 2016 at 3:44 PM
+### **Hyacinthe** - 2016-06-02 at 3:44 PM
 
-quelques efforts plus tard  
-  
-Daniel Reinzine, qui pilote la partie SI de toute l’imagerie de l’AP-HP et
-Hyacinthe Naon, qui travaille à la R&amp;D du PACS (Picture Archiving and
-Communication System) de l'AP veulent nous aider ;))) je leu ai proposé de
-passer le 18  
-  
-au bonheur de la data, de l'IA et de  ![Hyacinthe VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  !  
-  
-btw, je vois Djalel demain, la team IA bientôt UP
+quelques efforts plus tard   Daniel Reinzine, qui pilote la partie SI de toute l’imagerie de l’AP-HP et Hyacinthe Naon, qui travaille à la R&amp;D du PACS (Picture Archiving and Communication System) de l'AP veulent nous aider ;))) je leu ai proposé de passer le 18   au bonheur de la data, de l'IA et de ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  !   btw, je vois Hyacinthe demain, la team IA bientôt UP
 
-### **Hyacinthe Lacenne** - Jun 22, 2016 at 7:32 AM
+### **Hyacinthe** - 2016-06-22 at 7:32 AM
 
-hello, un mot pour vous dire, que BitMakers s'installe cette semaine à l'hôtel
-dieu ;) dans l'intervalle de leur déménagement dans leurs locaux/et par la
-suite, on les a/aura avec nous dans l'open space !
+hello, un mot pour vous dire, que BitMakers s'installe cette semaine à l'hôtel dieu ;) dans l'intervalle de leur déménagement dans leurs locaux/et par la suite, on les a/aura avec nous dans l'open space !
 
-### **Hyacinthe Lacenne** - Jul 01, 2016 at 2:07 PM
+### **Hyacinthe** - 2016-07-01 at 2:07 PM
 
-sur la voie d'une résidence pour septembre-décembre, en partenariat avec
-makery : il s'agit d'une artiste japonaise (dont je ne me rappelle pas le nom,
-et qui semble-t-il est connu internationalement) dont les projets tournent
-autour des objets connectés et qui est connectée avec de drôles d'objets, bien
-mobiles, spécialistes de hardware ou software, dont il appert qu'ils seraient
-des pointures #42 dans leur domaines. Makery souhaite va déposer un projet de
-financement auprès du CNC, je vous tiens au courant
+sur la voie d'une résidence pour septembre-décembre, en partenariat avec makery : il s'agit d'une artiste japonaise (dont je ne me rappelle pas le nom, et qui semble-t-il est connu internationalement) dont les projets tournent autour des objets connectés et qui est connectée avec de drôles d'objets, bien mobiles, spécialistes de hardware ou software, dont il appert qu'ils seraient des pointures #42 dans leur domaines. Makery souhaite va déposer un projet de financement auprès du CNC, je vous tiens au courant
 
-### **Hyacinthe Lacenne** - Jul 07, 2016 at 5:05 PM
+### **Hyacinthe** - 2016-07-07 at 5:05 PM
 
 Qqs de news de la résidence :
 
-  
+ 
 
 \- l’hôtel dieu est toujours Ok pour accueil de résident.
 
-Je me suis entretenu avec de nombreux dev. indiens et pakistanais, les seuls à
-avoir répondu à un call pour résidence.
+Je me suis entretenu avec de nombreux dev. indiens et pakistanais, les seuls à avoir répondu à un call pour résidence.
 
-Celui qui sort du lot est Priynak Tiwari, un dev android indien qui travaille
-dans une start-up _mobil_isée sur les questions de violences faites aux
-femmes. Il est très motivé, m’a adressé les app qu’il a développée. Il fait le
-point sur la question des VISA et pourrait être là à compter de la mi-août
+Celui qui sort du lot est Priynak Tiwari, un dev android indien qui travaille dans une start-up _mobil_isée sur les questions de violences faites aux femmes. Il est très motivé, m’a adressé les app qu’il a développée. Il fait le point sur la question des VISA et pourrait être là à compter de la mi-août
 
-  
+ 
 
-Par ailleurs Makery est en train de monter sur un appel à subvention CNC qui
-serait un partenariat d’event avec eux. Au menu, une artiste et sa nuée de
-hackers, me dit-on de haut niveau,  qui seraient résidence chez nous.  Ca a
-l'air top !
+Par ailleurs Makery est en train de monter sur un appel à subvention CNC qui serait un partenariat d’event avec eux. Au menu, une artiste et sa nuée de hackers, me dit-on de haut niveau,  qui seraient résidence chez nous.  Ca a l'air top !
 
-  
-En pièce jointe, la proposition de Makery ;)
+  En pièce jointe, la proposition de Makery ;)
 
 [
 
@@ -340,296 +226,133 @@ En pièce jointe, la proposition de Makery ;)
 
 ](bc3-raw/files/7505625-b_art2m_opensourcebody.pdf)
 
-[ B_Art2M_opensourcebody.pdf  3.76 MB • Download
-](bc3-raw/files/7505625-b_art2m_opensourcebody.pdf)
+[B_Art2M_opensourcebody.pdf 3.76 MB • Download](bc3-raw/files/7505625-b_art2m_opensourcebody.pdf)
 
-### **Hyacinthe Lacenne** - Jul 07, 2016 at 6:29 PM
+### **Hyacinthe** - 2016-07-07 at 6:29 PM
 
-Top ce projet de programme, et encore plus si l'HD/APHP sont partants pour ça!  
-  
-Au summum, l'intégration des artistes dans le workflow :p
+Top ce projet de programme, et encore plus si l'HD/APHP sont partants pour ça!   Au summum, l'intégration des artistes dans le workflow :p
 
-### **Hyacinthe Lacenne** - Jul 11, 2016 at 1:51 PM
+### **Hyacinthe** - 2016-07-11 at 1:51 PM
 
-rdv chez Thalès le 26 août,  ![Hyacinthe Lacenne,
-echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  comme l'an dernier
-you in ?
+rdv chez Thalès le 26 août, ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  comme l'an dernier you in ?
 
-### **Hyacinthe Lacenne** - Jul 11, 2016 at 3:02 PM
+### **Hyacinthe** - 2016-07-11 at 3:02 PM
 
-Yes why not!  
-  
-C'est eux qui ont relancé? Si oui, ils ont un agenda spécifique en tete?
+Yes why not!   C'est eux qui ont relancé? Si oui, ils ont un agenda spécifique en tete?
 
-### **Hyacinthe Lacenne** - Jul 11, 2016 at 3:08 PM
+### **Hyacinthe** - 2016-07-11 at 3:08 PM
 
-ils ont répondu avec 3 mois de retard au mail d'update que je leur ai envoyé
-pour le 24 mars. Ensuite, je ne sais ce qu'ils ont exactement en tête, je
-pense qu'on peut leur formuler des besoins précis, maintenant qu'on est un peu
-plus crédible à leurs yeux
+ils ont répondu avec 3 mois de retard au mail d'update que je leur ai envoyé pour le 24 mars. Ensuite, je ne sais ce qu'ils ont exactement en tête, je pense qu'on peut leur formuler des besoins précis, maintenant qu'on est un peu plus crédible à leurs yeux
 
-### **Hyacinthe Lacenne** - Jul 13, 2016 at 8:21 AM
+### **Hyacinthe** - 2016-07-13 at 8:21 AM
 
-Mwep. Ils étaient de mémoire très axés software, ca peut valoir le coup de se
-demander ce qu'on pourrait leur demander.
+Mwep. Ils étaient de mémoire très axés software, ca peut valoir le coup de se demander ce qu'on pourrait leur demander.
 
-### **Hyacinthe Lacenne** - Jul 13, 2016 at 8:24 AM
+### **Hyacinthe** - 2016-07-13 at 8:24 AM
 
 Ah bah oui ça c sûr ;)
 
-### **Hyacinthe Lacenne** - Jul 21, 2016 at 11:23 AM
+### **Hyacinthe** - 2016-07-21 at 11:23 AM
 
 hello,
 
-  
+ 
 
 voici un mail reçu hier d’une MCUPH en médecine interne
 
 "
 
-j'ai lu ton interview ds la gazette de l'amicale des jeunes internistes, je
-suis MCU PH en médecine interne à tenon. On a une asociation qui a
-potentiellement des bourses à proposer à des jeunes sur des projets innovants
-comme ce que tu fais avec l'échostéhtoscopie. Aurais tu un moment à la rentrée
-pr en discuter par tel ou de visu afin que j'évalue les besoisn financiers
-d'internes qui voudraient travailler 1 ans sur un tel projet et voir comment
-on pourrai les aider de façon la plsu otpimale.
+j'ai lu ton interview ds la gazette de l'amicale des jeunes internistes, je suis MCU PH en médecine interne à tenon. On a une asociation qui a potentiellement des bourses à proposer à des jeunes sur des projets innovants comme ce que tu fais avec l'échostéhtoscopie. Aurais tu un moment à la rentrée pr en discuter par tel ou de visu afin que j'évalue les besoisn financiers d'internes qui voudraient travailler 1 ans sur un tel projet et voir comment on pourrai les aider de façon la plsu otpimale.
 
 “
 
-du coup, si ca le fait, on pourra établir cette ressource à la mise au point
-protocole / et le placer en référent/pivot avec pasteur, le département
-d’épidémiologie clinique et le pôle hospinomics de l’hôtel dieu qui travaille
-à l’évaluation médico-économique, et qui est intéressé par echOpen
+du coup, si ca le fait, on pourra établir cette ressource à la mise au point protocole / et le placer en référent/pivot avec pasteur, le département d’épidémiologie clinique et le pôle hospinomics de l’hôtel dieu qui travaille à l’évaluation médico-économique, et qui est intéressé par echOpen
 
-### **Hyacinthe Lacenne** - Jul 21, 2016 at 11:37 AM
+### **Hyacinthe** - 2016-07-21 at 11:37 AM
 
 Trop cool !!
 
-### **Hyacinthe Lacenne** - Sep 06, 2016 at 4:33 PM
+### **Hyacinthe** - 2016-09-06 at 4:33 PM
 
-super visite de Shu Lea Cheang, une artiste qui va faire un projet de
-performance autour d'echOpen : echo. de femmes enceintes et convertir les
-mouvements en une love song algorithmique  
-  
-3 de ses complices, electroniciens / hackers seront en résidence à l'Hôtel
-Dieu eet l'aideront à programmer l'ensemble  
-  
-echOpen + makery ont déposé une demande de subventions au CNC -&gt; réponse à
-la fin du mois  
-  
-et Shu Lea Cheang devrait commencer à travailler avec nous en Octobre
+super visite de Shu Lea Cheang, une artiste qui va faire un projet de performance autour d'echOpen : echo. de femmes enceintes et convertir les mouvements en une love song algorithmique   3 de ses complices, electroniciens / hackers seront en résidence à l'Hôtel Dieu eet l'aideront à programmer l'ensemble   echOpen + makery ont déposé une demande de subventions au CNC -&gt; réponse à la fin du mois   et Shu Lea Cheang devrait commencer à travailler avec nous en Octobre
 
-### **Hyacinthe Lacenne** - Sep 12, 2016 at 10:24 AM
+### **Hyacinthe** - 2016-09-12 at 10:24 AM
 
-rdv ce matin avec le CEO de Qwant, et son project manager wiz  ![Hyacinthe,
-echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe . Pour mémoire
-Qwant est le moteur de recherche qui veut concurrencer Google, sur la base du
-respect de la privacy. Springer est un des leurs investisseurs principaux à
-hauteur de plusieurs 100M€  
-  
--&gt; grosse culture de l'open source, pas mal de release de leurs algo en open et le project manager est l'ancien CTO de Firefox OS  
-  
--&gt; prise de contact après le concours Solve vendredi, rdv ce matin. Ils souhaitent travailler avec nous sur la partie IA/data : calcul, stockage, algo et proposent un partenariat  
-  
--&gt; on vient de lancer un doodle pour rencontre technique avec Djalel et leur CDO/IA  
-  
-vous tiens au courant de la suite
+rdv ce matin avec le CEO de Qwant, et son project manager wiz ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe . Pour mémoire Qwant est le moteur de recherche qui veut concurrencer Google, sur la base du respect de la privacy. Springer est un des leurs investisseurs principaux à hauteur de plusieurs 100M€   -&gt; grosse culture de l'open source, pas mal de release de leurs algo en open et le project manager est l'ancien CTO de Firefox OS   -&gt; prise de contact après le concours Solve vendredi, rdv ce matin. Ils souhaitent travailler avec nous sur la partie IA/data : calcul, stockage, algo et proposent un partenariat   -&gt; on vient de lancer un doodle pour rencontre technique avec Hyacinthe et leur CDO/IA   vous tiens au courant de la suite
 
-### **Hyacinthe Lacenne** - Sep 12, 2016 at 2:12 PM
+### **Hyacinthe** - 2016-09-12 at 2:12 PM
 
-Cédric Villani organise un colloque "Mathématiques, oxygène du numérique"
-autour des mathématiques et du monde de demain et prévoit une série de démo
-tech. Et on nous propose d'en faire une ;)  
-  
-ca se passe le 20 et 21 octobre !  
-  
-vous tiens au courant des détails pratiques
+Cédric Villani organise un colloque "Mathématiques, oxygène du numérique" autour des mathématiques et du monde de demain et prévoit une série de démo tech. Et on nous propose d'en faire une ;)   ca se passe le 20 et 21 octobre !   vous tiens au courant des détails pratiques
 
-### **Hyacinthe Lacenne** - Sep 14, 2016 at 3:50 PM
+### **Hyacinthe** - 2016-09-14 at 3:50 PM
 
-sauf imprévu, d'ici la semaine prochaine, on devrait avoir pour 5000$ *2 de
-crédit de cluster + puissance de computing d'Amazon Web Service, et ce sur 2
-ans ;)  
-  
-Djalel est en train de mettre ne place un format de meet-up IA, alternant une
-fois sur deux revue du lecture et séance de code.  
-  
-On va commencer à se faire les dents sur le dataset Kaggle, et je vais lancer
-le pipe data #APHP.  
-  
-Dans le même fil, on commence à travailler ce jour à l'application au grant de
-l'Axa Research Fund, l'occasion d'aller chercher un budget et de constituer un
-éco-système d'académiques partenaires sur le sujet
+sauf imprévu, d'ici la semaine prochaine, on devrait avoir pour 5000$ *2 de crédit de cluster + puissance de computing d'Amazon Web Service, et ce sur 2 ans ;)   Hyacinthe est en train de mettre ne place un format de meet-up IA, alternant une fois sur deux revue du lecture et séance de code.   On va commencer à se faire les dents sur le dataset Kaggle, et je vais lancer le pipe data #APHP.   Dans le même fil, on commence à travailler ce jour à l'application au grant de l'Axa Research Fund, l'occasion d'aller chercher un budget et de constituer un éco-système d'académiques partenaires sur le sujet
 
-### **Hyacinthe Lacenne** - Sep 14, 2016 at 4:54 PM
+### **Hyacinthe** - 2016-09-14 at 4:54 PM
 
 Sweet!  C'est un geste du mec qu'on avait vu un midi? Trop cool :)
 
-### **Hyacinthe Lacenne** - Sep 16, 2016 at 11:14 AM
+### **Hyacinthe** - 2016-09-16 at 11:14 AM
 
 exactement !
 
-### **Hyacinthe Lacenne** - Sep 22, 2016 at 10:21 AM
+### **Hyacinthe** - 2016-09-22 at 10:21 AM
 
-rdv hier avec Qwant où il était question de la marche à suivre :  
-\- définition du contour du projet  
-\- quels apports respectifs  
-  
-présents : le CTO data &amp; le CPO et Djalel  
-  
-\- il s'agirait d'un POC où l'on moulinerait des datasets existants, notamment
-à des fins d'amélioration de  la qualité de l'image.  
-La technique de traitement data est deep learning orientée, soit des réseaux
-de neurones  
-\- la contribution de Qwant : ressources de calculs. Djalel juge qu'à ce jour
-nous n'avons pas ces besoins, que l'on dispose déjà des accès à des ressrouces
-de computing avec ses anciens labos et qu'en revanche ils ne disposent pas de
-clusters GPU  
-Nous n'avons pas précisément évoqué la question de la mobilisation de la RH
-mais ce devrait être logiquement le cas.  
-\- sur la base d'un POC concluant, il a été évoqué l'idée de travailler avec
-l'AP sur des gros datasets  
-  
-au total ils sont chauds pour un POC , leur apport serait pertinent, dans un
-premier temps, qu'à la hauteur de la RH qu'ils mettraient en face.  
-  
-A nous de voir, en cours de réflexion avec Djalel
+rdv hier avec Qwant où il était question de la marche à suivre :  \- définition du contour du projet  \- quels apports respectifs   présents : le CTO data &amp; le CPO et Hyacinthe   \- il s'agirait d'un POC où l'on moulinerait des datasets existants, notamment à des fins d'amélioration de  la qualité de l'image.  La technique de traitement data est deep learning orientée, soit des réseaux de neurones  \- la contribution de Qwant : ressources de calculs. Hyacinthe juge qu'à ce jour nous n'avons pas ces besoins, que l'on dispose déjà des accès à des ressrouces de computing avec ses anciens labos et qu'en revanche ils ne disposent pas de clusters GPU  Nous n'avons pas précisément évoqué la question de la mobilisation de la RH mais ce devrait être logiquement le cas.  \- sur la base d'un POC concluant, il a été évoqué l'idée de travailler avec l'AP sur des gros datasets   au total ils sont chauds pour un POC , leur apport serait pertinent, dans un premier temps, qu'à la hauteur de la RH qu'ils mettraient en face.   A nous de voir, en cours de réflexion avec Hyacinthe
 
-### **Hyacinthe Lacenne** - Sep 22, 2016 at 10:23 AM
+### **Hyacinthe** - 2016-09-22 at 10:23 AM
 
-rdv le 03 octobre avec le resp Big Data lake de l'APHP et le DSI imagerie  
-  
-objet : discuter de l'accès aux data d'imageries couplées aux données
-cliniques à des fins d'IA  
-  
-euh il me semble très chauds ;)
+rdv le 03 octobre avec le resp Big Data lake de l'APHP et le DSI imagerie   objet : discuter de l'accès aux data d'imageries couplées aux données cliniques à des fins d'IA   euh il me semble très chauds ;)
 
-### **Hyacinthe Lacenne** - Sep 22, 2016 at 10:26 AM
+### **Hyacinthe** - 2016-09-22 at 10:26 AM
 
-rdv ce matin avec le directeur de la fondation Altran +  ![Hyacinthe, Danseur du
-ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe  
-  
-\- echOpen rencontre tous leurs critères  
-  
-\- proposition de RH sur leurs pôles compétences  
-électronique embarquée  
-soft et data analytics  
-certification  
-  
-les décisions d'accompagnement seront prises entre fin octobre et décembre et
-activation début 2017  
-  
-vous tiens au jus;)
+rdv ce matin avec le directeur de la fondation Altran + ![Hyacinthe, Danseur du ventre at echopen](./../../zz_assets/images/avatars/1248689.png) Hyacinthe   \- echOpen rencontre tous leurs critères   \- proposition de RH sur leurs pôles compétences  électronique embarquée  soft et data analytics  certification   les décisions d'accompagnement seront prises entre fin octobre et décembre et activation début 2017   vous tiens au jus;)
 
-### **Hyacinthe Lacenne** - Sep 30, 2016 at 4:54 PM
+### **Hyacinthe** - 2016-09-30 at 4:54 PM
 
-hello à tous,  
-  
-un coucou depuis le MIT où on a tout plein d'excellentes news qui ne
-pourraient pas tenir en 1 post ;)  
-  
-du coup, on debriefe tous ensemble lundi 03 à 19H00 !!  
-  
-#hihi
+hello à tous,   un coucou depuis le MIT où on a tout plein d'excellentes news qui ne pourraient pas tenir en 1 post ;)   du coup, on debriefe tous ensemble lundi 03 à 19H00 !!   #hihi
 
-### **Hyacinthe Lacenne** - Sep 30, 2016 at 4:56 PM
+### **Hyacinthe** - 2016-09-30 at 4:56 PM
 
-Sweet! Et n'hésitez pas à mettre une synthèse pour les pauvres hères en
-transit en indochine =)
+Sweet! Et n'hésitez pas à mettre une synthèse pour les pauvres hères en transit en indochine =)
 
-### **Hyacinthe Lacenne** - Nov 05, 2016 at 7:11 PM
+### **Hyacinthe** - 2016-11-05 at 7:11 PM
 
-hi les amis,  
-  
-je vais faire un peu de redite du slack pour les news du marathon trip à
-Lausanne, Génève et Marrakech. Btw, on a réfléchi avec Hyacinthe une solution de
-meilleur usage des espaces slack/basecamp/etc.  
-  
-\- en Suisse  
-  
-prez d'echOpen à Hackquarium , accueilli dans un large enthousiasme avec  
-  
-1) 1 dev FPGA/DSP high level qui va nous aider en review et nous mettre ne
-relation avec une école qui forme des ingé spécialisés dans ces domaines  
-  
-2) 1 doctorant de l'EPFL qui fait sa thèse sur des MEMS et qui propose de
-trouver des points d'articulation avec nous . J'ai un call avec lui demain  
-  
-pour l'essentiel car il y a plein d'autres choses  
-  
-\- @Marackech  
-  
-1) d’une part la over-wonder team de phaino, une dev agency (soft,
-archi/infra, web, app),  a produit en 48 une app hybride de l’UI, que l’on va
-porter en natif dans les jours qui viennent.  
-  
-btw :  ![Hyacinthe VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  phaino a groupe
-de R&amp;D sur les enjeux native vs. hybride vs webapp. confirmation de
-l'intérêt du natif, notamment pour les perf. de l'UI/gestures. Ce à quoi
-j'ajoute les possibilités d'interfaçages avec les langues de bas niveau +
-usage de la GPU --&gt; à ce sujet, g dev une mini-app avec opengl, c top  
-  
-2) 1 des pointures mondiales de JAVA et son gang, à donf d’Open Source - qu’on
-s’entende,  il code JAVA directly et était le meilleur contributeur du monde
-en 2012 - propose un hackathon android/echOpen à Casablanca en décembre
-/janvier  
-  
-3) le ministre de la Santé du Togo est très intéressé par echOpen, un
-entretien est en train de se monter, je vous tient au courant  
-  
-4) Des chercheurs veulent déployer un lab echOpen au Bénin, rdv mardi  
-  
-\+ 1 grosse nouvelle dans les prochaines heures/jours  
-  
-oilà;)
+hi les amis,   je vais faire un peu de redite du slack pour les news du marathon trip à Lausanne, Génève et Marrakech. Btw, on a réfléchi avec Hyacinthe une solution de meilleur usage des espaces slack/basecamp/etc.   \- en Suisse   prez d'echOpen à Hackquarium , accueilli dans un large enthousiasme avec   1) 1 dev FPGA/DSP high level qui va nous aider en review et nous mettre ne relation avec une école qui forme des ingé spécialisés dans ces domaines   2) 1 doctorant de l'EPFL qui fait sa thèse sur des MEMS et qui propose de trouver des points d'articulation avec nous . J'ai un call avec lui demain   pour l'essentiel car il y a plein d'autres choses   \- @Marackech   1) d’une part la over-wonder team de phaino, une dev agency (soft, archi/infra, web, app),  a produit en 48 une app hybride de l’UI, que l’on va porter en natif dans les jours qui viennent.   btw : ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe phaino a groupe de R&amp;D sur les enjeux native vs. hybride vs webapp. confirmation de l'intérêt du natif, notamment pour les perf. de l'UI/gestures. Ce à quoi j'ajoute les possibilités d'interfaçages avec les langues de bas niveau + usage de la GPU --&gt; à ce sujet, g dev une mini-app avec opengl, c top   2) 1 des pointures mondiales de JAVA et son gang, à donf d’Open Source - qu’on s’entende,  il code JAVA directly et était le meilleur contributeur du monde en 2012 - propose un hackathon android/echOpen à Casablanca en décembre /janvier   3) le ministre de la Santé du Togo est très intéressé par echOpen, un entretien est en train de se monter, je vous tient au courant   4) Des chercheurs veulent déployer un lab echOpen au Bénin, rdv mardi   \+ 1 grosse nouvelle dans les prochaines heures/jours   oilà;)
 
-### **Hyacinthe Lacenne** - Nov 10, 2016 at 7:43 PM
+### **Hyacinthe** - 2016-11-10 at 7:43 PM
 
-hello hello,  
-  
-**Rdv cette semaine avec Max Ageh**, un enseignant-chercheur en électronique, traitement du signal  
+hello hello,   **Rdv cette semaine avec Max Ageh**, un enseignant-chercheur en électronique, traitement du signal  
 
-  
+ 
 
-\- il souhaite développer une instance echOpen au Bénin, selon une modalité
-particulière : il s’agirait d’intégrer echOpen à une chaire sciences et
-informatique, en cours de constitution. La chaire sera définie en février
-prochain.
+\- il souhaite développer une instance echOpen au Bénin, selon une modalité particulière : il s’agirait d’intégrer echOpen à une chaire sciences et informatique, en cours de constitution. La chaire sera définie en février prochain.
 
-  
+ 
 
-\- il souhaite brancher ses étudiants de son école sur echOpen à compter de
-leur prochain projet d’études, soit mai prochain
+\- il souhaite brancher ses étudiants de son école sur echOpen à compter de leur prochain projet d’études, soit mai prochain
 
-  
+ 
 
 **Rdv avec l’équipe de l'ESIEE** 
 
-  
+ 
 
-5 enseignants-chercheurs couvrant l’ensemble des domaines de travail d’echOpen
-étaient présents : hard, soft, data, transducteur, traitement du signal
+5 enseignants-chercheurs couvrant l’ensemble des domaines de travail d’echOpen étaient présents : hard, soft, data, transducteur, traitement du signal
 
-  
+ 
 
 \- enthousiasme over the roof top
 
-  
+ 
 
-\- propose de constituer autant de groupes d’étudiants qu’il y a de sujets
-dans echOpen. Ca devrait être mis en place à compter de mai prochain.
+\- propose de constituer autant de groupes d’étudiants qu’il y a de sujets dans echOpen. Ca devrait être mis en place à compter de mai prochain.
 
-  
+ 
 
-\- dans l’intervalle de mai, les chercheurs vont commencé à prendre en main la
-techno, ils pensent pouvoir nous accompagner d’ores et déjà sur la
-miniaturisation
+\- dans l’intervalle de mai, les chercheurs vont commencé à prendre en main la techno, ils pensent pouvoir nous accompagner d’ores et déjà sur la miniaturisation
 
-  
+ 
 
-\- doivent revenir vers nous pour nous proposer un plan de travail en commun  
-  
-oilà;)
+\- doivent revenir vers nous pour nous proposer un plan de travail en commun   oilà;)
 
