--- a/bc3-data/94270736.md
+++ b/bc3-data/94270736.md
@@ -1,32 +1,10 @@
-#  Congrès IEEE Septembre 2016
+# Congrès IEEE Septembre 2016  - 2016-03-29
 
-Hyacinthe posted this Mar 29, 2016 at 10:49 AM · 1 person applauded
+Bonjour à tous,   au mois de Septembre 2016 aura lieu le congrès d'acoustique IEEE à Tours. C'est  un des plus grand congrès internationaux d'acoustique. Il pourrait être intéressant de faire une présentation à ce congrès pour communiquer et potentiellement trouver des contributeurs.   Pour cela il faut envoyer un résumé pour une communication orale ou poster d'ici le 1 Avril (soit Vendredi). Vous trouverez un premier jet du résumé sur le drive :  <https://docs.google.com/document/d/15imsUDxaRaKlkY5SKQPMc9pjbVXLxiJ20UQWpYq3RPM/edit>  N'hésitez pas à faire des commentaires.
 
-Bonjour à tous,  
-  
-au mois de Septembre 2016 aura lieu le congrès d'acoustique IEEE à Tours.
-C'est  un des plus grand congrès internationaux d'acoustique. Il pourrait être
-intéressant de faire une présentation à ce congrès pour communiquer et
-potentiellement trouver des contributeurs.  
-  
-Pour cela il faut envoyer un résumé pour une communication orale ou poster
-d'ici le 1 Avril (soit Vendredi). Vous trouverez un premier jet du résumé sur
-le drive :  
-<https://docs.google.com/document/d/15imsUDxaRaKlkY5SKQPMc9pjbVXLxiJ20UQWpYq3RPM/edit>  
-N'hésitez pas à faire des commentaires.
+### **Hyacinthe** - 2016-03-29 at 10:56 AM
 
-### **Hyacinthe Lacenne** - Mar 29, 2016 at 10:56 AM
-
-Super idée - though a tad late .. J'ai commencé à corriger des typos =)  
-  
-Si tu es chaud pour un poster,  tu trouveras attaché le poster qu'avait fait
-Caskey pour inspiration. Dis moi, jte donne un coup de main pour boucler ca
-viteuf.  
-  
-PS: possible aussi de faire un comparatif, display physique, notre image,
-l'image d'un scanner pro ?  
-  
-(see <https://github.com/echopen/murgen-dev-kit/blob/master/Session_6.md> ? )  
+Super idée - though a tad late .. J'ai commencé à corriger des typos =)   Si tu es chaud pour un poster,  tu trouveras attaché le poster qu'avait fait Caskey pour inspiration. Dis moi, jte donne un coup de main pour boucler ca viteuf.   PS: possible aussi de faire un comparatif, display physique, notre image, l'image d'un scanner pro ?   (see <https://github.com/echopen/murgen-dev-kit/blob/master/Session_6.md> ? ) 
 
 [
 
@@ -34,17 +12,13 @@ l'image d'un scanner pro ?
 
 ](bc3-raw/files/3034651-kwan_bmes_2015_v1.pdf)
 
-[ Kwan_BMES_2015_v1.pdf  734 KB • Download
-](bc3-raw/files/3034651-kwan_bmes_2015_v1.pdf)
+[Kwan_BMES_2015_v1.pdf 734 KB • Download](bc3-raw/files/3034651-kwan_bmes_2015_v1.pdf)
 
-### **Hyacinthe,** - Mar 31, 2016 at 2:39 PM
+### **Hyacinthe** - 2016-03-31 at 2:39 PM
 
-On met qui pour les auteurs?  
-  
-Il y aura moi, Hyacinthe, Hyacinthe, Hyacinthe, Hyacinthe.  
-On rajoute Hyacinthe, Hyacinthe Loyaux et Gérard?
+On met qui pour les auteurs?   Il y aura moi, Hyacinthe, Hyacinthe, Hyacinthe, Hyacinthe.  On rajoute Hyacinthe, Hyacinthe Loyaux et Gérard?
 
-### **Hyacinthe KHOYRATEE,** - Mar 31, 2016 at 2:57 PM
+### **Hyacinthe** - 2016-03-31 at 2:57 PM
 
 C'est une bonne idée, effectivement ce serait bien de leur demander je penses!
 
