--- a/bc3-data/95543715.md
+++ b/bc3-data/95543715.md
@@ -1,129 +1,40 @@
-#  Ressources echOpen Diverses
+# Ressources echOpen Diverses  - 2016-03-30
 
-Hyacinthe posted this Mar 30, 2016 at 4:04 PM
+Hello à tous,   Un fil de discussion pour échanger sur les ressources echopen. En effet, nous produisons pas mal de choses en plus du hard &amp; du soft comme des photos, etc. Du coup, comment pourrions nous imaginer une solution pour partager ces éléments tous ensemble ?   Sachant que nous devons penser les licences liées à ces productions. Nous avons par exemple les dessins de Barbara en CC BY NC ND,  ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe qui nous a donné ses photos sous les mêmes conditions de CC BY NC ND et mes photos aussi, mais nous n'avons pas encore mentionné ces licences sur ces images.   Par ailleurs, nous allons recevoir les photos de Karine (commandées par Fabre) qui seront sous : _ ©Karine S. Bouvatier pour la Fondation Hyacinthe Fabre _sachant que l'association pourra les utiliser comme elle le souhaite pour ses activités. _  _  Alors quelles seraient vos idées pour que nous puissions partager tout ça en **prenant bien en compte ces différentes licences**.   Merci pour vos retours.
 
-Hello à tous,  
-  
-Un fil de discussion pour échanger sur les ressources echopen. En effet, nous
-produisons pas mal de choses en plus du hard &amp; du soft comme des photos,
-etc. Du coup, comment pourrions nous imaginer une solution pour partager ces
-éléments tous ensemble ?  
-  
-Sachant que nous devons penser les licences liées à ces productions. Nous
-avons par exemple les dessins de Barbara en CC BY NC ND,  ![Hyacinthe VINCENT,
-Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe
-qui nous a donné ses photos sous les mêmes conditions de CC BY NC ND et mes
-photos aussi, mais nous n'avons pas encore mentionné ces licences sur ces
-images.  
-  
-Par ailleurs, nous allons recevoir les photos de Karine (commandées par Fabre)
-qui seront sous : _ ©Karine S. Bouvatier pour la Fondation Hyacinthe Fabre
-_sachant que l'association pourra les utiliser comme elle le souhaite pour ses
-activités. _  
-_  
-Alors quelles seraient vos idées pour que nous puissions partager tout ça en
-**prenant bien en compte ces différentes licences**.  
-  
-Merci pour vos retours.
+### **Hyacinthe** - 2016-05-23 at 12:29 PM
 
-### **Hyacinthe Lacenne** - May 23, 2016 at 12:29 PM
+que pensez-vous d'installer ceci sur notre home ? pour faciliter l'intégration à slack et router directement depuis notre page echopen.org   <https://github.com/rauchg/slackin>
 
-que pensez-vous d'installer ceci sur notre home ? pour faciliter l'intégration
-à slack et router directement depuis notre page echopen.org  
-  
-<https://github.com/rauchg/slackin>
-
-### **Hyacinthe VINCENT,** - May 24, 2016 at 11:15 AM
+### **Hyacinthe** - 2016-05-24 at 11:15 AM
 
 One Git repos to rule them all !!!
 
-### **Hyacinthe Lacenne** - May 24, 2016 at 9:53 PM
+### **Hyacinthe** - 2016-05-24 at 9:53 PM
 
-![Hyacinthe VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  tu veux dire
-que tout est sur git ? si oui, que fait-on des échanges de type slack ?
+![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe tu veux dire que tout est sur git ? si oui, que fait-on des échanges de type slack ?
 
-### **Hyacinthe Lacenne** - May 25, 2016 at 9:57 AM
+### **Hyacinthe** - 2016-05-25 at 9:57 AM
 
-slackin installé accessible à <http://echopen.org:3000/>  
-  
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  crée
-un sous-domaine slack.echopen.org pour lading page + badge sur la home
-d'échopen
+slackin installé accessible à <http://echopen.org:3000/>   ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe crée un sous-domaine slack.echopen.org pour lading page + badge sur la home d'échopen
 
-### **Hyacinthe VINCENT,** - May 25, 2016 at 1:41 PM
+### **Hyacinthe** - 2016-05-25 at 1:41 PM
 
-"_Hyacinthe tu veux dire que tout est sur git ?_ ". Moi j'aurais tendance au
-moins à stocker la connaissance dans un dépot (file système, Git...) et à la
-publier sur un site Web généré automatiquement.  
-Je n'aime pas bien mélanger création/stockage/publication  d'information dans
-un même outil rudimentaire comme le wiki (ex: combien de temps pour migrer
-d'un serveur à un autre ? ;-) ). Mais c'est un avis assez personnel et très
-orienté développeur de SI.  
-"Slack" ? Je ne savais pas qu'il y avait de la connaissance dedans... Si il
-s'agit des échanges entre qq personnes, c'est pas très digeste comme info. Il
-faut penser un minimum à nos lecteurs. Pour moi Slack n'a d'interêt que pour
-les personnes qui ont participé à la conversation. Mais c'est vrai que je
-l'utilise peu et je ne sais pas bien ce qu'il y a dedans. Et il est légitime
-de vouloir archiver ces fils de discussion (de là à les publier ...).  
-Par contre, quand on dépose un ensemble d'infos dans Git et que l'on fait un
-commit, avec un commentaire, on s'engage sur un contenu
-cohérent,daté,signé,sans défaut connu... et destiné à être lu (ou compilé) par
-tous ceux qui ont accès au dépot.  
-  
-Pour revenir au sujet initial des photos, au fil des années (dizaines...) je
-suis toujours revenu à un stockage en arborescence chronologique de fichiers
-jpg (raw) avec qq tags directement dans les noms. C'est la seule structure qui
-resiste à tout (backups, plateformes, outils, chgt de version, de format...)
-et j'ai un petit outil qui en copie certaines vers un site de publication.
-KISS !
+"_Hyacinthe tu veux dire que tout est sur git ?_ ". Moi j'aurais tendance au moins à stocker la connaissance dans un dépot (file système, Git...) et à la publier sur un site Web généré automatiquement.  Je n'aime pas bien mélanger création/stockage/publication  d'information dans un même outil rudimentaire comme le wiki (ex: combien de temps pour migrer d'un serveur à un autre ? ;-) ). Mais c'est un avis assez personnel et très orienté développeur de SI.  "Slack" ? Je ne savais pas qu'il y avait de la connaissance dedans... Si il s'agit des échanges entre qq personnes, c'est pas très digeste comme info. Il faut penser un minimum à nos lecteurs. Pour moi Slack n'a d'interêt que pour les personnes qui ont participé à la conversation. Mais c'est vrai que je l'utilise peu et je ne sais pas bien ce qu'il y a dedans. Et il est légitime de vouloir archiver ces fils de discussion (de là à les publier ...).  Par contre, quand on dépose un ensemble d'infos dans Git et que l'on fait un commit, avec un commentaire, on s'engage sur un contenu cohérent,daté,signé,sans défaut connu... et destiné à être lu (ou compilé) par tous ceux qui ont accès au dépot.   Pour revenir au sujet initial des photos, au fil des années (dizaines...) je suis toujours revenu à un stockage en arborescence chronologique de fichiers jpg (raw) avec qq tags directement dans les noms. C'est la seule structure qui resiste à tout (backups, plateformes, outils, chgt de version, de format...) et j'ai un petit outil qui en copie certaines vers un site de publication. KISS !
 
-### **Hyacinthe Lacenne** - May 25, 2016 at 7:42 PM
+### **Hyacinthe** - 2016-05-25 at 7:42 PM
 
-merci pour ces informations circonstanciés. côté slack, on peut y inclure des
-échanges bcp plus informelles, il ne s'agit pas vraiment d'une base de
-connaissance mais d'une modalité d'inclusion de notre communauté au sens très
-lâche, du community management inclusif en somme. Pour ma part, je ne suis pas
-pratiquant de slack mais  ![Hyacinthe,
-echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe  et  ![Hyacinthe
-Lacenne, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  sont
-utilisateurs et je laisse la parole à leur point de vue plus précis
+merci pour ces informations circonstanciés. côté slack, on peut y inclure des échanges bcp plus informelles, il ne s'agit pas vraiment d'une base de connaissance mais d'une modalité d'inclusion de notre communauté au sens très lâche, du community management inclusif en somme. Pour ma part, je ne suis pas pratiquant de slack mais ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe et ![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe  sont utilisateurs et je laisse la parole à leur point de vue plus précis
 
-### **Hyacinthe** - May 25, 2016 at 7:49 PM
+### **Hyacinthe** - 2016-05-25 at 7:49 PM
 
-Slack est un bon moyen pour discuter lorsque les gens ne sont pas ensemble
-dans la même pièce et pour éviter les boucles e-mails infinies.  
-  
-Mais c'est aussi un bon moyen pour accueillir les contributeurs et répondre à
-leur questions. Beaucoup l'utilisent comme "service client". En revanche c'est
-certain que ce n'est pas un lieu de production de connaissance à proprement
-parlé mais plutôt un lieu d'échange. Si des connaissances apparaissent il est
-important d'en faire la synthèse, mais cela représente un gros travail et
-devrait plutôt être sur un Q&amp;A. Tous ces outils sont complémentaires les
-uns des autres, et permettent à des profils très différents de se rencontrer
-et d'échanger.  
-  
-Pour ma part, je pense que slack (ou assimilé) est à conserver et à dynamiser
-pour être le pendant en ligne du lieu physique d'Echopen.  
-  
-Voilà pour un premier retour ;)
+Slack est un bon moyen pour discuter lorsque les gens ne sont pas ensemble dans la même pièce et pour éviter les boucles e-mails infinies.   Mais c'est aussi un bon moyen pour accueillir les contributeurs et répondre à leur questions. Beaucoup l'utilisent comme "service client". En revanche c'est certain que ce n'est pas un lieu de production de connaissance à proprement parlé mais plutôt un lieu d'échange. Si des connaissances apparaissent il est important d'en faire la synthèse, mais cela représente un gros travail et devrait plutôt être sur un Q&amp;A. Tous ces outils sont complémentaires les uns des autres, et permettent à des profils très différents de se rencontrer et d'échanger.   Pour ma part, je pense que slack (ou assimilé) est à conserver et à dynamiser pour être le pendant en ligne du lieu physique d'Echopen.   Voilà pour un premier retour ;)
 
-### **Hyacinthe Lacenne** - May 25, 2016 at 10:08 PM
+### **Hyacinthe** - 2016-05-25 at 10:08 PM
 
-Yop  
-Pour faire court, si tout le monde ne s'en sert pas (comme toi hyacinthe), ça perd
-de sa puissance. A voir, puisque basecamp à un aussi un systeme de chat.  
-Ensuite, en échanges bilatéraux, y'a le mail.  
-Enfin, le fait d'avoir de la connaissance dispersée, des outils épars implique
-comme vous le dites de faire des synthèses... Donc autant éviter non?  
-Perso, vu l'utilisation qu'on a de Slack, la question se poserait de le
-garder: autant onboarder sur un outil plus actif.  
-A noter, Slack est utilisé pour onboarder, et soit ce sont des botsqui font
-l'accueil, soit des participants actifs. Vu qu'on a aucun des deux...On
-pourrait safely laisser tomber Slack (I guess).  
-My two cents ;)
+Yop  Pour faire court, si tout le monde ne s'en sert pas (comme toi Hyacinthe), ça perd de sa puissance. A voir, puisque basecamp à un aussi un systeme de chat.  Ensuite, en échanges bilatéraux, y'a le mail.  Enfin, le fait d'avoir de la connaissance dispersée, des outils épars implique comme vous le dites de faire des synthèses... Donc autant éviter non?  Perso, vu l'utilisation qu'on a de Slack, la question se poserait de le garder: autant onboarder sur un outil plus actif.  A noter, Slack est utilisé pour onboarder, et soit ce sont des botsqui font l'accueil, soit des participants actifs. Vu qu'on a aucun des deux...On pourrait safely laisser tomber Slack (I guess).  My two cents ;)
 
-### **Hyacinthe Lacenne** - May 26, 2016 at 8:14 AM
+### **Hyacinthe** - 2016-05-26 at 8:14 AM
 
 ok donc on met cela à l'odj de lundi et on tranche alors ;)
 
