--- a/bc3-data/99813119.md
+++ b/bc3-data/99813119.md
@@ -1,147 +1,70 @@
-#  Ressources: matériaux et acoustique
+# Ressources: matériaux et acoustique  - 2016-04-05
 
-Hyacinthe Lacenne posted this Apr 05, 2016 at 4:39 PM · 1 person applauded
+Un petit thread sur les questions de matériaux:  \- <http://www.signal-processing.com/us_data.html> -&gt;  Oil SAE 20 semble pas mal - ou l'huile de mais  \- <http://www.signal-processing.com/us_data_p.html> &gt; Ethyl vinyl acetate pour l'impédance acoustique  Ce dernier a l'air d'être le matériau de semelles des tongs... a voir ;)   ps: du fantome à base d'huile de ricin : <http://www.orion- france.com/radiodiagnostic/pdf/orion_fantome_fil_1860.pdf>
 
-Un petit thread sur les questions de matériaux:  
-\- <http://www.signal-processing.com/us_data.html> -&gt;  Oil SAE 20 semble
-pas mal - ou l'huile de mais  
-\- <http://www.signal-processing.com/us_data_p.html> &gt; Ethyl vinyl acetate
-pour l'impédance acoustique  
-Ce dernier a l'air d'être le matériau de semelles des tongs... a voir ;)  
-  
-ps: du fantome à base d'huile de ricin : <http://www.orion-
-france.com/radiodiagnostic/pdf/orion_fantome_fil_1860.pdf>
+### **Hyacinthe** - 2016-04-27 at 9:21 PM
 
-### **Hyacinthe Lacenne** - Apr 27, 2016 at 9:21 PM
+![Hyacinthe, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe rigolo ;)   <http://www.developpez.com/actu/98164/Un-ingenieur-propose-un-clone-d-Arduino- de-la-taille-d-une-pile-AA-le-dispositif-tourne-avec-un-controleur-ATmega328P- et-32-Ko-de-memoire-flash/>
 
-![Hyacinthe Lacenne, echopen](./../../zz_assets/images/avatars/2157822.png) Hyacinthe
-![Hyacinthe VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  rigolo ;)  
-  
-<http://www.developpez.com/actu/98164/Un-ingenieur-propose-un-clone-d-Arduino-
-de-la-taille-d-une-pile-AA-le-dispositif-tourne-avec-un-controleur-ATmega328P-
-et-32-Ko-de-memoire-flash/>
-
-### **Hyacinthe Lacenne** - May 17, 2016 at 9:14 AM
+### **Hyacinthe** - 2016-05-17 at 9:14 AM
 
 Pas le bon thread, matériaux c'est pour les matériaux ;)
 
-### **Hyacinthe Lacenne** - May 17, 2016 at 1:38 PM
+### **Hyacinthe** - 2016-05-17 at 1:38 PM
 
 ok je me barre de là ;)
 
-### **Hyacinthe Lacenne** - Jun 07, 2016 at 2:53 PM
+### **Hyacinthe** - 2016-06-07 at 2:53 PM
 
-Parce que c'est du matériau -- mais aussi du gel, je voulais partager ce lien
-assez intéressant (sur la démarche comme sur les résultats) :  
-  
-"This paper describes design of a low cost, ultrasound gel from local products
-applying aspects of Human Centered Design methodology. A multidisciplinary
-team worked with clinicians who use ultrasound where commercial gel is cost
-prohibitive and scarce. The team followed the format outlined in the Ideo Took
-Kit. Research began by defining the challenge "how to create locally available
-alternative ultrasound gel for a low-resourced environment? The "End-Users,"
-were identified as clinicians who use ultrasound in Democratic Republic of the
-Congo and Ethiopia. An expert group was identified and queried for possible
-alternatives to commercial gel."  
-  
-#BOP #Jugaad #JusteCool  
-  
-Source:
-<http://journals.plos.org/plosone/article/asset?id=10.1371%2Fjournal.pone.0134332.PDF>
+Parce que c'est du matériau -- mais aussi du gel, je voulais partager ce lien assez intéressant (sur la démarche comme sur les résultats) :   "This paper describes design of a low cost, ultrasound gel from local products applying aspects of Human Centered Design methodology. A multidisciplinary team worked with clinicians who use ultrasound where commercial gel is cost prohibitive and scarce. The team followed the format outlined in the Ideo Took Kit. Research began by defining the challenge "how to create locally available alternative ultrasound gel for a low-resourced environment? The "End-Users," were identified as clinicians who use ultrasound in Democratic Republic of the Congo and Ethiopia. An expert group was identified and queried for possible alternatives to commercial gel."   #BOP #Jugaad #JusteCool   Source: <http://journals.plos.org/plosone/article/asset?id=10.1371%2Fjournal.pone.0134332.PDF>
 
-### **Hyacinthe VINCENT,** - Jun 07, 2016 at 3:02 PM
+### **Hyacinthe** - 2016-06-07 at 3:02 PM
 
-Et en plus c'est comestible, ça doit être pour ça qu'ils rajoutent du sel,
-sinon c'est pas bon :-)
+Et en plus c'est comestible, ça doit être pour ça qu'ils rajoutent du sel, sinon c'est pas bon :-)
 
-### **Hyacinthe Lacenne** - Jun 07, 2016 at 6:07 PM
+### **Hyacinthe** - 2016-06-07 at 6:07 PM
 
-En plus facile de par chez nous, y'a aussi cette recette, trouvée online:  
-  
-1\. Mix 2 teaspoons of guar gum with 1-2 teaspoons of salt. (The amount of
-salt isn't vitally important since it is just added to keep the guar gum from
-clumping. Using slightly less than a teaspoon of salt per 2 cups makes a gel
-with which is isotonic, which would be ideal for use near eyes or other mucus
-membranes or on open wounds).  
-  
-2\. Boil two cups of water.  
-  
-3\. Slowly sprinkle the guar gum/salt mixture into the boiling water while
-stirring vigorously with a fork or whisk.  
-  
-4\. Boil for about 1-2 minutes until thick and well mixed.  
-  
-5\. Cool before using. Save lives.  
-  
-La vidéo : <https://www.youtube.com/watch?v=FnjCqgvwj9I>
+En plus facile de par chez nous, y'a aussi cette recette, trouvée online:   1\. Mix 2 teaspoons of guar gum with 1-2 teaspoons of salt. (The amount of salt isn't vitally important since it is just added to keep the guar gum from clumping. Using slightly less than a teaspoon of salt per 2 cups makes a gel with which is isotonic, which would be ideal for use near eyes or other mucus membranes or on open wounds).   2\. Boil two cups of water.   3\. Slowly sprinkle the guar gum/salt mixture into the boiling water while stirring vigorously with a fork or whisk.   4\. Boil for about 1-2 minutes until thick and well mixed.   5\. Cool before using. Save lives.   La vidéo : <https://www.youtube.com/watch?v=FnjCqgvwj9I>
 
-### **Hyacinthe Lacenne** - Jun 07, 2016 at 10:12 PM
+### **Hyacinthe** - 2016-06-07 at 10:12 PM
 
 mais c trop bien ;)
 
-### **Hyacinthe Lacenne** - Jun 08, 2016 at 9:11 AM
+### **Hyacinthe** - 2016-06-08 at 9:11 AM
 
-Dans la même lignée: <http://www.ncbi.nlm.nih.gov/pubmed/24238590>  
-  
-In this study, a gel made from cornstarch and water was an acceptable coupling
-medium and provided equally adequate images as compared with commercial
-ultrasound gel. This inexpensive gel made from ubiquitous materials can be an
-acceptable alternative to commercial gel in low-resource settings.
+Dans la même lignée: <http://www.ncbi.nlm.nih.gov/pubmed/24238590>   In this study, a gel made from cornstarch and water was an acceptable coupling medium and provided equally adequate images as compared with commercial ultrasound gel. This inexpensive gel made from ubiquitous materials can be an acceptable alternative to commercial gel in low-resource settings.
 
-### **Hyacinthe Lacenne** - Jun 08, 2016 at 3:47 PM
+### **Hyacinthe** - 2016-06-08 at 3:47 PM
 
-Hum ca serait bien que ce plastique marche :)  
-<https://www.rpelectronics.com/af-2504-polymorph-low-temperature-
-thermoplastic-beads-100g.html>
+Hum ca serait bien que ce plastique marche :)  <https://www.rpelectronics.com/af-2504-polymorph-low-temperature- thermoplastic-beads-100g.html>
 
-### **Hyacinthe VINCENT,** - Jun 09, 2016 at 9:43 AM
+### **Hyacinthe** - 2016-06-09 at 9:43 AM
 
 Oui, ça j'en ai à la maison ;-) on essaiera. Encore qq idées à tester:
 
-  * le plastique en grain qui fond dans un bol (j'ai)
-  * l'ABS (j'ai)
-  * la résine EPOXY (j'ai)
-  * La pâte Fimo (j'ai)
-  * La pâte [Sugru](https://sugru.com/about/) (j'ai)
+ * le plastique en grain qui fond dans un bol (j'ai)  * l'ABS (j'ai)  * la résine EPOXY (j'ai)  * La pâte Fimo (j'ai)  * La pâte [Sugru](https://sugru.com/about/) (j'ai)
 
-### **Hyacinthe Lacenne** - Jun 09, 2016 at 9:50 AM
+### **Hyacinthe** - 2016-06-09 at 9:50 AM
 
 Excellent !!
 
-### **hyacinthe,** - Jun 13, 2016 at 5:49 PM
+### **Hyacinthe** - 2016-06-13 at 5:49 PM
 
-![Emilie Mayer, Community & knowledge  at
-echopen](./../../zz_assets/images/avatars/1269172.png) Emilie  --  lien pour
-le matos sur hackaday: <https://hackaday.io/project/11478-open-source-
-ultrasound-phantoms>
+![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  --  lien pour le matos sur hackaday: <https://hackaday.io/project/11478-open-source- ultrasound-phantoms>
 
-### **Hyacinthe VINCENT,** - Jun 17, 2016 at 12:18 PM
+### **Hyacinthe** - 2016-06-17 at 12:18 PM
 
-En retournant faire un tour sur
-<http://www.ondacorp.com/tecref_acoustictable.shtml> je suis tombé sur un des
-seuls matériaux solides qui a le même indice que l'eau : le pin !  
-Avouez que ce serait drôle de faire une sonde en bois :-)
+En retournant faire un tour sur <http://www.ondacorp.com/tecref_acoustictable.shtml> je suis tombé sur un des seuls matériaux solides qui a le même indice que l'eau : le pin !  Avouez que ce serait drôle de faire une sonde en bois :-)
 
-### **Hyacinthe Lacenne** - Jun 20, 2016 at 2:16 PM
+### **Hyacinthe** - 2016-06-20 at 2:16 PM
 
-J'ai emprunté la tete de sonde 10PV retapée ce samedi pour essayer de
-travailler dessus - en particulier sur le liquide dans la tete de sonde.  
-  
-D'après <http://www.signal-processing.com/us_data.html> \-- le meilleur
-candidat serait "Oil SAE 20", aka de l'huile de moteur =) donc facilement
-trouvable. Vous tiens au jus des avancées!
+J'ai emprunté la tete de sonde 10PV retapée ce samedi pour essayer de travailler dessus - en particulier sur le liquide dans la tete de sonde.   D'après <http://www.signal-processing.com/us_data.html> \-- le meilleur candidat serait "Oil SAE 20", aka de l'huile de moteur =) donc facilement trouvable. Vous tiens au jus des avancées!
 
-### **Hyacinthe VINCENT,** - Jun 21, 2016 at 8:29 AM
+### **Hyacinthe** - 2016-06-21 at 8:29 AM
 
-Mais bien visqueuse et crade ...  
-Huile de lin ?  
-Si une huile fine (huile de vaseline, l'huile de parafine, glycérine)...
-fonctionnait ce serait plus clean à manipuler (et biocompatible).
+Mais bien visqueuse et crade ...  Huile de lin ?  Si une huile fine (huile de vaseline, l'huile de parafine, glycérine)... fonctionnait ce serait plus clean à manipuler (et biocompatible).
 
-### **Hyacinthe Lacenne** - Jun 21, 2016 at 8:43 AM
+### **Hyacinthe** - 2016-06-21 at 8:43 AM
 
-True!  
-  
-Huile de lin alors !
+True!   Huile de lin alors !
 
