--- a/bc3-data/43627477.md
+++ b/bc3-data/43627477.md
@@ -1,53 +1,24 @@
-#  Newsletter Nouvelle Année Archived
+# Newsletter Nouvelle Année Archived  - 2016-01-13
 
-Emilie Mayer posted this Jan 13, 2016 at 7:14 PM · 1 person applauded
+Bonsoir!   En vue de préparer la newsletter de rentrée, n'hésitez pas à m'envoyer quelques lignes résumant l'essentiel des avancées de votre pole depuis CapTech! Idéalement, d'ici ce week-end.     Je pense en particulier aux:  *transducteur  *méca 3D  *CapDev  *Avancées Hyacinthe-Hyacinthe-Hyacinthe    Merci!
 
-Bonsoir!  
-  
-En vue de préparer la newsletter de rentrée, n'hésitez pas à m'envoyer
-quelques lignes résumant l'essentiel des avancées de votre pole depuis
-CapTech! Idéalement, d'ici ce week-end.  
-  
-  
-Je pense en particulier aux:  
-*transducteur  
-*méca 3D  
-*CapDev  
-*Avancées Hyacinthe-Hyacinthe-Hyacinthe   
-  
-Merci!
+### **Hyacinthe** - 2016-01-14 at 11:03 AM
 
-### **Hyacinthe** - Jan 14, 2016 at 11:03 AM
+Merci Hyacinthe, pour préciser:
 
-Merci Emilie, pour préciser:
+ * Transducteur =&gt; il faut faire un email a Hyacinthe et voir avec Hyacinthe qui dois y passer cet après-midi  * Méca 3D =&gt; Voir avec Hyacinthe   * CapDev =&gt; Hyacinthe  * Partie analogique =&gt; Hyacinthe, Hyacinthe et Hyacinthe
 
-  * Transducteur =&gt; il faut faire un email a Hyacinthe et voir avec Hyacinthe qui dois y passer cet après-midi
-  * Méca 3D =&gt; Voir avec Hyacinthe 
-  * CapDev =&gt; Hyacinthe
-  * Partie analogique =&gt; Hyacinthe, Hyacinthe et Hyacinthe
+  @+
 
-  
-@+
+### **Hyacinthe** - 2016-01-14 at 2:04 PM
 
-### **Hyacinthe LICCIONI,** - Jan 14, 2016 at 2:04 PM
+Il nous fallait réaliser le programme qui contrôle l'ensemble du système, à savoir:
 
-Il nous fallait réaliser le programme qui contrôle l'ensemble du système, à
-savoir:
+ * Commander l'émission de l'impulsion  * Commander le TGC dont le rôle est d'amplifier le signal  * Asservir le moteur en vitesse de rotation  * Calculer les positions du moteur  * Acquérir les données  * Transférer les données
 
-  * Commander l'émission de l'impulsion
-  * Commander le TGC dont le rôle est d'amplifier le signal
-  * Asservir le moteur en vitesse de rotation
-  * Calculer les positions du moteur
-  * Acquérir les données
-  * Transférer les données
+On a toute la partie contrôle du système. Il reste à réaliser l'asservissement du moteur ainsi que les calculs de ses positions, tester l'acquisition des données et le transfert USB, et tout sera fait pour la partie programme.
 
-On a toute la partie contrôle du système. Il reste à réaliser l'asservissement
-du moteur ainsi que les calculs de ses positions, tester l'acquisition des
-données et le transfert USB, et tout sera fait pour la partie programme.
+### **Hyacinthe** - 2016-01-14 at 4:30 PM
 
-### **Hyacinthe Lacenne** - Jan 14, 2016 at 4:30 PM
-
-![Emilie Mayer, Community & knowledge  at
-echopen](./../../zz_assets/images/avatars/1269172.png) Emilie  c dans ta boîte
-;)
+![Hyacinthe, Community & knowledge at echopen](./../../zz_assets/images/avatars/1269172.png) Hyacinthe  c dans ta boîte ;)
 
