--- a/bc3-data/45204452.md
+++ b/bc3-data/45204452.md
@@ -1,29 +1,12 @@
-#  un peu de veille
+# un peu de veille  - 2016-01-16
 
-Hyacinthe Lacenne posted this Jan 16, 2016 at 12:17 PM · 1 person applauded
+des sites qui vont intéresseront   le github du hardware : encore très confus mais intéressant  <https://www.makake.co>   de quoi se connecter ;)  <https://www.fablabs.io/projects>
 
-des sites qui vont intéresseront  
-  
-le github du hardware : encore très confus mais intéressant  
-<https://www.makake.co>  
-  
-de quoi se connecter ;)  
-<https://www.fablabs.io/projects>
+### **Hyacinthe** - 2016-05-24 at 7:45 AM
 
-### **Hyacinthe Lacenne** - May 24, 2016 at 7:45 AM
+un site que vous connaissez sans doute   <https://getchip.com/pages/chip>   la prez et la doc sont claires - ce serait pas mal qu'on se refasse 12c4 une session sur les pros &amp; cons d'un wiki à présent
 
-un site que vous connaissez sans doute  
-  
-<https://getchip.com/pages/chip>  
-  
-la prez et la doc sont claires - ce serait pas mal qu'on se refasse 12c4 une
-session sur les pros &amp; cons d'un wiki à présent
+### **Hyacinthe** - 2016-05-24 at 1:19 PM
 
-### **hyacinthe,** - May 24, 2016 at 1:19 PM
-
-Yup. Et qu'on definisse ce qu'on mets, et où, en fonction au passage de notre
-bande passante/de notre capacité (ou disponibilité) à utiliser les outils. un
-wiki de travail n'est pas un site de promo, ou un gît de contribution :)  
-Et de voir si on peut jouer avec un générateur de site statique (pas absurde)
-a la pages.github.io Itoo ?
+Yup. Et qu'on definisse ce qu'on mets, et où, en fonction au passage de notre bande passante/de notre capacité (ou disponibilité) à utiliser les outils. un wiki de travail n'est pas un site de promo, ou un gît de contribution :)  Et de voir si on peut jouer avec un générateur de site statique (pas absurde) a la pages.github.io Itoo ?
 
