--- a/bc3-data/45966820.md
+++ b/bc3-data/45966820.md
@@ -1,31 +1,12 @@
-#  cleaning tout repos
+# cleaning tout repos  - 2016-01-18
 
-Hyacinthe Lacenne posted this Jan 18, 2016 at 5:15 PM
+hello,   notre github mérite un coup de cleaning. J'ai supprimé le repo vide `soft`   que fait-on du repo `hard` &amp; such  ? je vais demander à Yannick pour ``image builder`   @++
 
-hello,  
-  
-notre github mérite un coup de cleaning. J'ai supprimé le repo vide `soft`  
-  
-que fait-on du repo `hard` &amp; such  ? je vais demander à Yannick pour
-``image builder`  
-  
-@++
+### **Hyacinthe** - 2016-01-18 at 5:24 PM
 
-### **hyacinthe,** - Jan 18, 2016 at 5:24 PM
+Le repo hard peut contenir les pièces de Hyacinthe i guess - et les plans électronique de la sonde ? lus tard les plans 3d de l'enveloppe et les schémas d'assemblage ?   A minima 2 sous repo: quelle profondeur d'arborescence pour chaque ?
 
-Le repo hard peut contenir les pièces de Hyacinthe i guess - et les plans
-électronique de la sonde ? lus tard les plans 3d de l'enveloppe et les schémas
-d'assemblage ?  
-  
-A minima 2 sous repo: quelle profondeur d'arborescence pour chaque ?
+### **Hyacinthe** - 2016-01-20 at 8:24 PM
 
-### **hyacinthe,** - Jan 20, 2016 at 8:24 PM
-
-A y est, ya les gerbers de la carte analogique pour BBB sur github, dans
-hardware / electronics  
-Documentation en route  
-Partageable avec les électroniciens intéressés  
-:)  
-  
-Bref, la source électronique du fork est disponible et utilisable!
+A y est, ya les gerbers de la carte analogique pour BBB sur github, dans hardware / electronics  Documentation en route  Partageable avec les électroniciens intéressés  :)   Bref, la source électronique du fork est disponible et utilisable!
 
