--- a/bc3-data/48576521.md
+++ b/bc3-data/48576521.md
@@ -1,39 +1,12 @@
-#  1 echtOpian nous rejoint pour qqs jours de dev ;) Archived
+# 1 echtOpian nous rejoint pour qqs jours de dev ;) Archived  - 2016-01-22
 
-Hyacinthe Lacenne posted this Jan 22, 2016 at 12:54 AM · 1 person applauded
+rigolo ;) je forwarde et je lui réponds   Bonjour,   Je viens de découvrir votre projet via Hacker News et je suis très  enthousiaste à l'idée de venir passer quelques jours pour travailler  sur echOpen avec vous!   Je suis développeur Python, ayant complété ma maîtrise en sciences  (plus précisément, en Biophotonique -- j'ai réalisé des algorithmes de  traitement d'images en Python et C à l'aide d'OpenCV et d'autres  librairies de traitement de signal). Je suis originaire de Montréal,  en visite présentement à Paris pour encore 10 jours environ. Ce n'est  pas beaucoup de temps, mais j'aimerais quand même voir si on pourrait  travailler sur certains des challenges softwares ensemble..!   Je vois sur votre site une invitation à passer vous voir à  l'Hôtel-Dieu -- à quels moments vos locaux sont-ils ouverts (jour,  soir)? Puis-je passer demain (vendredi 22 janvier)?   Merci à l'avance et au plaisir!   Greg Sadetsky  +33 7 55 99 61 98
 
-rigolo ;) je forwarde et je lui réponds  
-  
-Bonjour,  
-  
-Je viens de découvrir votre projet via Hacker News et je suis très  
-enthousiaste à l'idée de venir passer quelques jours pour travailler  
-sur echOpen avec vous!  
-  
-Je suis développeur Python, ayant complété ma maîtrise en sciences  
-(plus précisément, en Biophotonique -- j'ai réalisé des algorithmes de  
-traitement d'images en Python et C à l'aide d'OpenCV et d'autres  
-librairies de traitement de signal). Je suis originaire de Montréal,  
-en visite présentement à Paris pour encore 10 jours environ. Ce n'est  
-pas beaucoup de temps, mais j'aimerais quand même voir si on pourrait  
-travailler sur certains des challenges softwares ensemble..!  
-  
-Je vois sur votre site une invitation à passer vous voir à  
-l'Hôtel-Dieu -- à quels moments vos locaux sont-ils ouverts (jour,  
-soir)? Puis-je passer demain (vendredi 22 janvier)?  
-  
-Merci à l'avance et au plaisir!  
-  
-Greg Sadetsky  
-+33 7 55 99 61 98
+### **Hyacinthe** - 2016-01-22 at 6:19 AM
 
-### **hyacinthe,** - Jan 22, 2016 at 6:19 AM
+Btw, c'est hackernews qui a relayé l'information murgen (4300 visites et 6600 pageviews en moins de 24h :))
 
-Btw, c'est hackernews qui a relayé l'information murgen (4300 visites et 6600
-pageviews en moins de 24h :))
+### **Hyacinthe** - 2016-01-22 at 8:58 AM
 
-### **hyacinthe,** - Jan 22, 2016 at 8:58 AM
-
-Btw aussi jcrois que niveau github ça a ramené pas mal de monde (on a 25
-stargazers et 8 watchers sur hardware now)
+Btw aussi jcrois que niveau github ça a ramené pas mal de monde (on a 25 stargazers et 8 watchers sur hardware now)
 
