--- a/bc3-data/55007564.md
+++ b/bc3-data/55007564.md
@@ -1,8 +1,6 @@
-#  Lol Du Jour
+# Lol Du Jour  - 2016-02-01
 
-Hyacinthe posted this Feb 01, 2016 at 6:54 PM · 2 people applauded
-
-Voilà ;)  
+Voilà ;) 
 
 [
 
@@ -10,6 +8,5 @@ Voilà ;)
 
 ](bc3-raw/files/1232043-img_1824.JPG)
 
-[ IMG_1824.JPG  480 KB • Download
-](bc3-raw/files/1232043-img_1824.JPG)
+[IMG_1824.JPG 480 KB • Download](bc3-raw/files/1232043-img_1824.JPG)
 
