--- a/bc3-data/55467200.md
+++ b/bc3-data/55467200.md
@@ -1,72 +1,22 @@
-#  Maintenance Contenus Echopen
+# Maintenance Contenus Echopen  - 2016-02-02
 
-hyacinthe posted this Feb 02, 2016 at 10:06 AM · 1 person applauded
+**Récupération des données echopen sur plates-formes tierces   **  Petit recap sur l'accessibilité des données sur les services tiers - et la faisabilité d'en extraire les données pour les mettre sur une archive, un dump, explorable offline.   **Wiki **: Export possible : par exemple<https://www.mediawiki.org/wiki/Help:Export/fr>  **Basecamp**: <https://basecamp.com/help/2/guides/account/exports> - explorable en html  **Github**: assez evident de chopper une archive -- clone des différents repos  **Slack**:  \- Dumper Slack: <https://get.slack.help/hc/en-us/articles/201658943 -Exporting-your-team-s-Slack-history>  \- Formater Slack en explorable html :<https://levels.io/slack-export-to- html/>   **Twitter:** exportation facile :<https://support.twitter.com/articles/20170160?lang=en#>, explorable en html  **  Drive: **export... facile, oui ;)(j'en oublie?)  On peut aussi imaginer un script qui scrap l'ensemble des archives pour reformater l'ensemble sous la forme d'un "portail" au format web - doublé d'une archive fichiers qui reprennent l'ensemble des fichiers drive, wiki, basecamp -- ca donnerait un dump echopen à une date t. On peut se baser sur le fait que les dumps de services sont, aujourd'hui, déjà exploitables tels quels au format HTML.  Hyacinthe a commencé à mettre les dumps (dont slack) sur le drive dans "0.1 MAINTENANCE" - j'y ajoute dump wiki, basecamp, et twitter pour ceux qui ont envie d'explorer ca.  Ping  ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  @Hyacinthe
 
-**Récupération des données echopen sur plates-formes tierces   
-**  
-Petit recap sur l'accessibilité des données sur les services tiers - et la
-faisabilité d'en extraire les données pour les mettre sur une archive, un
-dump, explorable offline.  
-  
-**Wiki **: Export possible : par exemple<https://www.mediawiki.org/wiki/Help:Export/fr>  
-**Basecamp**: <https://basecamp.com/help/2/guides/account/exports> - explorable en html  
-**Github**: assez evident de chopper une archive -- clone des différents repos  
-**Slack**:  
-\- Dumper Slack: <https://get.slack.help/hc/en-us/articles/201658943
--Exporting-your-team-s-Slack-history>  
-\- Formater Slack en explorable html :<https://levels.io/slack-export-to-
-html/>  
-  
-**Twitter:** exportation facile :<https://support.twitter.com/articles/20170160?lang=en#>, explorable en html  
-**  
-Drive: **export... facile, oui ;)(j'en oublie?)  
-On peut aussi imaginer un script qui scrap l'ensemble des archives pour
-reformater l'ensemble sous la forme d'un "portail" au format web - doublé
-d'une archive fichiers qui reprennent l'ensemble des fichiers drive, wiki,
-basecamp -- ca donnerait un dump echopen à une date t. On peut se baser sur le
-fait que les dumps de services sont, aujourd'hui, déjà exploitables tels quels
-au format HTML.  
-Hyacinthe a commencé à mettre les dumps (dont slack) sur le drive dans "0.1
-MAINTENANCE" - j'y ajoute dump wiki, basecamp, et twitter pour ceux qui ont
-envie d'explorer ca.  
-Ping  ![Hyacinthe VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  @hyacinthe
+### **Hyacinthe** - 2016-02-03 at 8:20 AM
 
-### **Hyacinthe** - Feb 03, 2016 at 8:20 AM
+![Hyacinthe, hardware thinker at echopen](./../../zz_assets/images/avatars/782574.png) Hyacinthe  merci. Je pense qu'on a tout en sauvegarde de contenu...   Il reste peut-être le gitbook...  ![Hyacinthe, echopen](./../../zz_assets/images/avatars/782178.png) lacenne  ?   Ensuite, je pense qu'il va falloir penser à une sauvegarde automatique des éléments pour nous simplifier la vie et être certain que tout est bien safe ;)   ![Hyacinthe, Libre faiseur at echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  si tu as des idées de comment cela peut-être envisagé ? Je suis preneur.
 
-![hyacinthe, hardware thinker at
-echopen](./../../zz_assets/images/avatars/782574.png) hyacinthe  merci. Je pense
-qu'on a tout en sauvegarde de contenu...  
-  
-Il reste peut-être le gitbook...  ![Hyacinthe Lacenne,
-echopen](./../../zz_assets/images/avatars/782178.png) lacenne  ?  
-  
-Ensuite, je pense qu'il va falloir penser à une sauvegarde automatique des
-éléments pour nous simplifier la vie et être certain que tout est bien safe ;)  
-  
-![Hyacinthe VINCENT, Libre faiseur at
-echopen](./../../zz_assets/images/avatars/1275581.png) Hyacinthe  si tu as des
-idées de comment cela peut-être envisagé ? Je suis preneur.
-
-### **hyacinthe,** - Feb 03, 2016 at 8:21 AM
+### **Hyacinthe** - 2016-02-03 at 8:21 AM
 
 Backupé - et rendu accessible dans un framework uniformise, ce serait cool!
 
-### **Hyacinthe VINCENT,** - Feb 03, 2016 at 9:44 AM
+### **Hyacinthe** - 2016-02-03 at 9:44 AM
 
 Oui, je pense que dans l'ordre d'importance on a :
 
-  1. S'assurer qu'on peut tout récupérer en local
-  2. S'assurer qu'on peut tout relire/exploiter en local
-  3. Migrer éventuellement vers des formats uniformes
-  4. Avoir un outil de diffusion/navigation
+ 1. S'assurer qu'on peut tout récupérer en local  2. S'assurer qu'on peut tout relire/exploiter en local  3. Migrer éventuellement vers des formats uniformes  4. Avoir un outil de diffusion/navigation
 
-  
-On pourrait aussi avoir une approche inverse (un peu plus extremiste et
-centralisée) :
+  On pourrait aussi avoir une approche inverse (un peu plus extremiste et centralisée) :
 
-  1. On définit un dépot unique (stockage et versionnement)
-  2. On définit des formats uniformes et pérennes
-  3. On produit/ajoute tout directement dans le dépot, à coups de commit et de lots cohérents.
-  4. On utilise des outils de publication pour diffuser les différentes facettes du projet (administratif, comptable, technique, documentation, communication...)
+ 1. On définit un dépot unique (stockage et versionnement)  2. On définit des formats uniformes et pérennes  3. On produit/ajoute tout directement dans le dépot, à coups de commit et de lots cohérents.  4. On utilise des outils de publication pour diffuser les différentes facettes du projet (administratif, comptable, technique, documentation, communication...)
 
