--- a/bc3-data/59528170.md
+++ b/bc3-data/59528170.md
@@ -1,40 +1,14 @@
-#  Outils echOpen
+# Outils echOpen  - 2016-02-08
 
-Hyacinthe posted this Feb 08, 2016 at 4:50 PM
+Nouveau fil de discussion dédié aux outils communautaires ;)   Pour commencer, nous avons évoqué le besoin d'avoir un sign/up/in publique sur le slack et visiblement, nous ne sommes pas les premiers à en avoir besoin...   Après avoir passé une bonne partie du we dans la documentation de slack et un petit tour par les slack de projets Open Source, j'ai trouvé la solution qui me semble répondre à nos besoins ;)   La voici : <https://github.com/rauchg/slackin> // [Infos](http://rauchg.com/slackin/)   Mais cela demande un peu d'installation... Il faut mettre un petit module sur le server pour pouvoir faire tourner cette appli...   Dites moi ce que vous en pensez et qui serais prêts à aider dans son installation ?   Merci
 
-Nouveau fil de discussion dédié aux outils communautaires ;)  
-  
-Pour commencer, nous avons évoqué le besoin d'avoir un sign/up/in publique sur
-le slack et visiblement, nous ne sommes pas les premiers à en avoir besoin...  
-  
-Après avoir passé une bonne partie du we dans la documentation de slack et un
-petit tour par les slack de projets Open Source, j'ai trouvé la solution qui
-me semble répondre à nos besoins ;)  
-  
-La voici : <https://github.com/rauchg/slackin> //
-[Infos](http://rauchg.com/slackin/)  
-  
-Mais cela demande un peu d'installation... Il faut mettre un petit module sur
-le server pour pouvoir faire tourner cette appli...  
-  
-Dites moi ce que vous en pensez et qui serais prêts à aider dans son
-installation ?  
-  
-Merci
+### **Hyacinthe** - 2016-02-08 at 5:37 PM
 
-### **Hyacinthe Lacenne** - Feb 08, 2016 at 5:37 PM
+top - ca pourra être bien pour router des echtopians depuis le site vers le slack   @++
 
-top - ca pourra être bien pour router des echtopians depuis le site vers le
-slack  
-  
-@++
+### **Hyacinthe** - 2016-02-09 at 10:56 AM
 
-### **Emilie Mayer,** - Feb 09, 2016 at 10:56 AM
+Je profite de ce fil de discussion pour relancer la discussion sur le stack/FAQ, suite à la réunion de samedi:   
 
-Je profite de ce fil de discussion pour relancer la discussion sur le
-stack/FAQ, suite à la réunion de samedi:  
-  
-
-  * Quand le met-on en ligne? 
-  * Est-il en anglais?
+ * Quand le met-on en ligne?   * Est-il en anglais?
 
