--- a/bc3-data/59567910.md
+++ b/bc3-data/59567910.md
@@ -1,12 +1,4 @@
-#  un petit coucou Archived
+# un petit coucou Archived  - 2016-02-08
 
-Hyacinthe Lacenne posted this Feb 08, 2016 at 5:29 PM
-
-hello, j'ai eu un coup de fil de Hyacinthe qui vous passe tous un coucou et qui
-passera de temps à autre le lundi soir  
-  
-![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe   ce
-serait pas mal de l'ajouter à ce basecamp ?  
-  
-@++
+hello, j'ai eu un coup de fil de Hyacinthe qui vous passe tous un coucou et qui passera de temps à autre le lundi soir   ![Hyacinthe, echopen](./../../zz_assets/images/avatars/791737.png) Hyacinthe   ce serait pas mal de l'ajouter à ce basecamp ?   @++
 
